[po] update all po files Thanks to @teamblue-e2

--- a/po/ar.po
+++ b/po/ar.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2018-12-17 02:51+0200\n"
 "Last-Translator: Hazem <moustafagamal@hotmail.com>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -231,6 +231,9 @@ msgstr ""
 
 msgid "%H:%M"
 msgstr "%H:%M"
+
+msgid "%R"
+msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
 msgstr ""
@@ -515,6 +518,10 @@ msgstr[4] "التحديثات المتاحه"
 msgstr[5] "التحديثات المتاحه"
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -736,9 +743,6 @@ msgstr ""
 
 #, fuzzy
 msgid "?"
-msgstr "؟؟"
-
-msgid "??"
 msgstr "؟؟"
 
 #
@@ -1921,6 +1925,10 @@ msgstr "منع الحد من الضوضاء"
 msgid "Blue"
 msgstr ""
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "اختار مكان النسخه الإحتياطيه "
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2172,6 +2180,12 @@ msgstr ""
 #
 msgid "Cancel"
 msgstr "إلغاء"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2631,6 +2645,11 @@ msgstr "تباين"
 #
 msgid "Common Interface"
 msgstr "وحده النفاذ المشروط"
+
+#
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "إختيار EPG"
 
 msgid "Communication"
 msgstr "اتصال"
@@ -3565,6 +3584,10 @@ msgstr "أبـدأ التسجيل؟"
 msgid "Default+Picon"
 msgstr "الاعدادات الافتراضيه"
 
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "الافتراضى"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3657,6 +3680,12 @@ msgstr "حذف الملف"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "مسح مدخل قائمة العرض"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #, fuzzy
 msgid "Delete current line"
@@ -3896,6 +3925,10 @@ msgstr "إقاف الحدث الحالى فقط وليس الاحداث القا
 msgid "Disable move mode"
 msgstr "تعطيل وضع التحريك"
 
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "متغيرات النسق المتاحه"
+
 msgid "Disable timer"
 msgstr ""
 
@@ -3960,6 +3993,9 @@ msgstr ""
 #, fuzzy
 msgid "Display setup"
 msgstr "إعدادات العرض"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #
 #, fuzzy
@@ -4185,6 +4221,9 @@ msgstr "هذا التسجيل"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "إيقاف التايم شفت"
+
+msgid "Don't show default"
+msgstr ""
 
 msgid "Don't stop current event but disable coming events"
 msgstr "لا توقف الحدث الحالى لكن قم بتعطيل الاحداث القادمه"
@@ -4599,6 +4638,11 @@ msgstr "تم التفعيل"
 msgid "Enable volume control with arrow buttons"
 msgstr "أختار مدخل الفيديو بأزرار أعلى/أسفا"
 
+#
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "مؤقت النوم"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -4895,6 +4939,9 @@ msgstr "تتعدى وسيط طبقه مزدوجه !"
 #
 msgid "Exceeds dual layer medium!"
 msgstr "تتعدى وسيط طبقه مزدوجه !"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 msgid "Execution finished!!"
 msgstr "إنهاء التنفيذ !!"
@@ -6004,9 +6051,6 @@ msgstr ""
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr ""
 
@@ -6311,6 +6355,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6716,7 +6763,7 @@ msgstr "إيطالى"
 msgid "Italy"
 msgstr "إيطالى"
 
-msgid "Items per page "
+msgid "Items per page"
 msgstr ""
 
 msgid "Items per page for list screen"
@@ -6746,6 +6793,12 @@ msgstr ""
 #, fuzzy
 msgid "Jump to end of list"
 msgstr "الوصول الى نهاية القائمه"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #
 #, fuzzy
@@ -7370,6 +7423,10 @@ msgstr ""
 msgid "Menu"
 msgstr "قائمه"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "اختار مكان النسخه الإحتياطيه "
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7617,6 +7674,14 @@ msgid "Move Picture in Picture"
 msgstr "صوره داخل صوره نشط"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "تحرك للغرب"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "تحرك للغرب"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "تحرك للغرب"
 
@@ -7665,6 +7730,14 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "الانتقال لاسفل الى البند التالى"
+
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "الانتقال لاسفل الى البند التالى"
+
 msgid "Move to position X"
 msgstr ""
 
@@ -7683,6 +7756,14 @@ msgstr "عوده للفصل السابق"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "الانتقال لاعلى الى البند السابق"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "تحرك شرقا"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "تحرك شرقا"
 
 #, fuzzy
 msgid "Move up list"
@@ -8669,9 +8750,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 #
 msgid "Package list update"
 msgstr "تحديث قائمة الباقات"
@@ -9227,6 +9305,10 @@ msgstr "رجاء الانتظار.... جارى إختبار الشبكه"
 msgid "Please wait, Loading image."
 msgstr "انتظر من فضلك ...يتم تحميل القائمه..."
 
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "انتظر من فضلك ...يتم تحميل القائمه..."
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -9236,6 +9318,14 @@ msgstr "انتظر من فضلك ...يتم تحميل القائمه..."
 
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "انتظر من فضلك ...يتم تحميل القائمه..."
+
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "انتظر من فضلك ...يتم تحميل القائمه..."
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "انتظر من فضلك ...يتم تحميل القائمه..."
 
 msgid "Please wait..."
@@ -9858,9 +9948,6 @@ msgstr "الاربعاء"
 msgid "Recall to previous service"
 msgstr "العوده الى الخدمه القناه السابقه"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #
 #, fuzzy
 msgid "Reception lists"
@@ -10254,6 +10341,11 @@ msgstr "إعادة تشغيل الشبكه"
 msgid "Restart both"
 msgstr "إعادة الاختبار"
 
+#
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "القنوات/الخدمات"
+
 msgid "Restart enigma"
 msgstr ""
 
@@ -10265,6 +10357,10 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#, fuzzy
+msgid "Restart softcam"
+msgstr "إعادة الاختبار"
 
 msgid "Restart test"
 msgstr "إعادة الاختبار"
@@ -10616,6 +10712,10 @@ msgid "Save EPG every (in hours)"
 msgstr ""
 
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "حفظ قائمة العرض عند الخروج"
+
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "أضغط موافق لتفعيل الجلد المختار."
 
@@ -10956,6 +11056,11 @@ msgstr ""
 msgid "Select CAId"
 msgstr "أختار"
 
+#
+#, fuzzy
+msgid "Select Card Server"
+msgstr "اختار الفيلم"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -10971,6 +11076,10 @@ msgstr "أختار مصدر الترقيه المراد تحريره"
 #, fuzzy
 msgid "Select Service"
 msgstr "اختار الفيلم"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "أختار مصدر الترقيه المراد تحريره"
 
 #, fuzzy
 msgid "Select Software Update"
@@ -11205,6 +11314,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "أختار مسار الفيلم"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -11310,10 +11425,10 @@ msgstr "اختار مكان النسخه الإحتياطيه "
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
+msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
 
-msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -11523,6 +11638,9 @@ msgid "Set action when movie playback is finished."
 msgstr "التصرف عندما يبدأ الفيلم"
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -11765,6 +11883,10 @@ msgid "Show Weather Widget"
 msgstr ""
 
 #, fuzzy
+msgid "Show additional information on infobar"
+msgstr "إظهار شريط المعلومات"
+
+#, fuzzy
 msgid "Show alternatives"
 msgstr "إظهار البدائل"
 
@@ -11822,6 +11944,14 @@ msgstr ""
 #, fuzzy
 msgid "Show current mode"
 msgstr "إظهار تفاصيل الحدث"
+
+#, fuzzy
+msgid "Show default after description"
+msgstr "إظهار وصف متقدم"
+
+#, fuzzy
+msgid "Show default on new line"
+msgstr "إظهار شريط المعلومات"
 
 msgid "Show detailed event info"
 msgstr ""
@@ -12025,10 +12155,21 @@ msgid "Show servicelist or movies"
 msgstr "تحميل طول الفيلم فى قائمة الافلام"
 
 #, fuzzy
+msgid "Show setup default values"
+msgstr "إظهار تفاصيل الحدث"
+
+#, fuzzy
 msgid "Show simple second infobar"
 msgstr "إظهار بيانات التردد"
 
 msgid "Show single service EPG"
+msgstr ""
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "إظهار شريط المعلومات"
+
+msgid "Show softcam setup in extensions menu"
 msgstr ""
 
 msgid "Show softcam startup in extensions menu"
@@ -12362,6 +12503,14 @@ msgid "SocketMMI"
 msgstr ""
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "برنامج تشغيلى"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "برنامج تشغيلى"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "برنامج تشغيلى"
 
@@ -12478,6 +12627,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -12618,9 +12770,19 @@ msgstr ""
 msgid "Start"
 msgstr "أختبار البدأ"
 
+#
+#, fuzzy
+msgid "Start Sleeptimer"
+msgstr "وقت البـدأ"
+
 #, fuzzy
 msgid "Start directory"
 msgstr "دليل البدايه"
+
+#
+#, fuzzy
+msgid "Start fastscan"
+msgstr "أختبار البدأ"
 
 #
 msgid "Start from the beginning"
@@ -12669,6 +12831,11 @@ msgstr "أبدأ تايم شفت"
 msgid "Start with list screen"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "وقت البـدأ"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -12711,6 +12878,11 @@ msgstr "إيقاف"
 #, fuzzy
 msgid "Stop PiP"
 msgstr "إيقاف صوره داخل صوره"
+
+#
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "مؤقت النوم"
 
 #
 #, fuzzy
@@ -13516,10 +13688,6 @@ msgid "There are currently no outstanding actions."
 msgstr ""
 
 #, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "لا يوجد تحديثات متاحه ."
-
-#, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "أختار قائمة العرض المراد مسحها..."
 
@@ -13635,6 +13803,12 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr ""
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -14004,6 +14178,10 @@ msgstr ""
 #
 msgid "Today"
 msgstr "اليوم"
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "نسق التكوين"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -15016,11 +15194,6 @@ msgstr ""
 msgid "Wakeup time"
 msgstr "مؤقت النوم"
 
-#
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "مؤقت النوم"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -15161,7 +15334,13 @@ msgstr "ماذا تريد ان تبحث ؟"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -15486,6 +15665,10 @@ msgstr "أصفر"
 
 msgid "Yellow DVB subtitles"
 msgstr ""
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "اختار مكان النسخه الإحتياطيه "
 
 msgid "Yemen"
 msgstr ""
@@ -15926,9 +16109,6 @@ msgstr ""
 msgid "about to start"
 msgstr "على وشك البدأ"
 
-msgid "activate network adapter configuration"
-msgstr "تنشيط تكوين محول الشبكه"
-
 #, fuzzy
 msgid "active"
 msgstr "إضافة بدائل"
@@ -16275,9 +16455,6 @@ msgstr ""
 
 msgid "exit DVD player or return to file browser"
 msgstr "الخروج من مشغل الدى فى دى أو العوده الى متصفح الملفات"
-
-msgid "exit network adapter configuration"
-msgstr "الخروج من تهيئة محول الشبكه"
 
 msgid "exit networkadapter setup menu"
 msgstr "الخروج من قائمه إعداد الشبكه"
