--- a/po/bg.po
+++ b/po/bg.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2018-11-12 20:51+0200\n"
 "Last-Translator: Мартин Петков <marto74bg@yahoo.co.uk>\n"
 "Language-Team: Bulgarian\n"
@@ -222,6 +222,9 @@ msgstr ""
 
 msgid "%H:%M"
 msgstr "%Ч:%М"
+
+msgid "%R"
+msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
 msgstr ""
@@ -447,6 +450,10 @@ msgstr[0] "%s актуализиран пакет е наличен"
 msgstr[1] "%s актуализирани пакети са налични"
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -651,9 +658,6 @@ msgid "=NO STREAM\n"
 msgstr ""
 
 msgid "?"
-msgstr ""
-
-msgid "??"
 msgstr ""
 
 msgid "A"
@@ -1726,6 +1730,10 @@ msgstr ""
 msgid "Blue"
 msgstr ""
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "Избор на таймер"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -1961,6 +1969,12 @@ msgstr ""
 
 msgid "Cancel"
 msgstr "Отказ"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2390,6 +2404,10 @@ msgstr "Контраст"
 
 msgid "Common Interface"
 msgstr ""
+
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "Избор на таймер"
 
 msgid "Communication"
 msgstr "Комуникация"
@@ -3268,6 +3286,10 @@ msgstr "Старт запис?"
 msgid "Default+Picon"
 msgstr "Стандартни Настройки"
 
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Стандартни Настройки"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3359,6 +3381,12 @@ msgstr "Неуспешно изтриване!"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "Изтриване запис"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #, fuzzy
 msgid "Delete current line"
@@ -3576,6 +3604,10 @@ msgstr "Спри текущото но не и следващите предав
 msgid "Disable move mode"
 msgstr "спри режим преместване на канал"
 
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "спри режим преместване на канал"
+
 msgid "Disable timer"
 msgstr ""
 
@@ -3633,6 +3665,9 @@ msgstr ""
 
 msgid "Display setup"
 msgstr "Настройки Дисплей"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #, fuzzy
 msgid "Djibouti"
@@ -3843,6 +3878,9 @@ msgid "Don't add this recording"
 msgstr "този запис"
 
 msgid "Don't save and stop timeshift"
+msgstr ""
+
+msgid "Don't show default"
 msgstr ""
 
 msgid "Don't stop current event but disable coming events"
@@ -4226,6 +4264,10 @@ msgstr "Разрешен"
 msgid "Enable volume control with arrow buttons"
 msgstr "Изберете видео вход с бутони нaгоре/надолу"
 
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Tаймер за Сън"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -4500,6 +4542,9 @@ msgid "Exceeds Bludisc medium!"
 msgstr ""
 
 msgid "Exceeds dual layer medium!"
+msgstr ""
+
+msgid "Exclude first CA device"
 msgstr ""
 
 msgid "Execution finished!!"
@@ -5534,9 +5579,6 @@ msgstr ""
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr ""
 
@@ -5832,6 +5874,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6201,7 +6246,7 @@ msgstr "Италиански"
 msgid "Italy"
 msgstr "Италиански"
 
-msgid "Items per page "
+msgid "Items per page"
 msgstr ""
 
 msgid "Items per page for list screen"
@@ -6229,6 +6274,12 @@ msgid "Jump to beginning of list"
 msgstr ""
 
 msgid "Jump to end of list"
+msgstr ""
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
 msgstr ""
 
 msgid "Jump to next marked position"
@@ -6765,6 +6816,10 @@ msgstr ""
 msgid "Menu"
 msgstr "Меню"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "Избор на таймер"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -6988,6 +7043,14 @@ msgid "Move Picture in Picture"
 msgstr "Активиране Картина в Картината"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Завърти на запад"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Завърти на запад"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Завърти на запад"
 
@@ -7035,6 +7098,14 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "премести надолу към следващия запис"
+
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "премести надолу към следващия запис"
+
 msgid "Move to position X"
 msgstr ""
 
@@ -7053,6 +7124,14 @@ msgstr "превърти до предишната глава"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "премести нагоре към предишен запис"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Завърти на изток"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Завърти на изток"
 
 #, fuzzy
 msgid "Move up list"
@@ -7958,9 +8037,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 msgid "Package list update"
 msgstr "Ъпдейт на списъка с пакети"
 
@@ -8471,6 +8547,10 @@ msgstr "Моля изчакайте теста на вашата мрежа..."
 msgid "Please wait, Loading image."
 msgstr "Моля изчакайте...Зареждам списък..."
 
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Моля изчакайте...Зареждам списък..."
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -8480,6 +8560,14 @@ msgstr "Моля изчакайте...Зареждам списък..."
 
 msgid "Please wait, restarting secondary softcam."
 msgstr ""
+
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Моля изчакайте...Зареждам списък..."
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
+msgstr "Моля изчакайте...Зареждам списък..."
 
 msgid "Please wait..."
 msgstr "Моля изчакайте..."
@@ -9059,9 +9147,6 @@ msgstr "Сря"
 msgid "Recall to previous service"
 msgstr "Връщане към предишен канал"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #, fuzzy
 msgid "Reception lists"
 msgstr "Настройки на Колекция"
@@ -9425,6 +9510,10 @@ msgstr "Рестарт мрежа"
 msgid "Restart both"
 msgstr "Рестарт тест"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "задаване като стартиращ канал"
+
 msgid "Restart enigma"
 msgstr "Рестарт енигма"
 
@@ -9436,6 +9525,10 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Рестарт тест"
 
 msgid "Restart test"
 msgstr "Рестарт тест"
@@ -9765,6 +9858,10 @@ msgid "Save EPG every (in hours)"
 msgstr ""
 
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "запис плейлист при изход"
+
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Премахни избраното заглавие"
 
@@ -10073,6 +10170,10 @@ msgstr ""
 msgid "Select CAId"
 msgstr ""
 
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Премахни заглавие"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -10087,6 +10188,10 @@ msgstr "Изберете филм"
 #, fuzzy
 msgid "Select Service"
 msgstr "Премахни заглавие"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Избери"
 
 #, fuzzy
 msgid "Select Software Update"
@@ -10299,6 +10404,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr ""
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -10401,10 +10512,10 @@ msgstr "Избор на таймер"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
+msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
 
-msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -10583,6 +10694,9 @@ msgid "Set action when movie playback is finished."
 msgstr ""
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -10800,6 +10914,10 @@ msgid "Show Weather Widget"
 msgstr ""
 
 #, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Информация"
+
+#, fuzzy
 msgid "Show alternatives"
 msgstr "покажи алтернативи"
 
@@ -10853,6 +10971,13 @@ msgid "Show crypto info in infobar"
 msgstr ""
 
 msgid "Show current mode"
+msgstr ""
+
+#, fuzzy
+msgid "Show default after description"
+msgstr "покажи разширено описание"
+
+msgid "Show default on new line"
 msgstr ""
 
 msgid "Show detailed event info"
@@ -11034,10 +11159,21 @@ msgid "Show servicelist or movies"
 msgstr "Показвай въртенето на антената"
 
 #, fuzzy
+msgid "Show setup default values"
+msgstr "детайли на предаването"
+
+#, fuzzy
 msgid "Show simple second infobar"
 msgstr "покажи инфо за транспондер"
 
 msgid "Show single service EPG"
+msgstr ""
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Информация"
+
+msgid "Show softcam setup in extensions menu"
 msgstr ""
 
 msgid "Show softcam startup in extensions menu"
@@ -11328,6 +11464,14 @@ msgid "SocketMMI"
 msgstr ""
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Инсталирай софткам"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Инсталирай софткам"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Инсталирай софткам"
 
@@ -11433,6 +11577,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -11562,8 +11709,16 @@ msgid "Start"
 msgstr "Старт тест"
 
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Старт тест"
+
+#, fuzzy
 msgid "Start directory"
 msgstr "стартова директория"
+
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Старт тест"
 
 msgid "Start from the beginning"
 msgstr "Започни от началото"
@@ -11604,6 +11759,9 @@ msgstr ""
 msgid "Start with list screen"
 msgstr ""
 
+msgid "Start/Stop Sleeptimer"
+msgstr ""
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -11641,6 +11799,10 @@ msgstr "Стоп"
 
 msgid "Stop PiP"
 msgstr ""
+
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Tаймер за Сън"
 
 #, fuzzy
 msgid "Stop all current recordings"
@@ -12357,9 +12519,6 @@ msgstr "Има %d достъпни актуализации."
 msgid "There are currently no outstanding actions."
 msgstr ""
 
-msgid "There are no items currently available for this screen."
-msgstr ""
-
 #, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "Моля изберете плейлист за изтриване..."
@@ -12474,6 +12633,12 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr ""
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -12795,6 +12960,10 @@ msgstr ""
 
 msgid "Today"
 msgstr "Днес"
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Режим Конфигурация: %s"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -13713,10 +13882,6 @@ msgstr ""
 msgid "Wakeup time"
 msgstr "Tаймер за Сън"
 
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Tаймер за Сън"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -13851,7 +14016,13 @@ msgstr "Какво искате да търся?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -14169,6 +14340,10 @@ msgstr "жълт"
 
 msgid "Yellow DVB subtitles"
 msgstr ""
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Избор на таймер"
 
 msgid "Yemen"
 msgstr ""
@@ -14597,9 +14772,6 @@ msgstr ""
 msgid "about to start"
 msgstr "стартирам"
 
-msgid "activate network adapter configuration"
-msgstr ""
-
 msgid "active"
 msgstr ""
 
@@ -14925,9 +15097,6 @@ msgstr ""
 
 msgid "exit DVD player or return to file browser"
 msgstr "изход от DVD плеър или връщане към файловия браузър"
-
-msgid "exit network adapter configuration"
-msgstr "изход от настройките на мрежовия адаптер"
 
 msgid "exit networkadapter setup menu"
 msgstr ""
