--- a/po/enigma2.pot
+++ b/po/enigma2.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -208,6 +208,9 @@ msgid "%A %e %B %Y"
 msgstr ""
 
 msgid "%H:%M"
+msgstr ""
+
+msgid "%R"
 msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
@@ -434,6 +437,10 @@ msgstr[0] ""
 msgstr[1] ""
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -601,9 +608,6 @@ msgid "=NO STREAM\n"
 msgstr ""
 
 msgid "?"
-msgstr ""
-
-msgid "??"
 msgstr ""
 
 msgid "A"
@@ -943,12 +947,6 @@ msgid "Algeria"
 msgstr ""
 
 msgid "Alias"
-msgstr ""
-
-msgid "Alignment of events"
-msgstr ""
-
-msgid "Alignment of service names"
 msgstr ""
 
 msgid "All"
@@ -1474,6 +1472,9 @@ msgstr ""
 msgid "Blue"
 msgstr ""
 
+msgid "Blue button function"
+msgstr ""
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -1682,6 +1683,12 @@ msgstr ""
 msgid "Cancel"
 msgstr ""
 
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
+
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
 
@@ -1764,9 +1771,6 @@ msgid "Celsius"
 msgstr ""
 
 msgid "Center DVB subtitles"
-msgstr ""
-
-msgid "Center time-labels and remove date"
 msgstr ""
 
 msgid "Central African Republic"
@@ -2034,6 +2038,9 @@ msgstr ""
 msgid "Common Interface"
 msgstr ""
 
+msgid "Common Setup Actions"
+msgstr ""
+
 msgid "Communication"
 msgstr ""
 
@@ -2221,7 +2228,7 @@ msgstr ""
 msgid "Continue playing"
 msgstr ""
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr ""
 
 msgid "Contrast"
@@ -2547,6 +2554,10 @@ msgstr ""
 msgid "Default+Picon"
 msgstr ""
 
+#, python-format
+msgid "Default: '%s'."
+msgstr ""
+
 msgid "Delay after change voltage before switch command"
 msgstr ""
 
@@ -2615,6 +2626,12 @@ msgid "Delete Image"
 msgstr ""
 
 msgid "Delete all the text"
+msgstr ""
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
 msgstr ""
 
 msgid "Delete current line"
@@ -2797,6 +2814,9 @@ msgstr ""
 msgid "Disable move mode"
 msgstr ""
 
+msgid "Disable operator profiles"
+msgstr ""
+
 msgid "Disable timer"
 msgstr ""
 
@@ -2841,6 +2861,9 @@ msgid "Display and userinterface"
 msgstr ""
 
 msgid "Display movie length in movielist (except single line style)."
+msgstr ""
+
+msgid "Display the virtual keyboard for data entry"
 msgstr ""
 
 msgid "Djibouti"
@@ -3015,6 +3038,9 @@ msgid "Don't add this recording"
 msgstr ""
 
 msgid "Don't save and stop timeshift"
+msgstr ""
+
+msgid "Don't show default"
 msgstr ""
 
 msgid "Don't stop current event but disable coming events"
@@ -3255,6 +3281,9 @@ msgstr ""
 msgid "Enable timer conflict detection"
 msgstr ""
 
+msgid "Enable wakeup timer"
+msgstr ""
+
 msgid "Enable/Disable IPv6"
 msgstr ""
 
@@ -3468,9 +3497,6 @@ msgstr ""
 msgid "Ethiopia"
 msgstr ""
 
-msgid "Event font size (relative to skin size)"
-msgstr ""
-
 msgid "Event name first"
 msgstr ""
 
@@ -3490,6 +3516,9 @@ msgid "Exceeds Bludisc medium!"
 msgstr ""
 
 msgid "Exceeds dual layer medium!"
+msgstr ""
+
+msgid "Exclude first CA device"
 msgstr ""
 
 msgid "Execution finished!!"
@@ -4012,9 +4041,6 @@ msgstr ""
 msgid "Fullbackup on %s"
 msgstr ""
 
-msgid "Function of OK button"
-msgstr ""
-
 msgid "Further Options"
 msgstr ""
 
@@ -4170,9 +4196,6 @@ msgstr ""
 msgid "GotoX calibration"
 msgstr ""
 
-msgid "GraphMultiEpg Settings"
-msgstr ""
-
 msgid "Graphical Multi EPG"
 msgstr ""
 
@@ -4319,9 +4342,6 @@ msgid "Hidden network"
 msgstr ""
 
 msgid "Hide"
-msgstr ""
-
-msgid "Hide and confirm invalid key message"
 msgstr ""
 
 msgid "Hide known extensions"
@@ -4843,12 +4863,6 @@ msgstr ""
 msgid "Italy"
 msgstr ""
 
-msgid "Items per page "
-msgstr ""
-
-msgid "Items per page for list screen"
-msgstr ""
-
 msgid "Itu_R_BT_709"
 msgstr ""
 
@@ -4871,6 +4885,12 @@ msgid "Jump to beginning of list"
 msgstr ""
 
 msgid "Jump to end of list"
+msgstr ""
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
 msgstr ""
 
 msgid "Jump to next marked position"
@@ -5311,6 +5331,9 @@ msgstr ""
 msgid "Menu"
 msgstr ""
 
+msgid "Menu button function"
+msgstr ""
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -5502,6 +5525,12 @@ msgstr ""
 msgid "Move Picture in Picture"
 msgstr ""
 
+msgid "Move down a line"
+msgstr ""
+
+msgid "Move down a screen"
+msgstr ""
+
 msgid "Move down list"
 msgstr ""
 
@@ -5544,6 +5573,12 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+msgid "Move to first line / screen"
+msgstr ""
+
+msgid "Move to last line / screen"
+msgstr ""
+
 msgid "Move to position X"
 msgstr ""
 
@@ -5557,6 +5592,12 @@ msgid "Move to the previous page"
 msgstr ""
 
 msgid "Move to the previous skin"
+msgstr ""
+
+msgid "Move up a line"
+msgstr ""
+
+msgid "Move up a screen"
 msgstr ""
 
 msgid "Move up list"
@@ -6285,9 +6326,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 msgid "Package list update"
 msgstr ""
 
@@ -6668,6 +6706,9 @@ msgstr ""
 msgid "Please wait, Loading image."
 msgstr ""
 
+msgid "Please wait, restarting cardserver."
+msgstr ""
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -6675,6 +6716,12 @@ msgid "Please wait, restarting primary softcam."
 msgstr ""
 
 msgid "Please wait, restarting secondary softcam."
+msgstr ""
+
+msgid "Please wait, restarting softcam and cardserver."
+msgstr ""
+
+msgid "Please wait, restarting softcam."
 msgstr ""
 
 msgid "Please wait..."
@@ -7136,9 +7183,6 @@ msgstr ""
 msgid "Recall to previous service"
 msgstr ""
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 msgid "Reception lists"
 msgstr ""
 
@@ -7432,6 +7476,9 @@ msgstr ""
 msgid "Restart both"
 msgstr ""
 
+msgid "Restart cardserver"
+msgstr ""
+
 msgid "Restart enigma"
 msgstr ""
 
@@ -7442,6 +7489,9 @@ msgid "Restart primary softcam"
 msgstr ""
 
 msgid "Restart secondary softcam"
+msgstr ""
+
+msgid "Restart softcam"
 msgstr ""
 
 msgid "Restart test"
@@ -7564,9 +7614,6 @@ msgid "Rotor turning speed"
 msgstr ""
 
 msgid "Rotor: "
-msgstr ""
-
-msgid "Round start time on"
 msgstr ""
 
 #, python-format
@@ -7712,6 +7759,9 @@ msgid "Save"
 msgstr ""
 
 msgid "Save / Enter text and exit"
+msgstr ""
+
+msgid "Save all changed settings and exit"
 msgstr ""
 
 msgid "Save and activate the currently selected skin"
@@ -7971,10 +8021,16 @@ msgstr ""
 msgid "Select CAId"
 msgstr ""
 
+msgid "Select Card Server"
+msgstr ""
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
 msgid "Select Service"
+msgstr ""
+
+msgid "Select Softcam"
 msgstr ""
 
 msgid "Select Software Update"
@@ -8134,6 +8190,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr ""
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -8211,10 +8273,10 @@ msgstr ""
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
+msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
 
-msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -8327,9 +8389,6 @@ msgstr ""
 msgid "Service scan"
 msgstr ""
 
-msgid "Service title mode"
-msgstr ""
-
 msgid "Service type 4097 incorrect for PiP!"
 msgstr ""
 
@@ -8354,6 +8413,9 @@ msgid "Set action when movie playback is finished."
 msgstr ""
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -8552,13 +8614,16 @@ msgstr ""
 msgid "Show current mode"
 msgstr ""
 
+msgid "Show default after description"
+msgstr ""
+
+msgid "Show default on new line"
+msgstr ""
+
 msgid "Show detailed event info"
 msgstr ""
 
 msgid "Show directories first"
-msgstr ""
-
-msgid "Show disabled timers (local only)"
 msgstr ""
 
 msgid "Show disclaimer"
@@ -8639,9 +8704,6 @@ msgstr ""
 msgid "Show previous picture"
 msgstr ""
 
-msgid "Show record clock icons"
-msgstr ""
-
 msgid "Show satellites list"
 msgstr ""
 
@@ -8655,6 +8717,9 @@ msgid "Show servicelist or movies"
 msgstr ""
 
 msgid "Show single service EPG"
+msgstr ""
+
+msgid "Show softcam information"
 msgstr ""
 
 msgid "Show softcam startup in extensions menu"
@@ -8694,9 +8759,6 @@ msgid "Show underline characters in filenames"
 msgstr ""
 
 msgid "Show unknown extension as text"
-msgstr ""
-
-msgid "Show vertical timelines"
 msgstr ""
 
 msgid "Show warning before set 'Ignore conflict'"
@@ -8812,9 +8874,6 @@ msgstr ""
 msgid "Skins"
 msgstr ""
 
-msgid "Skip empty services"
-msgstr ""
-
 msgid "Skip selection"
 msgstr ""
 
@@ -8876,6 +8935,12 @@ msgid "Socket"
 msgstr ""
 
 msgid "SocketMMI"
+msgstr ""
+
+msgid "Softcam Setup"
+msgstr ""
+
+msgid "Softcam setup"
 msgstr ""
 
 msgid "Softcam startup"
@@ -9078,6 +9143,9 @@ msgstr ""
 msgid "Standby"
 msgstr ""
 
+msgid "Standby / restart"
+msgstr ""
+
 msgid "Standby after current event"
 msgstr ""
 
@@ -9087,7 +9155,13 @@ msgstr ""
 msgid "Start"
 msgstr ""
 
+msgid "Start Sleeptimer"
+msgstr ""
+
 msgid "Start directory"
+msgstr ""
+
+msgid "Start fastscan"
 msgstr ""
 
 msgid "Start from the beginning"
@@ -9123,7 +9197,7 @@ msgstr ""
 msgid "Start timeshift"
 msgstr ""
 
-msgid "Start with list screen"
+msgid "Start/Stop Sleeptimer"
 msgstr ""
 
 msgid "Start/stop slide show"
@@ -9154,6 +9228,9 @@ msgid "Stop"
 msgstr ""
 
 msgid "Stop PiP"
+msgstr ""
+
+msgid "Stop Sleeptimer"
 msgstr ""
 
 msgid "Stop all current recordings"
@@ -9694,9 +9771,6 @@ msgstr ""
 msgid "There are currently no outstanding actions."
 msgstr ""
 
-msgid "There are no items currently available for this screen."
-msgstr ""
-
 msgid "There are no saved playlists to delete!"
 msgstr ""
 
@@ -9986,9 +10060,6 @@ msgstr ""
 msgid "Time required for this process: %s"
 msgstr ""
 
-msgid "Time scale"
-msgstr ""
-
 msgid "Time to execute command or script"
 msgstr ""
 
@@ -10069,6 +10140,9 @@ msgid "To subtitle selection"
 msgstr ""
 
 msgid "Today"
+msgstr ""
+
+msgid "Toggle Configuration Mode or AutoDisqc"
 msgstr ""
 
 msgid "Toggle HDMI In"
@@ -10819,9 +10893,6 @@ msgstr ""
 msgid "Wakeup time"
 msgstr ""
 
-msgid "Wakeup timer"
-msgstr ""
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -11031,6 +11102,9 @@ msgid "Year"
 msgstr ""
 
 msgid "Yellow"
+msgstr ""
+
+msgid "Yellow button function"
 msgstr ""
 
 msgid "Yemen"
@@ -11300,9 +11374,6 @@ msgstr ""
 msgid "Zap back to service before positioner setup?"
 msgstr ""
 
-msgid "Zap bouquets blindly on zap buttons"
-msgstr ""
-
 msgid "Zap down"
 msgstr ""
 
@@ -11369,9 +11440,6 @@ msgid "a gui to assign services/providers/caids to common interface modules"
 msgstr ""
 
 msgid "about to start"
-msgstr ""
-
-msgid "activate network adapter configuration"
 msgstr ""
 
 msgid "active"
@@ -11678,9 +11746,6 @@ msgid "execute cuts (requires MovieCut plugin)"
 msgstr ""
 
 msgid "exit DVD player or return to file browser"
-msgstr ""
-
-msgid "exit network adapter configuration"
 msgstr ""
 
 msgid "exit networkadapter setup menu"
@@ -12697,6 +12762,9 @@ msgstr ""
 msgid "Audio"
 msgstr ""
 
+msgid "Auto language selection"
+msgstr ""
+
 msgid "Automatic scan"
 msgstr ""
 
@@ -12710,6 +12778,9 @@ msgid "Convert ext3 filesystem to ext4"
 msgstr ""
 
 msgid "Cron timers"
+msgstr ""
+
+msgid "Customize"
 msgstr ""
 
 msgid "Devices"
@@ -12748,6 +12819,9 @@ msgstr ""
 msgid "Load EPG"
 msgstr ""
 
+msgid "Logs settings"
+msgstr ""
+
 msgid "Manual load or save epg.dat"
 msgstr ""
 
@@ -12764,6 +12838,9 @@ msgid "OpenVPN Setup"
 msgstr ""
 
 msgid "Plugins"
+msgstr ""
+
+msgid "RF output"
 msgstr ""
 
 msgid "Recovery Mode"
@@ -12784,10 +12861,10 @@ msgstr ""
 msgid "Sleep/wakeup timer"
 msgstr ""
 
-msgid "Standby / restart"
+msgid "Storage media"
 msgstr ""
 
-msgid "Storage media"
+msgid "Subtitle settings"
 msgstr ""
 
 msgid "Switch to Android"
@@ -12857,9 +12934,6 @@ msgid "Audio language selection 3"
 msgstr ""
 
 msgid "Audio language selection 4"
-msgstr ""
-
-msgid "Auto language selection"
 msgstr ""
 
 msgid "Auto play last service in radio mode"
@@ -13204,9 +13278,6 @@ msgstr ""
 msgid "Custom skip time for '7'/'9' buttons"
 msgstr ""
 
-msgid "Customize"
-msgstr ""
-
 msgid "Customize channel list cursor behavior"
 msgstr ""
 
@@ -13423,6 +13494,9 @@ msgstr ""
 msgid "Ignore DVB-T namespace sub network"
 msgstr ""
 
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
+msgstr ""
+
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
 msgstr ""
 
@@ -13484,9 +13558,6 @@ msgid "Load unlinked userbouquets"
 msgstr ""
 
 msgid "Logs location"
-msgstr ""
-
-msgid "Logs settings"
 msgstr ""
 
 msgid "Lower Framerate save CPU Time"
@@ -13609,9 +13680,6 @@ msgstr ""
 msgid "Preferred tuner for recordings"
 msgstr ""
 
-msgid "RF output"
-msgstr ""
-
 msgid "Recordings always have priority"
 msgstr ""
 
@@ -13726,6 +13794,9 @@ msgstr ""
 msgid "Show VCR scart on main menu"
 msgstr ""
 
+msgid "Show additional information on infobar"
+msgstr ""
+
 msgid "Show animation while busy"
 msgstr ""
 
@@ -13801,7 +13872,13 @@ msgstr ""
 msgid "Show service type icons"
 msgstr ""
 
+msgid "Show setup default values"
+msgstr ""
+
 msgid "Show simple second infobar"
+msgstr ""
+
+msgid "Show softcam setup in extensions menu"
 msgstr ""
 
 msgid "Show status icons in movielist"
@@ -13829,6 +13906,9 @@ msgid "Slow motion speeds"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sound"
@@ -13877,9 +13957,6 @@ msgid "Subtitle language selection 4"
 msgstr ""
 
 msgid "Subtitle position"
-msgstr ""
-
-msgid "Subtitle settings"
 msgstr ""
 
 msgid "Switch on the display during Standby Mode"
@@ -13934,6 +14011,12 @@ msgid "This allows you to set the number of digits to 5, if you have more than 9
 msgstr ""
 
 msgid "This can be useful when using the CI(+) module. After the end of the recording, the service will be automatically stopped."
+msgstr ""
+
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr ""
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button. With the user defined hidden the blue button is not shown in the menus"
@@ -14020,7 +14103,13 @@ msgstr ""
 msgid "Usually when the subtitle language is the same as the audio language, the subtitles will not be used. Enable this option to allow these subtitles to be used."
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -14684,6 +14773,57 @@ msgid "Swap buttons right/left with channel plus/minus or the channel button cha
 msgstr ""
 
 msgid "Time between slides in image viewer slideshow."
+msgstr ""
+
+msgid "Alignment of events"
+msgstr ""
+
+msgid "Alignment of service names"
+msgstr ""
+
+msgid "Center time-labels and remove date"
+msgstr ""
+
+msgid "Event font size (relative to skin size)"
+msgstr ""
+
+msgid "Function of OK button"
+msgstr ""
+
+msgid "GraphMultiEpg Settings"
+msgstr ""
+
+msgid "Items per page"
+msgstr ""
+
+msgid "Items per page for list screen"
+msgstr ""
+
+msgid "Round start time on"
+msgstr ""
+
+msgid "Service title mode"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
+msgstr ""
+
+msgid "Show record clock icons"
+msgstr ""
+
+msgid "Show vertical timelines"
+msgstr ""
+
+msgid "Skip empty services"
+msgstr ""
+
+msgid "Start with list screen"
+msgstr ""
+
+msgid "Time scale"
+msgstr ""
+
+msgid "Zap bouquets blindly on zap buttons"
 msgstr ""
 
 msgid "Configure interface"
