--- a/po/fa.po
+++ b/po/fa.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2018-02-14 16:51+0330\n"
 "Last-Translator: Persian Prince <persianprince@pe4k.com>\n"
 "Language-Team: Persian Professionals <persianpros@yahoo.com>\n"
@@ -225,6 +225,9 @@ msgstr "%A %e %B %Y"
 msgid "%H:%M"
 msgstr "%ساعت:%دقیقه"
 
+msgid "%R"
+msgstr ""
+
 #, fuzzy
 msgid "%Y-%m-%d %H:%M:%S"
 msgstr "%a %e/%m  %-H:%M"
@@ -439,6 +442,10 @@ msgid_plural "%s updated packages available"
 msgstr[0] "به روز رسانی های در دسترس"
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -648,9 +655,6 @@ msgstr ""
 
 #, fuzzy
 msgid "?"
-msgstr "??"
-
-msgid "??"
 msgstr "??"
 
 msgid "A"
@@ -1771,6 +1775,10 @@ msgstr "بستن کاهش صدا"
 msgid "Blue"
 msgstr ""
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "انتخاب محل نسخه پشتیبان"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2011,6 +2019,12 @@ msgstr ""
 
 msgid "Cancel"
 msgstr "انصراف"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2449,6 +2463,10 @@ msgstr "کنتراست"
 
 msgid "Common Interface"
 msgstr "رابط مشترک"
+
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "EPG انتخاب"
 
 msgid "Communication"
 msgstr "ارتباط"
@@ -3384,6 +3402,10 @@ msgstr "نوع ضبط"
 msgid "Default+Picon"
 msgstr "تنظیمات پیش فرض"
 
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "پیش فرض"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3475,6 +3497,12 @@ msgstr "حذف ناموفق"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "حذف مورد"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #, fuzzy
 msgid "Delete current line"
@@ -3699,6 +3727,10 @@ msgstr "توقف رخداد فعلی بدون توجه به رخداد های ب
 msgid "Disable move mode"
 msgstr "غیر فعال شد"
 
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "متغیر های فرمت در دسترس"
+
 msgid "Disable timer"
 msgstr ""
 
@@ -3761,6 +3793,9 @@ msgstr ""
 #, fuzzy
 msgid "Display setup"
 msgstr "تنظیمات تصویر"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #, fuzzy
 msgid "Djibouti"
@@ -3974,6 +4009,9 @@ msgstr "شروع ضبط کردن؟"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "توقف تغییر زمان ؟"
+
+msgid "Don't show default"
+msgstr ""
 
 msgid "Don't stop current event but disable coming events"
 msgstr "رخداد فعلی متوقف نشود اما رخداد های بعدی غیر فعال شوند"
@@ -4366,6 +4404,10 @@ msgstr "فعال شد"
 msgid "Enable volume control with arrow buttons"
 msgstr "انتخاب ورودی تصویر توسط کلید های بالا/پایین"
 
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "زمان خواب"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -4647,6 +4689,9 @@ msgstr "بیش از رسانه دو لایه"
 
 msgid "Exceeds dual layer medium!"
 msgstr "بیش از رسانه دو لایه"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 msgid "Execution finished!!"
 msgstr "عملیات اجرایی پایان یافت"
@@ -5717,9 +5762,6 @@ msgstr "شبکه مخفی"
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr ""
 
@@ -6016,6 +6058,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6412,7 +6457,7 @@ msgid "Italy"
 msgstr "ایتالیایی"
 
 #, fuzzy
-msgid "Items per page "
+msgid "Items per page"
 msgstr "موارد در هر صفحه"
 
 #, fuzzy
@@ -6444,6 +6489,12 @@ msgstr ""
 #, fuzzy
 msgid "Jump to end of list"
 msgstr "برو بالای لیست"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #, fuzzy
 msgid "Jump to next marked position"
@@ -7013,6 +7064,10 @@ msgstr ""
 msgid "Menu"
 msgstr "منو"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "انتخاب محل نسخه پشتیبان"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7240,6 +7295,14 @@ msgid "Move Picture in Picture"
 msgstr "فعال کردن تصویر در تصویر"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "برو پایین لیست"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "برو پایین لیست"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "برو پایین لیست"
 
@@ -7285,6 +7348,14 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "مراجعه به اولین کانال"
+
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "حالت رادیو متناوب"
+
 msgid "Move to position X"
 msgstr "جابجایی به موقعت X"
 
@@ -7301,6 +7372,14 @@ msgstr "مراجعه به رخداد قبلی"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "مراجعه به رخداد قبلی"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "برو بالای لیست"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "برو بالای لیست"
 
 #, fuzzy
 msgid "Move up list"
@@ -8241,9 +8320,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 msgid "Package list update"
 msgstr "به روز رسانی لیست بسته های نرم افزاری"
 
@@ -8770,6 +8846,10 @@ msgstr "لطفا صبر کنید تا شبکه شما تست شود"
 msgid "Please wait, Loading image."
 msgstr "لطفا صبر کنید - در حال آماده سازی لیست"
 
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "لطفا صبر کنید - در حال آماده سازی لیست"
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -8779,6 +8859,14 @@ msgstr "لطفا صبر کنید - در حال آماده سازی لیست"
 
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "لطفا صبر کنید - در حال آماده سازی لیست"
+
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "لطفا صبر کنید - در حال آماده سازی لیست"
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "لطفا صبر کنید - در حال آماده سازی لیست"
 
 msgid "Please wait..."
@@ -9383,9 +9471,6 @@ msgstr "ضبط"
 msgid "Recall to previous service"
 msgstr "بازگشت به کانال قبلی"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #, fuzzy
 msgid "Reception lists"
 msgstr "تنظیمات دریافت"
@@ -9766,6 +9851,10 @@ msgstr "راه اندازی دوباره شبکه"
 msgid "Restart both"
 msgstr "راه اندازی دوباره تست"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "جابجایی کانال ها"
+
 msgid "Restart enigma"
 msgstr "راه اندازی مجدد انیگما"
 
@@ -9777,6 +9866,10 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#, fuzzy
+msgid "Restart softcam"
+msgstr "راه اندازی دوباره تست"
 
 msgid "Restart test"
 msgstr "راه اندازی دوباره تست"
@@ -10111,6 +10204,10 @@ msgid "Save EPG every (in hours)"
 msgstr ""
 
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "ذخیره لیست پخش"
+
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "دکمه OK را برای فعال کردن پوسته انتخاب شده فشار دهید"
 
@@ -10424,6 +10521,10 @@ msgstr ""
 msgid "Select CAId"
 msgstr "انتخاب"
 
+#, fuzzy
+msgid "Select Card Server"
+msgstr "انتخاب فیلم"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -10438,6 +10539,10 @@ msgstr "انتخاب منبع به روز رسانی برای ویرایش"
 #, fuzzy
 msgid "Select Service"
 msgstr "انتخاب فیلم"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "انتخاب منبع به روز رسانی برای ویرایش"
 
 #
 #, fuzzy
@@ -10661,6 +10766,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "لطفا مسیر فیلم را انتخاب کنید"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -10766,10 +10877,10 @@ msgstr "انتخاب محل نسخه پشتیبان"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
+msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
 
-msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -10960,6 +11071,9 @@ msgid "Set action when movie playback is finished."
 msgstr "عملکرد هنگامی که یک فیلم شروع میشود"
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -11192,6 +11306,10 @@ msgid "Show Weather Widget"
 msgstr ""
 
 #, fuzzy
+msgid "Show additional information on infobar"
+msgstr "نمایش اطلاعات کد گذاری در نوار اطلاعات"
+
+#, fuzzy
 msgid "Show alternatives"
 msgstr "حالت رادیو متناوب"
 
@@ -11249,6 +11367,14 @@ msgstr "نمایش اطلاعات کد گذاری در نوار اطلاعات"
 #, fuzzy
 msgid "Show current mode"
 msgstr "منوی تنظیمات"
+
+#, fuzzy
+msgid "Show default after description"
+msgstr "لطفا یک نام جدید برای فایل وارد کنید"
+
+#, fuzzy
+msgid "Show default on new line"
+msgstr "نمایش اطلاعات"
 
 msgid "Show detailed event info"
 msgstr "نمایش اطلاعات همراه جزئیات رخداد"
@@ -11441,12 +11567,23 @@ msgstr ""
 msgid "Show servicelist or movies"
 msgstr "آماده سازی طول فیلم ها در لیست فیلم"
 
+msgid "Show setup default values"
+msgstr ""
+
 #, fuzzy
 msgid "Show simple second infobar"
 msgstr "نمایش نوار اطلاعات دوم"
 
 msgid "Show single service EPG"
 msgstr ""
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "اطلاعات مدیریت نرم افزار"
+
+#, fuzzy
+msgid "Show softcam setup in extensions menu"
+msgstr "نمایش منوی انتخاب لیست"
 
 msgid "Show softcam startup in extensions menu"
 msgstr ""
@@ -11754,6 +11891,14 @@ msgid "SocketMMI"
 msgstr ""
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "نرم افزار"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "نرم افزار"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "نرم افزار"
 
@@ -11874,6 +12019,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -12008,8 +12156,16 @@ msgid "Start"
 msgstr "شروع تست"
 
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "زمان شروع"
+
+#, fuzzy
 msgid "Start directory"
 msgstr "شاخه اصلی"
+
+#, fuzzy
+msgid "Start fastscan"
+msgstr "شروع تست"
 
 msgid "Start from the beginning"
 msgstr "شروع از ابتدای کار"
@@ -12052,6 +12208,10 @@ msgstr "شروع تست"
 msgid "Start with list screen"
 msgstr ""
 
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "زمان شروع"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -12089,6 +12249,10 @@ msgstr "توقف"
 #, fuzzy
 msgid "Stop PiP"
 msgstr "توقف"
+
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "زمان خواب"
 
 #, fuzzy
 msgid "Stop all current recordings"
@@ -12841,9 +13005,6 @@ msgstr "به روز رسانی های در دسترس"
 msgid "There are currently no outstanding actions."
 msgstr ""
 
-msgid "There are no items currently available for this screen."
-msgstr ""
-
 #, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "لطفا یک لیست پخش را برای حذف شدن انتخاب کنید"
@@ -12955,6 +13116,12 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr ""
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -13275,6 +13442,10 @@ msgstr ""
 
 msgid "Today"
 msgstr ""
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "حالت پیکربندی: "
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -14192,10 +14363,6 @@ msgstr ""
 msgid "Wakeup time"
 msgstr "زمان خواب"
 
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "زمان خواب"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -14326,7 +14493,13 @@ msgstr ""
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -14647,6 +14820,10 @@ msgstr ""
 
 msgid "Yellow DVB subtitles"
 msgstr ""
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "انتخاب محل نسخه پشتیبان"
 
 #, fuzzy
 msgid "Yemen"
@@ -15066,9 +15243,6 @@ msgstr ""
 msgid "about to start"
 msgstr ""
 
-msgid "activate network adapter configuration"
-msgstr ""
-
 #, fuzzy
 msgid "active"
 msgstr "حالت رادیو متناوب"
@@ -15398,9 +15572,6 @@ msgid "execute cuts (requires MovieCut plugin)"
 msgstr ""
 
 msgid "exit DVD player or return to file browser"
-msgstr ""
-
-msgid "exit network adapter configuration"
 msgstr ""
 
 msgid "exit networkadapter setup menu"
