--- a/po/fi.po
+++ b/po/fi.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2019-02-13 20:52+0200\n"
 "Last-Translator: jamu\n"
 "Language-Team: BoxFreak/jamu\n"
@@ -236,6 +236,9 @@ msgstr "%A %e. %Bta %Y"
 
 msgid "%H:%M"
 msgstr "%H:%M"
+
+msgid "%R"
+msgstr ""
 
 #, fuzzy
 msgid "%Y-%m-%d %H:%M:%S"
@@ -470,6 +473,10 @@ msgid_plural "%s updated packages available"
 msgstr[0] "%s päivitetty paketti saatavilla."
 msgstr[1] " %s päivitettyä pakettia saatavilla."
 
+#, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
 #, fuzzy, python-format
 msgid "%s: %s"
 msgstr "%s/%s: %s"
@@ -703,10 +710,6 @@ msgstr ""
 #
 #, fuzzy
 msgid "?"
-msgstr "??"
-
-#
-msgid "??"
 msgstr "??"
 
 #
@@ -1965,6 +1968,11 @@ msgstr "Pakkausneliöiden pehmennys"
 msgid "Blue"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Blue button function"
+msgstr "Valitse varmuuskopion sijainti"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2222,6 +2230,12 @@ msgstr ""
 #
 msgid "Cancel"
 msgstr "Peruuta"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2723,6 +2737,11 @@ msgstr "Kontrasti"
 #
 msgid "Common Interface"
 msgstr "CI-liitäntä/CAM"
+
+#
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "Ohjelmaoppaan valinta"
 
 msgid "Communication"
 msgstr "Kommunikointi"
@@ -3717,6 +3736,11 @@ msgstr "Tallennuksen tyyppi"
 msgid "Default+Picon"
 msgstr "Oletusasetukset"
 
+#
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Oletus"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3812,6 +3836,12 @@ msgstr "Poista tiedosto"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "Poista soittolistan valinta"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #
 #, fuzzy
@@ -4066,6 +4096,11 @@ msgid "Disable move mode"
 msgstr "Poistu siirtotilasta"
 
 #
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Formaatti-muuttujat"
+
+#
 msgid "Disable timer"
 msgstr "Poista käytöstä"
 
@@ -4131,6 +4166,9 @@ msgstr ""
 
 msgid "Display setup"
 msgstr "Etupaneelin näytön asetus"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #
 #, fuzzy
@@ -4384,6 +4422,11 @@ msgstr "tämä tallennus"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "Lopeta ajansiirtotallennus"
+
+#
+#, fuzzy
+msgid "Don't show default"
+msgstr "Luettelon tyyli: Vakio"
 
 #
 msgid "Don't stop current event but disable coming events"
@@ -4824,6 +4867,11 @@ msgstr "Käytössä"
 msgid "Enable volume control with arrow buttons"
 msgstr "Valitse video-sisäänmeno ylös/alas-näppäimillä"
 
+#
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Uniajastin"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -5125,6 +5173,9 @@ msgstr "Ylittää kaksikerroslevyn tilavuuden!"
 
 msgid "Exceeds dual layer medium!"
 msgstr "Ylittää kaksikerroslevyn tilavuuden!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 #
 msgid "Execution finished!!"
@@ -6299,9 +6350,6 @@ msgstr "Piilotettu verkko"
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr "Piilota kanavaluettelo radio tilassa."
 
@@ -6627,6 +6675,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -7047,7 +7098,8 @@ msgstr "Italia"
 msgid "Italy"
 msgstr "Italia"
 
-msgid "Items per page "
+#, fuzzy
+msgid "Items per page"
 msgstr "Kohdetta sivulla"
 
 msgid "Items per page for list screen"
@@ -7078,6 +7130,12 @@ msgstr "Hyppää listan alkuun"
 #
 msgid "Jump to end of list"
 msgstr "Mene listan loppuun"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #
 msgid "Jump to next marked position"
@@ -7706,6 +7764,11 @@ msgstr ""
 msgid "Menu"
 msgstr "Valikko"
 
+#
+#, fuzzy
+msgid "Menu button function"
+msgstr "Valitse varmuuskopion sijainti"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7956,6 +8019,14 @@ msgid "Move Picture in Picture"
 msgstr "Avaa PiP-kuva"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Mene luettelossa alaspäin"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Mene luettelossa alaspäin"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Mene luettelossa alaspäin"
 
@@ -8009,6 +8080,16 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "siirry seuraavaan kohtaan"
+
+#
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "siirry seuraavaan kohtaan"
+
 msgid "Move to position X"
 msgstr "Käännä paikkaan X"
 
@@ -8031,6 +8112,14 @@ msgstr "kelaa edelliseen kappaleeseen"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "siirry edelliseen kohtaan"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Mene luettelossa ylöspäin"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Mene luettelossa ylöspäin"
 
 #, fuzzy
 msgid "Move up list"
@@ -9087,9 +9176,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 #
 msgid "Package list update"
 msgstr "Ohjelmapakettiluettelon päivitys"
@@ -9707,6 +9793,11 @@ msgstr "Odota, testaamme verkkoa..."
 msgid "Please wait, Loading image."
 msgstr "Odota... Luetteloa ladataan..."
 
+#
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Softcamia ladataan. Odota..."
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -9718,6 +9809,16 @@ msgstr "Softcamia ladataan. Odota..."
 #
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Softcamia ladataan. Odota..."
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Softcamia ladataan. Odota..."
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Softcamia ladataan. Odota..."
 
 #
@@ -10398,9 +10499,6 @@ msgstr "Tallenna"
 msgid "Recall to previous service"
 msgstr "Palaa TV-kanavalle"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #
 #, fuzzy
 msgid "Reception lists"
@@ -10839,6 +10937,10 @@ msgstr "Käynnistä verkko uudelleen"
 msgid "Restart both"
 msgstr "Käynnistä testi uudelleen"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "Aseta käynnistyskanavaksi"
+
 msgid "Restart enigma"
 msgstr "Käynnistä enigma uudelleen"
 
@@ -10851,6 +10953,11 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Käynnistä testi uudelleen"
 
 #
 msgid "Restart test"
@@ -11233,6 +11340,11 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "tallenna soittolista suljettaessa"
+
+#
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Ota valittu teema käyttöön painamalla OK."
 
@@ -11583,6 +11695,11 @@ msgstr ""
 msgid "Select CAId"
 msgstr "Valitse CAId"
 
+#
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Valitse tallenne"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -11600,6 +11717,11 @@ msgstr "Valitse päivityslähde"
 #, fuzzy
 msgid "Select Service"
 msgstr "Valitse tallenne"
+
+#
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Valitse päivityslähde"
 
 #
 #, fuzzy
@@ -11851,6 +11973,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "Valitse tallennehakemisto"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -11967,10 +12095,10 @@ msgstr "Valitse varmuuskopion sijainti"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
-msgstr "Valitse palveluntarjoaja ja aloita haku painamalla OK"
-
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -12186,6 +12314,9 @@ msgid "Set action when movie playback is finished."
 msgstr "Määrittää toiminnan tallenteen toiston alussa."
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -12425,6 +12556,10 @@ msgstr "Näytä WLAN:in tila"
 msgid "Show Weather Widget"
 msgstr ""
 
+#, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Näytä salaustyyppi tietopalkissa"
+
 #
 #, fuzzy
 msgid "Show alternatives"
@@ -12484,6 +12619,16 @@ msgstr "Näytä salaustyyppi tietopalkissa"
 #, fuzzy
 msgid "Show current mode"
 msgstr "Näytä ohjelman tarkemmat tiedot"
+
+#
+#, fuzzy
+msgid "Show default after description"
+msgstr "Näytä laajennettu ohjelmakuvaus"
+
+#
+#, fuzzy
+msgid "Show default on new line"
+msgstr "Näytä tietopalkki"
 
 msgid "Show detailed event info"
 msgstr "Näytä laajempi ohjelmatieto"
@@ -12691,12 +12836,26 @@ msgstr "Näytä kanavatyypin kuvakkeet"
 msgid "Show servicelist or movies"
 msgstr "Näytä kanavatyypin kuvakkeet"
 
+#
+#, fuzzy
+msgid "Show setup default values"
+msgstr "Näytä ohjelman tarkemmat tiedot"
+
 #, fuzzy
 msgid "Show simple second infobar"
 msgstr "Näytä toinen tietopalkki"
 
 msgid "Show single service EPG"
 msgstr "Näytä yhden kanavan ohjelmaopas"
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Ohjelmistonhallinnan tiedot"
+
+#
+#, fuzzy
+msgid "Show softcam setup in extensions menu"
+msgstr "Näytä laajennusvalikossa"
 
 #
 #, fuzzy
@@ -13043,6 +13202,16 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Softcamin tyyppi"
+
+#
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Softcamin tyyppi"
+
+#
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Softcamin tyyppi"
 
@@ -13167,6 +13336,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -13318,8 +13490,18 @@ msgstr "Aloita testi"
 
 #
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Uniajastin"
+
+#
+#, fuzzy
 msgid "Start directory"
 msgstr "aloitushakemisto"
+
+#
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Aloita testi"
 
 #
 msgid "Start from the beginning"
@@ -13370,6 +13552,11 @@ msgstr "Aloita ajansiirtotallennus"
 msgid "Start with list screen"
 msgstr "Käynnistä luettelotilaan"
 
+#
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Käyttämättömyysajastin"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -13416,6 +13603,11 @@ msgstr "Pysäytä"
 #
 msgid "Stop PiP"
 msgstr "Sulje PiP-kuva"
+
+#
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Uniajastin"
 
 #
 #  Suoratallennusikkuna.
@@ -14230,10 +14422,6 @@ msgstr "Vähintään %d päivitystä saatavilla."
 msgid "There are currently no outstanding actions."
 msgstr "Ei suorittamattomia tehtäviä."
 
-#, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "Päivityksiä ei ole saatavilla."
-
 #
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -14354,6 +14542,14 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+#
+#, fuzzy
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr "Näytä laajennusvalikossa"
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -14737,6 +14933,10 @@ msgstr "Avaa tekstitysvalinta"
 #
 msgid "Today"
 msgstr "Tänään"
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Toimintatila: %s"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -15811,11 +16011,6 @@ msgstr "Käynnisty TV-signaalista"
 msgid "Wakeup time"
 msgstr "Käynnisty"
 
-#
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Uniajastin"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -15985,7 +16180,13 @@ msgstr "Kanavahaun lisäasetukset:"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 #, fuzzy
@@ -16329,6 +16530,11 @@ msgstr "Keltainen"
 
 msgid "Yellow DVB subtitles"
 msgstr "Keltainen DVB-tekstitys"
+
+#
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Valitse varmuuskopion sijainti"
 
 #, fuzzy
 msgid "Yemen"
@@ -16815,9 +17021,6 @@ msgstr "Käyttöliittymä kanavien/palvelutarjoajien/CAId:en määrittämiseen C
 msgid "about to start"
 msgstr "alkaa juuri"
 
-msgid "activate network adapter configuration"
-msgstr "aktivoi verkkosovittimen asetukset"
-
 #
 #, fuzzy
 msgid "active"
@@ -17199,10 +17402,6 @@ msgstr ""
 #
 msgid "exit DVD player or return to file browser"
 msgstr "poistu DVD-soittimesta tai palaa tiedostonhallintaan"
-
-#
-msgid "exit network adapter configuration"
-msgstr "poistu verkkosovittimen asetuksista"
 
 #
 msgid "exit networkadapter setup menu"
