--- a/po/he.po
+++ b/po/he.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2012-03-08 10:40+0330\n"
 "Last-Translator: \n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -231,6 +231,9 @@ msgstr ""
 
 msgid "%H:%M"
 msgstr "%H:%M"
+
+msgid "%R"
+msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
 msgstr ""
@@ -463,6 +466,10 @@ msgstr[0] "עדכונים זמינים"
 msgstr[1] "עדכונים זמינים"
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -684,9 +691,6 @@ msgstr ""
 
 #, fuzzy
 msgid "?"
-msgstr "؟؟"
-
-msgid "??"
 msgstr "؟؟"
 
 #
@@ -1870,6 +1874,10 @@ msgstr "Block noise reduction"
 msgid "Blue"
 msgstr ""
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "בחר מקום גיבוי"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2120,6 +2128,12 @@ msgstr ""
 #
 msgid "Cancel"
 msgstr "בטל"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2579,6 +2593,11 @@ msgstr "ניגודיות"
 #
 msgid "Common Interface"
 msgstr "ממשק משותף"
+
+#
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "EPG בחירת"
 
 msgid "Communication"
 msgstr "תקשורת"
@@ -3513,6 +3532,10 @@ msgstr "?התחל להקליט"
 msgid "Default+Picon"
 msgstr "הגדרות ברירת מחדל"
 
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "ברירת מחדל"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3605,6 +3628,12 @@ msgstr "מחק קובץ"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "delete playlist entry"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #, fuzzy
 msgid "Delete current line"
@@ -3843,6 +3872,10 @@ msgstr "Stop current event but not coming events"
 msgid "Disable move mode"
 msgstr "disable move mode"
 
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Available format variables"
+
 msgid "Disable timer"
 msgstr ""
 
@@ -3907,6 +3940,9 @@ msgstr ""
 #, fuzzy
 msgid "Display setup"
 msgstr "הצג הגדרות"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #
 #, fuzzy
@@ -4131,6 +4167,9 @@ msgstr "ההקלטה הזו"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "timeshift עצור"
+
+msgid "Don't show default"
+msgstr ""
 
 msgid "Don't stop current event but disable coming events"
 msgstr "אל תפסיק אירוע נוכחי אך בטל את כל הבאים בתור"
@@ -4542,6 +4581,11 @@ msgstr "אפשר"
 msgid "Enable volume control with arrow buttons"
 msgstr "Select video input with up/down buttons"
 
+#
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "טיימר שינה"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -4838,6 +4882,9 @@ msgstr "Exceeds dual layer medium!"
 #
 msgid "Exceeds dual layer medium!"
 msgstr "Exceeds dual layer medium!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 msgid "Execution finished!!"
 msgstr "!!הרצה הסתיימה"
@@ -5948,9 +5995,6 @@ msgstr ""
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr ""
 
@@ -6255,6 +6299,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6661,7 +6708,7 @@ msgstr "איטלקית"
 msgid "Italy"
 msgstr "איטלקית"
 
-msgid "Items per page "
+msgid "Items per page"
 msgstr ""
 
 msgid "Items per page for list screen"
@@ -6691,6 +6738,12 @@ msgstr ""
 #, fuzzy
 msgid "Jump to end of list"
 msgstr "jump to listend"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #
 #, fuzzy
@@ -7311,6 +7364,10 @@ msgstr ""
 msgid "Menu"
 msgstr "תפריט"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "בחר מקום גיבוי"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7558,6 +7615,14 @@ msgid "Move Picture in Picture"
 msgstr "הפעל תמונה בתוך תמונה"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Move west"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Move west"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Move west"
 
@@ -7606,6 +7671,14 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "move down to next entry"
+
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "move down to next entry"
+
 msgid "Move to position X"
 msgstr ""
 
@@ -7624,6 +7697,14 @@ msgstr "rewind to the previous chapter"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "move up to previous entry"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Move east"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Move east"
 
 #, fuzzy
 msgid "Move up list"
@@ -8609,9 +8690,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 #
 msgid "Package list update"
 msgstr "עדכון רשימת חבילות"
@@ -9167,6 +9245,10 @@ msgstr "...נא המתן בעת בדיקת הרשת"
 msgid "Please wait, Loading image."
 msgstr "...נא המתן...טוען רשימה"
 
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "...נא המתן...טוען רשימה"
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -9176,6 +9258,14 @@ msgstr "...נא המתן...טוען רשימה"
 
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "...נא המתן...טוען רשימה"
+
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "...נא המתן...טוען רשימה"
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "...נא המתן...טוען רשימה"
 
 msgid "Please wait..."
@@ -9798,9 +9888,6 @@ msgstr "רביעי"
 msgid "Recall to previous service"
 msgstr "Return to previous service"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #
 #, fuzzy
 msgid "Reception lists"
@@ -10194,6 +10281,11 @@ msgstr "איתחול רשת"
 msgid "Restart both"
 msgstr "איתחול בדיקה"
 
+#
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "שירותים"
+
 msgid "Restart enigma"
 msgstr ""
 
@@ -10205,6 +10297,10 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#, fuzzy
+msgid "Restart softcam"
+msgstr "איתחול בדיקה"
 
 msgid "Restart test"
 msgstr "איתחול בדיקה"
@@ -10556,6 +10652,10 @@ msgid "Save EPG every (in hours)"
 msgstr ""
 
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "save playlist on exit"
+
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Press OK to activate the selected skin."
 
@@ -10884,6 +10984,11 @@ msgstr ""
 msgid "Select CAId"
 msgstr "בחר"
 
+#
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Select a movie"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -10900,6 +11005,10 @@ msgstr "Select upgrade source to edit."
 #, fuzzy
 msgid "Select Service"
 msgstr "Select a movie"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Select upgrade source to edit."
 
 #, fuzzy
 msgid "Select Software Update"
@@ -11134,6 +11243,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "select the movie path"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -11239,10 +11354,10 @@ msgstr "בחר מקום גיבוי"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
+msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
 
-msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -11452,6 +11567,9 @@ msgid "Set action when movie playback is finished."
 msgstr "הפעולה כאשר סרט מתחיל"
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -11694,6 +11812,10 @@ msgid "Show Weather Widget"
 msgstr ""
 
 #, fuzzy
+msgid "Show additional information on infobar"
+msgstr "show Infoline"
+
+#, fuzzy
 msgid "Show alternatives"
 msgstr "הראה אלטרנטיבות"
 
@@ -11751,6 +11873,14 @@ msgstr ""
 #, fuzzy
 msgid "Show current mode"
 msgstr "הצג מידע על האירוע"
+
+#, fuzzy
+msgid "Show default after description"
+msgstr "הראה מידע מורחב"
+
+#, fuzzy
+msgid "Show default on new line"
+msgstr "show Infoline"
 
 msgid "Show detailed event info"
 msgstr ""
@@ -11955,10 +12085,21 @@ msgid "Show servicelist or movies"
 msgstr "טען אורך הסרט ברשימת הסרטים"
 
 #, fuzzy
+msgid "Show setup default values"
+msgstr "הצג מידע על האירוע"
+
+#, fuzzy
 msgid "Show simple second infobar"
 msgstr "transponder  הראה מידע על ה"
 
 msgid "Show single service EPG"
+msgstr ""
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "show Infoline"
+
+msgid "Show softcam setup in extensions menu"
 msgstr ""
 
 msgid "Show softcam startup in extensions menu"
@@ -12292,6 +12433,14 @@ msgid "SocketMMI"
 msgstr ""
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "תוכנה"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "תוכנה"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "תוכנה"
 
@@ -12408,6 +12557,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -12548,9 +12700,19 @@ msgstr ""
 msgid "Start"
 msgstr "התחל בדיקה"
 
+#
+#, fuzzy
+msgid "Start Sleeptimer"
+msgstr "זמן התחלה"
+
 #, fuzzy
 msgid "Start directory"
 msgstr "התחל תיקיה"
+
+#
+#, fuzzy
+msgid "Start fastscan"
+msgstr "התחל בדיקה"
 
 #
 msgid "Start from the beginning"
@@ -12599,6 +12761,11 @@ msgstr "timeshift התחל"
 msgid "Start with list screen"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "זמן התחלה"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -12641,6 +12808,11 @@ msgstr "Stop"
 #, fuzzy
 msgid "Stop PiP"
 msgstr "עצור תמונה בתוך תמונה"
+
+#
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "טיימר שינה"
 
 #
 #, fuzzy
@@ -13447,10 +13619,6 @@ msgid "There are currently no outstanding actions."
 msgstr ""
 
 #, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr ".אין עדכונים זמינים"
-
-#, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "...אנא בחר רשימת שמע למחיקה"
 
@@ -13566,6 +13734,12 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr ""
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -13935,6 +14109,10 @@ msgstr ""
 #
 msgid "Today"
 msgstr "היום"
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "תצורת הגדרה"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -14943,11 +15121,6 @@ msgstr ""
 msgid "Wakeup time"
 msgstr "טיימר שינה"
 
-#
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "טיימר שינה"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -15088,7 +15261,13 @@ msgstr "?מה ברצונל לסרוק"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -15412,6 +15591,10 @@ msgstr "צהוב"
 
 msgid "Yellow DVB subtitles"
 msgstr ""
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "בחר מקום גיבוי"
 
 msgid "Yemen"
 msgstr ""
@@ -15852,9 +16035,6 @@ msgstr ""
 msgid "about to start"
 msgstr "about to start"
 
-msgid "activate network adapter configuration"
-msgstr "activate network adapter configuration"
-
 #, fuzzy
 msgid "active"
 msgstr "add alternatives"
@@ -16201,9 +16381,6 @@ msgstr ""
 
 msgid "exit DVD player or return to file browser"
 msgstr "exit DVD player or return to file browser"
-
-msgid "exit network adapter configuration"
-msgstr "exit network adapter configuration"
 
 msgid "exit networkadapter setup menu"
 msgstr "exit networkadapter setup menu"
