--- a/po/is.po
+++ b/po/is.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2011-05-07 12:23+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -235,6 +235,9 @@ msgstr ""
 #
 msgid "%H:%M"
 msgstr "%H:%M"
+
+msgid "%R"
+msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
 msgstr ""
@@ -478,6 +481,10 @@ msgstr[0] " uppfærslur tiltækar."
 msgstr[1] " uppfærslur tiltækar."
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -712,9 +719,6 @@ msgstr ""
 
 #, fuzzy
 msgid "?"
-msgstr "??"
-
-msgid "??"
 msgstr "??"
 
 msgid "A"
@@ -1908,6 +1912,10 @@ msgstr "Suð deyfing"
 msgid "Blue"
 msgstr ""
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "Veldu stað fyrir afrit"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2158,6 +2166,12 @@ msgstr ""
 
 msgid "Cancel"
 msgstr "Hætta við"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2605,6 +2619,11 @@ msgstr "Skerpa"
 
 msgid "Common Interface"
 msgstr "Afruglara tengi"
+
+#
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "EPG val"
 
 msgid "Communication"
 msgstr "Samskipti"
@@ -3571,6 +3590,11 @@ msgstr "Byrja upptöku?"
 msgid "Default+Picon"
 msgstr "Upphafs stillingar"
 
+#
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Venjulegt"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3668,6 +3692,12 @@ msgstr "eyða skrá"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "eyða atriði úr spilunarlista"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #
 #, fuzzy
@@ -3926,6 +3956,10 @@ msgstr "Stoppa núverandi atriði en halda komandi atriðum"
 msgid "Disable move mode"
 msgstr "hætta í færslu stöðu"
 
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Útfærslur tiltækra forma"
+
 msgid "Disable timer"
 msgstr ""
 
@@ -3998,6 +4032,9 @@ msgstr ""
 #, fuzzy
 msgid "Display setup"
 msgstr "Uppsetning skjás"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #, fuzzy
 msgid "Djibouti"
@@ -4245,6 +4282,11 @@ msgstr "þessi upptaka"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "stoppa lifandi pásu"
+
+#
+#, fuzzy
+msgid "Don't show default"
+msgstr "stíll lista venjulegur"
 
 #
 msgid "Don't stop current event but disable coming events"
@@ -4670,6 +4712,11 @@ msgstr "Virkt"
 msgid "Enable volume control with arrow buttons"
 msgstr "Veldu mynd inngang með up/niður tökkum"
 
+#
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Tímastilling"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -4973,6 +5020,9 @@ msgstr "Þarf meira en tveggja laga disk!"
 
 msgid "Exceeds dual layer medium!"
 msgstr "Þarf meira en tveggja laga disk!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 msgid "Execution finished!!"
 msgstr "Keyrslu lokið!!"
@@ -6150,9 +6200,6 @@ msgstr "Falið netkerfi"
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr ""
 
@@ -6472,6 +6519,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6906,7 +6956,7 @@ msgstr "Ítalska"
 msgid "Italy"
 msgstr "Ítalska"
 
-msgid "Items per page "
+msgid "Items per page"
 msgstr ""
 
 msgid "Items per page for list screen"
@@ -6939,6 +6989,12 @@ msgstr ""
 #, fuzzy
 msgid "Jump to end of list"
 msgstr "fara í enda listans"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #
 #, fuzzy
@@ -7581,6 +7637,10 @@ msgstr ""
 msgid "Menu"
 msgstr "Valmynd"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "Veldu stað fyrir afrit"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7836,6 +7896,16 @@ msgstr "Virkja Mynd í Mynd"
 
 #
 #, fuzzy
+msgid "Move down a line"
+msgstr "Færa vestur"
+
+#
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Færa vestur"
+
+#
+#, fuzzy
 msgid "Move down list"
 msgstr "Færa vestur"
 
@@ -7889,6 +7959,16 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "fara niður í næsta atriði"
+
+#
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "fara niður í næsta atriði"
+
 msgid "Move to position X"
 msgstr ""
 
@@ -7911,6 +7991,16 @@ msgstr "fara til baka á fyrri kafla"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "fara upp í næsta atriði"
+
+#
+#, fuzzy
+msgid "Move up a line"
+msgstr "Færa austur"
+
+#
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Færa austur"
 
 #
 #, fuzzy
@@ -8955,9 +9045,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 #
 msgid "Package list update"
 msgstr "Listi uppfærðra pakka"
@@ -9575,6 +9662,10 @@ msgstr "Vinsamlega bíðið á meðan við prufum net tengingu..."
 msgid "Please wait, Loading image."
 msgstr "Vinsamlega bíðið.. les inn lista..."
 
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Vinsamlega bíðið.. les inn lista..."
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -9584,6 +9675,14 @@ msgstr "Vinsamlega bíðið.. les inn lista..."
 
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Vinsamlega bíðið.. les inn lista..."
+
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Vinsamlega bíðið.. les inn lista..."
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Vinsamlega bíðið.. les inn lista..."
 
 #
@@ -10256,9 +10355,6 @@ msgstr "Mið"
 msgid "Recall to previous service"
 msgstr "Til  baka á síðustu rás"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #
 #, fuzzy
 msgid "Reception lists"
@@ -10699,6 +10795,11 @@ msgstr "Endurræsi netkort"
 msgid "Restart both"
 msgstr "Prufa aftur"
 
+#
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "Skipta á rásum"
+
 msgid "Restart enigma"
 msgstr ""
 
@@ -10711,6 +10812,11 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Prufa aftur"
 
 #
 msgid "Restart test"
@@ -11091,6 +11197,11 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "vista spilunarlista þegar hætt er"
+
+#
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Ýttu á OK til að velja valið skinn."
 
@@ -11449,6 +11560,11 @@ msgstr ""
 msgid "Select CAId"
 msgstr "veldu CAId"
 
+#
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Veldu mynd"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -11466,6 +11582,11 @@ msgstr "Veldu upphafs slóð til að breyta."
 #, fuzzy
 msgid "Select Service"
 msgstr "Veldu mynd"
+
+#
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Veldu upphafs slóð til að breyta."
 
 #
 #, fuzzy
@@ -11716,6 +11837,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "velja slóð að mynd"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -11831,10 +11958,10 @@ msgstr "Veldu stað fyrir afrit"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
+msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
 
-msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -12056,6 +12183,9 @@ msgid "Set action when movie playback is finished."
 msgstr "Aðgerð þegar mynd byrjar"
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -12305,6 +12435,10 @@ msgstr "Sýna WLAN stöðu"
 msgid "Show Weather Widget"
 msgstr ""
 
+#, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Upplýsingar hugbúnaðar umsýslu"
+
 #
 #, fuzzy
 msgid "Show alternatives"
@@ -12367,6 +12501,16 @@ msgstr ""
 #, fuzzy
 msgid "Show current mode"
 msgstr "sýna atriði nánar"
+
+#
+#, fuzzy
+msgid "Show default after description"
+msgstr "sýna auka upplýsingar"
+
+#
+#, fuzzy
+msgid "Show default on new line"
+msgstr "sýna upplýsingalínu"
 
 msgid "Show detailed event info"
 msgstr ""
@@ -12580,10 +12724,22 @@ msgstr "Hlaða inn lengd myndar í myndalista"
 
 #
 #, fuzzy
+msgid "Show setup default values"
+msgstr "sýna atriði nánar"
+
+#
+#, fuzzy
 msgid "Show simple second infobar"
 msgstr "sýna upplýsingar um sendi"
 
 msgid "Show single service EPG"
+msgstr ""
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Upplýsingar hugbúnaðar umsýslu"
+
+msgid "Show softcam setup in extensions menu"
 msgstr ""
 
 msgid "Show softcam startup in extensions menu"
@@ -12933,6 +13089,16 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Hugbúnaður"
+
+#
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Hugbúnaður"
+
+#
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Hugbúnaður"
 
@@ -13058,6 +13224,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -13206,8 +13375,18 @@ msgstr "Byrja prófun"
 
 #
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Byrjunartími"
+
+#
+#, fuzzy
 msgid "Start directory"
 msgstr "byrjunar mappa"
+
+#
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Byrja prófun"
 
 #
 msgid "Start from the beginning"
@@ -13258,6 +13437,11 @@ msgstr "byrja lifandi pásu"
 msgid "Start with list screen"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Byrjunartími"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -13303,6 +13487,11 @@ msgstr "Stopp"
 #, fuzzy
 msgid "Stop PiP"
 msgstr "hætta með PiP"
+
+#
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Tímastilling"
 
 #
 #, fuzzy
@@ -14152,10 +14341,6 @@ msgstr "Það er engin uppfærsla tiltæk."
 msgid "There are currently no outstanding actions."
 msgstr "Það er ekkert atriði sem að liggur fyrir."
 
-#, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "Það er engin uppfærsla tiltæk."
-
 #
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -14274,6 +14459,12 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr ""
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -14658,6 +14849,10 @@ msgstr ""
 #
 msgid "Today"
 msgstr "Í dag"
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Stillinga hamur"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -15727,11 +15922,6 @@ msgstr ""
 msgid "Wakeup time"
 msgstr "Tímastilling"
 
-#
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Tímastilling"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -15887,7 +16077,13 @@ msgstr "Að hverju viltu leita?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -16221,6 +16417,10 @@ msgstr "gulur"
 
 msgid "Yellow DVB subtitles"
 msgstr ""
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Veldu stað fyrir afrit"
 
 msgid "Yemen"
 msgstr ""
@@ -16683,9 +16883,6 @@ msgstr "viðmót til að tengja rásir/sendendur/caid við afruglara í tengi fy
 msgid "about to start"
 msgstr "er að byrja"
 
-msgid "activate network adapter configuration"
-msgstr "virkja stillingar netkorts"
-
 #
 #, fuzzy
 msgid "active"
@@ -17061,10 +17258,6 @@ msgstr ""
 #
 msgid "exit DVD player or return to file browser"
 msgstr "hætta í DVD spilara og fara til baka í skráarvafra"
-
-#
-msgid "exit network adapter configuration"
-msgstr "fara úr netkorts stillingum"
 
 #
 msgid "exit networkadapter setup menu"
