--- a/po/ku.po
+++ b/po/ku.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2013-04-22 04:29+0330\n"
 "Last-Translator: dimili21\n"
 "Language-Team: \n"
@@ -227,6 +227,9 @@ msgstr "%A %e %B %Y"
 
 msgid "%H:%M"
 msgstr "%H:%M"
+
+msgid "%R"
+msgstr ""
 
 #, fuzzy
 msgid "%Y-%m-%d %H:%M:%S"
@@ -453,6 +456,10 @@ msgid_plural "%s updated packages available"
 msgstr[0] "%s updated package available"
 msgstr[1] "%s updated packages available"
 
+#, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
 #, fuzzy, python-format
 msgid "%s: %s"
 msgstr "%s/%s: %s"
@@ -664,9 +671,6 @@ msgstr ""
 
 #, fuzzy
 msgid "?"
-msgstr "??"
-
-msgid "??"
 msgstr "??"
 
 msgid "A"
@@ -1761,6 +1765,10 @@ msgstr "Dengé zéde kémke"
 msgid "Blue"
 msgstr ""
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "Select backup location"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2000,6 +2008,12 @@ msgstr ""
 
 msgid "Cancel"
 msgstr "Berdi"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2441,6 +2455,10 @@ msgstr "Contrast"
 
 msgid "Common Interface"
 msgstr "Qerta Ortax"
+
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "EPG selection"
 
 msgid "Communication"
 msgstr "Hevra Girédayi"
@@ -3348,6 +3366,10 @@ msgstr "Recording type"
 msgid "Default+Picon"
 msgstr "Default settings"
 
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Default"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3439,6 +3461,12 @@ msgstr "Delete file"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "Delete playlist entry"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #, fuzzy
 msgid "Delete current line"
@@ -3660,6 +3688,10 @@ msgstr "Stop current event but not coming events"
 msgid "Disable move mode"
 msgstr "disable move mode"
 
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Available format variables"
+
 msgid "Disable timer"
 msgstr "Disable timer"
 
@@ -3719,6 +3751,9 @@ msgstr ""
 
 msgid "Display setup"
 msgstr "Çékirina Roniya Ekran"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #, fuzzy
 msgid "Djibouti"
@@ -3935,6 +3970,10 @@ msgstr "this recording"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "Stop timeshift"
+
+#, fuzzy
+msgid "Don't show default"
+msgstr "list style default"
 
 msgid "Don't stop current event but disable coming events"
 msgstr "Don't stop current event but disable coming events"
@@ -4325,6 +4364,10 @@ msgstr "Enabled"
 msgid "Enable volume control with arrow buttons"
 msgstr "Select video input with up/down buttons"
 
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Sleep timer"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -4603,6 +4646,9 @@ msgstr "Exceeds dual layer medium!"
 
 msgid "Exceeds dual layer medium!"
 msgstr "Exceeds dual layer medium!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 msgid "Execution finished!!"
 msgstr "Execution finished!!"
@@ -5658,9 +5704,6 @@ msgstr "Hidden network"
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr "Hide channel list in radio mode"
 
@@ -5958,6 +6001,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6334,7 +6380,8 @@ msgstr "Italian"
 msgid "Italy"
 msgstr "Italian"
 
-msgid "Items per page "
+#, fuzzy
+msgid "Items per page"
 msgstr "Items per page "
 
 msgid "Items per page for list screen"
@@ -6363,6 +6410,12 @@ msgstr "Jump to beginning of list"
 
 msgid "Jump to end of list"
 msgstr "Jump to end of list"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 msgid "Jump to next marked position"
 msgstr "Jump to next marked position"
@@ -6908,6 +6961,10 @@ msgstr ""
 msgid "Menu"
 msgstr "Menu"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "Select backup location"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7136,6 +7193,14 @@ msgid "Move Picture in Picture"
 msgstr "Aktif bike resm o resm"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Go down the list"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Go down the list"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Go down the list"
 
@@ -7183,6 +7248,14 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "move down to next entry"
+
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "move down to next entry"
+
 msgid "Move to position X"
 msgstr "Move to position X"
 
@@ -7201,6 +7274,14 @@ msgstr "rewind to the previous chapter"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "move up to previous entry"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Go up the list"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Go up the list"
 
 #, fuzzy
 msgid "Move up list"
@@ -8137,9 +8218,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 msgid "Package list update"
 msgstr "Package list update"
 
@@ -8657,6 +8735,10 @@ msgstr "Please wait while we test your network..."
 msgid "Please wait, Loading image."
 msgstr "Please wait... Loading list..."
 
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Please wait (downloading softcam)"
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -8666,6 +8748,14 @@ msgstr "Please wait (downloading softcam)"
 
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Please wait (downloading softcam)"
+
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Please wait (downloading softcam)"
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Please wait (downloading softcam)"
 
 msgid "Please wait..."
@@ -9257,9 +9347,6 @@ msgstr "Rec"
 msgid "Recall to previous service"
 msgstr "Return to previous service"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #, fuzzy
 msgid "Reception lists"
 msgstr "Reception settings"
@@ -9630,6 +9717,10 @@ msgstr "Restart network"
 msgid "Restart both"
 msgstr "Restart test"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "set as startup service"
+
 msgid "Restart enigma"
 msgstr "Restart enigma"
 
@@ -9641,6 +9732,10 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Restart test"
 
 msgid "Restart test"
 msgstr "Restart test"
@@ -9975,6 +10070,10 @@ msgid "Save EPG every (in hours)"
 msgstr ""
 
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "save playlist on exit"
+
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Press OK to activate the selected skin."
 
@@ -10286,6 +10385,10 @@ msgstr ""
 msgid "Select CAId"
 msgstr "Select CAId"
 
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Select movie"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -10300,6 +10403,10 @@ msgstr "Select upgrade source"
 #, fuzzy
 msgid "Select Service"
 msgstr "Select movie"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Select upgrade source"
 
 #, fuzzy
 msgid "Select Software Update"
@@ -10513,6 +10620,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "Select the movie path"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -10616,10 +10729,10 @@ msgstr "Select backup location"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
-msgstr "Select your provider, and press OK to start the scan"
-
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -10804,6 +10917,9 @@ msgid "Set action when movie playback is finished."
 msgstr "Configure the behavior when movie playback is started."
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -11024,6 +11140,10 @@ msgid "Show Weather Widget"
 msgstr ""
 
 #, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Show crypto info in infobar"
+
+#, fuzzy
 msgid "Show alternatives"
 msgstr "show alternatives"
 
@@ -11080,6 +11200,14 @@ msgstr "Show crypto info in infobar"
 #, fuzzy
 msgid "Show current mode"
 msgstr "Show event details"
+
+#, fuzzy
+msgid "Show default after description"
+msgstr "Show extended description"
+
+#, fuzzy
+msgid "Show default on new line"
+msgstr "Show info line"
 
 msgid "Show detailed event info"
 msgstr "Show detailed event info"
@@ -11264,11 +11392,23 @@ msgid "Show servicelist or movies"
 msgstr "Show movie lengths in movielist"
 
 #, fuzzy
+msgid "Show setup default values"
+msgstr "Show event details"
+
+#, fuzzy
 msgid "Show simple second infobar"
 msgstr "Show second infobar"
 
 msgid "Show single service EPG"
 msgstr ""
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Softwaremanager information"
+
+#, fuzzy
+msgid "Show softcam setup in extensions menu"
+msgstr "show softwaremanager in setup menu"
 
 #, fuzzy
 msgid "Show softcam startup in extensions menu"
@@ -11563,6 +11703,14 @@ msgid "SocketMMI"
 msgstr ""
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Softcam type"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Softcam type"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Softcam type"
 
@@ -11675,6 +11823,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -11807,8 +11958,16 @@ msgid "Start"
 msgstr "Start test"
 
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Start time"
+
+#, fuzzy
 msgid "Start directory"
 msgstr "start directory"
+
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Start test"
 
 msgid "Start from the beginning"
 msgstr "Start from the beginning"
@@ -11849,6 +12008,10 @@ msgstr "Start timeshift"
 msgid "Start with list screen"
 msgstr "Start with list screen"
 
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Start time"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -11887,6 +12050,10 @@ msgstr "Stop"
 
 msgid "Stop PiP"
 msgstr "Stop PiP"
+
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Sleep timer"
 
 #, fuzzy
 msgid "Stop all current recordings"
@@ -12624,10 +12791,6 @@ msgid "There are currently no outstanding actions."
 msgstr "There are currently no outstanding actions."
 
 #, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "There are no updates available."
-
-#, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "Please select a playlist to delete..."
 
@@ -12741,6 +12904,13 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+#, fuzzy
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr "show softwaremanager in setup menu"
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -13086,6 +13256,10 @@ msgstr "To subtitle selection"
 
 msgid "Today"
 msgstr "Today"
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Configuration mode: %s"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -14024,10 +14198,6 @@ msgstr "Wakeup signal from TV"
 msgid "Wakeup time"
 msgstr "Wakeup"
 
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Sleep timer"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -14180,7 +14350,13 @@ msgstr "What do you want to scan?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -14509,6 +14685,10 @@ msgstr "yellow"
 
 msgid "Yellow DVB subtitles"
 msgstr "Yellow DVB subtitles"
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Select backup location"
 
 #, fuzzy
 msgid "Yemen"
@@ -14962,9 +15142,6 @@ msgstr "a gui to assign services/providers/caids to common interface modules"
 msgid "about to start"
 msgstr "about to start"
 
-msgid "activate network adapter configuration"
-msgstr "activate network adapter configuration"
-
 #, fuzzy
 msgid "active"
 msgstr "Evé din"
@@ -15298,9 +15475,6 @@ msgstr ""
 
 msgid "exit DVD player or return to file browser"
 msgstr "exit DVD player or return to file browser"
-
-msgid "exit network adapter configuration"
-msgstr "exit network adapter configuration"
 
 msgid "exit networkadapter setup menu"
 msgstr "exit networkadapter setup menu"
