--- a/po/lt.po
+++ b/po/lt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2020-02-29 08:52+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
@@ -221,6 +221,9 @@ msgstr ""
 
 msgid "%H:%M"
 msgstr "%H:%M"
+
+msgid "%R"
+msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
 msgstr ""
@@ -447,6 +450,10 @@ msgstr[0] " pasiekiami atnaujinimai."
 msgstr[1] " pasiekiami atnaujinimai."
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -657,9 +664,6 @@ msgstr ""
 
 #, fuzzy
 msgid "?"
-msgstr "??"
-
-msgid "??"
 msgstr "??"
 
 msgid "A"
@@ -1771,6 +1775,10 @@ msgstr "Blokuoti triukšmo mažėjimą"
 msgid "Blue"
 msgstr ""
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "Išsirinkite atsarginės kopijos vietą"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2011,6 +2019,12 @@ msgstr ""
 
 msgid "Cancel"
 msgstr "Atšaukti"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2449,6 +2463,10 @@ msgstr "Kontrastas"
 
 msgid "Common Interface"
 msgstr "Įstatomi moduliai"
+
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "EPG pasirinkimas"
 
 msgid "Communication"
 msgstr "Komunikacija"
@@ -3371,6 +3389,10 @@ msgstr "Pradėti įrašymą?"
 msgid "Default+Picon"
 msgstr "Numatytieji nustatymai"
 
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Numatyta"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3462,6 +3484,12 @@ msgstr "trinti failą"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "trinti įrašą iš grojaraščio "
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #, fuzzy
 msgid "Delete current line"
@@ -3683,6 +3711,10 @@ msgstr "Sustabdyti dabartinę užduotį, nevykdant sekančių užduočių"
 msgid "Disable move mode"
 msgstr "išjungti perkėlimą"
 
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Galimi formatai"
+
 msgid "Disable timer"
 msgstr ""
 
@@ -3744,6 +3776,9 @@ msgstr ""
 #, fuzzy
 msgid "Display setup"
 msgstr "Monitoriaus parametrai"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #, fuzzy
 msgid "Djibouti"
@@ -3961,6 +3996,10 @@ msgstr "tai įrašyta"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "išjungti laiko poslinkį"
+
+#, fuzzy
+msgid "Don't show default"
+msgstr "numatytas sąrašo stilius"
 
 msgid "Don't stop current event but disable coming events"
 msgstr "Nestabdyti dabartinės užduoties, o išjungti sekančią užduotį"
@@ -4350,6 +4389,10 @@ msgstr "Įjungta"
 msgid "Enable volume control with arrow buttons"
 msgstr "Išsirinkite vaizdo įėjimą su mygtukais aukštyn/žemyn"
 
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Budėjimo laikmatis"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -4640,6 +4683,9 @@ msgstr "Viršyja dvejų sluoksnių laikmeną!"
 
 msgid "Exceeds dual layer medium!"
 msgstr "Viršyja dvejų sluoksnių laikmeną!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 msgid "Execution finished!!"
 msgstr "Vykdymas baigtas!!"
@@ -5706,9 +5752,6 @@ msgstr "Paslėptas tinklas"
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr ""
 
@@ -6007,6 +6050,9 @@ msgid "Import from remote receiver URL"
 msgstr "Importuoti iš nuotolinio imtuvo URL"
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6393,7 +6439,7 @@ msgstr "Italų"
 msgid "Italy"
 msgstr "Italų"
 
-msgid "Items per page "
+msgid "Items per page"
 msgstr ""
 
 msgid "Items per page for list screen"
@@ -6424,6 +6470,12 @@ msgstr ""
 #, fuzzy
 msgid "Jump to end of list"
 msgstr "šuolis į pabaigos sąrašą"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #, fuzzy
 msgid "Jump to next marked position"
@@ -6989,6 +7041,10 @@ msgstr ""
 msgid "Menu"
 msgstr "Meniu"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "Išsirinkite atsarginės kopijos vietą"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7216,6 +7272,14 @@ msgid "Move Picture in Picture"
 msgstr "Aktyvuoti paveikslėlį paveikslėlyje"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Sukti į vakarus"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Sukti į vakarus"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Sukti į vakarus"
 
@@ -7263,6 +7327,14 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "perkelti žemyn prie kito įėjimo"
+
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "perkelti žemyn prie kito įėjimo"
+
 msgid "Move to position X"
 msgstr ""
 
@@ -7281,6 +7353,14 @@ msgstr "atsukti į ankstesnį skyrių"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "perkelti aukštyn prie ankstesnio įėjimo"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Sukti į rytus"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Sukti į rytus"
 
 #, fuzzy
 msgid "Move up list"
@@ -8218,9 +8298,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 msgid "Package list update"
 msgstr "Paketo sąrašo atnaujinimas"
 
@@ -8748,6 +8825,10 @@ msgstr "Prašome laukti kol testuojamas jūsų tinklas..."
 msgid "Please wait, Loading image."
 msgstr "Prašome laukti... Užkraunamas sąrašas..."
 
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Prašome laukti... Užkraunamas sąrašas..."
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -8757,6 +8838,14 @@ msgstr "Prašome laukti... Užkraunamas sąrašas..."
 
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Prašome laukti... Užkraunamas sąrašas..."
+
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Prašome laukti... Užkraunamas sąrašas..."
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Prašome laukti... Užkraunamas sąrašas..."
 
 msgid "Please wait..."
@@ -9348,9 +9437,6 @@ msgstr "Tre"
 msgid "Recall to previous service"
 msgstr "Grįžkite į buvusį kanalą"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #, fuzzy
 msgid "Reception lists"
 msgstr "Priėmimo nustatymai"
@@ -9726,6 +9812,10 @@ msgstr "Paleisti iš naujo tinklą"
 msgid "Restart both"
 msgstr "Paleisti iš naujo testą"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "nustatyti kaip paleidimo kanalą"
+
 msgid "Restart enigma"
 msgstr "Paleisti iš naujo Enigma2"
 
@@ -9737,6 +9827,10 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Paleisti iš naujo testą"
 
 msgid "Restart test"
 msgstr "Paleisti iš naujo testą"
@@ -10068,6 +10162,10 @@ msgid "Save EPG every (in hours)"
 msgstr ""
 
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "išsaugoti grojaraštį išeinant"
+
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Spauskite OK, kad aktyvuoti pasirinktą temą."
 
@@ -10387,6 +10485,10 @@ msgstr ""
 msgid "Select CAId"
 msgstr "išsirinkite CAId"
 
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Išsirinkite filmą"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -10401,6 +10503,10 @@ msgstr "Išsirinkite atnaujinimo šaltinį dėl redagavimo."
 #, fuzzy
 msgid "Select Service"
 msgstr "Išsirinkite filmą"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Išsirinkite atnaujinimo šaltinį dėl redagavimo."
 
 #, fuzzy
 msgid "Select Software Update"
@@ -10622,6 +10728,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "pasirinkite filmo kelią"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -10726,10 +10838,10 @@ msgstr "Išsirinkite atsarginės kopijos vietą"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
+msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
 
-msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -10917,6 +11029,9 @@ msgid "Set action when movie playback is finished."
 msgstr "Elgsena, kai filmas prasidėjęs"
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -11145,6 +11260,10 @@ msgid "Show Weather Widget"
 msgstr ""
 
 #, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Rodyti kodavimo informaciją infojuostoje"
+
+#, fuzzy
 msgid "Show alternatives"
 msgstr "rodyti kitus"
 
@@ -11202,6 +11321,14 @@ msgstr "Rodyti kodavimo informaciją infojuostoje"
 #, fuzzy
 msgid "Show current mode"
 msgstr "rodyti užduočių detales"
+
+#, fuzzy
+msgid "Show default after description"
+msgstr "rodyti išplėstą informaciją"
+
+#, fuzzy
+msgid "Show default on new line"
+msgstr "rodyti informacijos eilutę"
 
 msgid "Show detailed event info"
 msgstr ""
@@ -11392,10 +11519,21 @@ msgid "Show servicelist or movies"
 msgstr "Rodyti statuso ikonas filmų sąraše"
 
 #, fuzzy
+msgid "Show setup default values"
+msgstr "rodyti užduočių detales"
+
+#, fuzzy
 msgid "Show simple second infobar"
 msgstr "Rodyti kodavimo informaciją infojuostoje"
 
 msgid "Show single service EPG"
+msgstr ""
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Programinės įrangos valdymo informacija"
+
+msgid "Show softcam setup in extensions menu"
 msgstr ""
 
 msgid "Show softcam startup in extensions menu"
@@ -11699,6 +11837,14 @@ msgid "SocketMMI"
 msgstr ""
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Programinė įranga"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Programinė įranga"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Programinė įranga"
 
@@ -11813,6 +11959,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -11946,8 +12095,16 @@ msgid "Start"
 msgstr "Pradėti testą"
 
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Paleidimo pradžia"
+
+#, fuzzy
 msgid "Start directory"
 msgstr "pradėti direktoriją"
+
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Pradėti testą"
 
 msgid "Start from the beginning"
 msgstr "Pradžia nuo pradžios"
@@ -11990,6 +12147,10 @@ msgstr "pradėti laiko poslinkį"
 msgid "Start with list screen"
 msgstr ""
 
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Paleidimo pradžia"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -12028,6 +12189,10 @@ msgstr "Stabdyti"
 #, fuzzy
 msgid "Stop PiP"
 msgstr "stabdyti PiP"
+
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Budėjimo laikmatis"
 
 #, fuzzy
 msgid "Stop all current recordings"
@@ -12779,10 +12944,6 @@ msgid "There are currently no outstanding actions."
 msgstr "Nėra šiuo metu jokių neatliktų veiksmų."
 
 #, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "Nėra jokių pasiekiamų atnaujinimų."
-
-#, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "Prašome išsirinkti ką norite trinti iš grojaraščio..."
 
@@ -12896,6 +13057,12 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr ""
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -13246,6 +13413,10 @@ msgstr ""
 
 msgid "Today"
 msgstr "Šiandien"
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Konfigūravimo būdas"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -14193,10 +14364,6 @@ msgstr ""
 msgid "Wakeup time"
 msgstr "Budėjimo laikmatis"
 
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Budėjimo laikmatis"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -14340,7 +14507,13 @@ msgstr "Ką Jūs norite skanuoti?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -14662,6 +14835,10 @@ msgstr "geltonas"
 
 msgid "Yellow DVB subtitles"
 msgstr ""
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Išsirinkite atsarginės kopijos vietą"
 
 msgid "Yemen"
 msgstr ""
@@ -15092,9 +15269,6 @@ msgstr "kad paskirtų kanalus/tiekėjus/caids bendriems įstatomiems moduliams"
 msgid "about to start"
 msgstr "apie pradžią"
 
-msgid "activate network adapter configuration"
-msgstr "aktyvuokite tinklo plokštės konfigūraciją"
-
 #, fuzzy
 msgid "active"
 msgstr "pridėti kitus"
@@ -15428,9 +15602,6 @@ msgstr ""
 
 msgid "exit DVD player or return to file browser"
 msgstr "išeiti iš DVD grotuvo arba sugrįžti į failų naršyklę"
-
-msgid "exit network adapter configuration"
-msgstr "išeiti iš tinklo adapterio konfigūracijos"
 
 msgid "exit networkadapter setup menu"
 msgstr "išeiti iš tinklo adapterio nustatymų meniu"
