--- a/po/lv.po
+++ b/po/lv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2014-11-12 00:49+0200\n"
 "Last-Translator: Taapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -226,6 +226,9 @@ msgstr "%A %e %B %Y"
 
 msgid "%H:%M"
 msgstr "%H:%M"
+
+msgid "%R"
+msgstr ""
 
 #, fuzzy
 msgid "%Y-%m-%d %H:%M:%S"
@@ -465,6 +468,10 @@ msgstr[0] "%s pakotnes atjaunojums pieejams"
 msgstr[1] "%s pakotņu atjaunojumi pieejami"
 msgstr[2] "%s pakotņu atjaunojumi pieejami"
 
+#, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
 #, fuzzy, python-format
 msgid "%s: %s"
 msgstr "%s/%s: %s"
@@ -678,9 +685,6 @@ msgstr ""
 
 #, fuzzy
 msgid "?"
-msgstr "??"
-
-msgid "??"
 msgstr "??"
 
 msgid "A"
@@ -1778,6 +1782,10 @@ msgstr "Bloķēt trokšņu slāpēšanu"
 msgid "Blue"
 msgstr ""
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "Izvēlieties dublējumkopijas atrašanās vietu"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2017,6 +2025,12 @@ msgstr ""
 
 msgid "Cancel"
 msgstr "Atcelt"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2459,6 +2473,10 @@ msgstr "Kontrasts"
 
 msgid "Common Interface"
 msgstr "Common interfeiss"
+
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "EPG izvēle"
 
 msgid "Communication"
 msgstr "Komunikācija"
@@ -3367,6 +3385,10 @@ msgstr "Ieraksta tips"
 msgid "Default+Picon"
 msgstr "Noklusējuma iestatījumi"
 
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Noklusējuma"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3458,6 +3480,12 @@ msgstr "Dzēst failu"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "Dzēst repertuāra ierakstu"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #, fuzzy
 msgid "Delete current line"
@@ -3679,6 +3707,10 @@ msgstr "Apturēt pašreizējo notikumu, bet ne nākamos notikumus"
 msgid "Disable move mode"
 msgstr "izslēgt pārvietošanas režīmu"
 
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Pieejamie mainīgo formāti"
+
 msgid "Disable timer"
 msgstr ""
 
@@ -3740,6 +3772,9 @@ msgstr ""
 # ?
 msgid "Display setup"
 msgstr "Displeja iestatījumi"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #, fuzzy
 msgid "Djibouti"
@@ -3956,6 +3991,10 @@ msgstr "šim ierakstam"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "Apturēt laika aizturi"
+
+#, fuzzy
+msgid "Don't show default"
+msgstr "noklusētais saraksta stils"
 
 msgid "Don't stop current event but disable coming events"
 msgstr "Neapturēt pašreizējo notikumu bet izslēgt nākamos notikumus"
@@ -4347,6 +4386,10 @@ msgstr "Aktivizēts"
 msgid "Enable volume control with arrow buttons"
 msgstr "Izvēlieties video ieeju ar augšup/lejup pogām"
 
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Miega taimeris"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -4636,6 +4679,9 @@ msgstr "Pārsniedz divslāņu datu nesēja ietilpību!"
 
 msgid "Exceeds dual layer medium!"
 msgstr "Pārsniedz divslāņu datu nesēja ietilpību!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 msgid "Execution finished!!"
 msgstr "Izpilde pabeigta!!"
@@ -5694,9 +5740,6 @@ msgstr "Neredzams tīkls"
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr "Slēpt kanālu sarakstu radio režīmā"
 
@@ -5994,6 +6037,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6370,7 +6416,8 @@ msgstr "Itāļu"
 msgid "Italy"
 msgstr "Itāļu"
 
-msgid "Items per page "
+#, fuzzy
+msgid "Items per page"
 msgstr "Daudzums lapā"
 
 msgid "Items per page for list screen"
@@ -6399,6 +6446,12 @@ msgstr "Pārlekt uz saraksta sākumu"
 
 msgid "Jump to end of list"
 msgstr "Pārlēkt uz saraksta beigām"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 msgid "Jump to next marked position"
 msgstr "Pārlēkt uz nākamo iezīmēto pozīciju"
@@ -6946,6 +6999,10 @@ msgstr ""
 msgid "Menu"
 msgstr "Izvēlne"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "Izvēlieties dublējumkopijas atrašanās vietu"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7172,6 +7229,14 @@ msgid "Move Picture in Picture"
 msgstr "Aktivizēt funkciju attēls attēlā"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Iet uz saraksta leju"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Iet uz saraksta leju"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Iet uz saraksta leju"
 
@@ -7219,6 +7284,14 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "pārvietot lejup uz nākamo ierakstu"
+
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "pārvietot lejup uz nākamo ierakstu"
+
 msgid "Move to position X"
 msgstr "Griezt uz pozīciju X"
 
@@ -7237,6 +7310,14 @@ msgstr "atgriezties uz iepriekšējo nodaļu"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "pārvietot augšup uz iepriekšējo ierakstu"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Iet uz saraksta augšu"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Iet uz saraksta augšu"
 
 #, fuzzy
 msgid "Move up list"
@@ -8174,9 +8255,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 msgid "Package list update"
 msgstr "Pakotņu saraksta atjaunināšana"
 
@@ -8694,6 +8772,10 @@ msgstr "Lūdzu uzgaidiet kamēr pārbauda tīklu..."
 msgid "Please wait, Loading image."
 msgstr "Lūdzu uzgaidiet... Ielādē sarakstu..."
 
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Lūdzu uzgaidiet (ielādē softcam.)"
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -8703,6 +8785,14 @@ msgstr "Lūdzu uzgaidiet (ielādē softcam.)"
 
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Lūdzu uzgaidiet (ielādē softcam.)"
+
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Lūdzu uzgaidiet (ielādē softcam.)"
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Lūdzu uzgaidiet (ielādē softcam.)"
 
 msgid "Please wait..."
@@ -9294,9 +9384,6 @@ msgstr "Ier"
 msgid "Recall to previous service"
 msgstr "Atgriezties uz iepriekšējo kanālu"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #, fuzzy
 msgid "Reception lists"
 msgstr "Uztveršanas iestatījumi"
@@ -9667,6 +9754,10 @@ msgstr "Pārstartēt tīklu"
 msgid "Restart both"
 msgstr "Atkārtot testu"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "uzstādīt kā starta kanālu"
+
 msgid "Restart enigma"
 msgstr "Pārstartēt enigmu"
 
@@ -9678,6 +9769,10 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Atkārtot testu"
 
 msgid "Restart test"
 msgstr "Atkārtot testu"
@@ -10014,6 +10109,10 @@ msgid "Save EPG every (in hours)"
 msgstr ""
 
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "izejot, saglabāt repertuāru"
+
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Spiediet OK lai aktivizētu izvēlēto ādiņu."
 
@@ -10329,6 +10428,10 @@ msgstr ""
 msgid "Select CAId"
 msgstr "Izvēlieties CAId"
 
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Izvēlieties filmu"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -10343,6 +10446,10 @@ msgstr "Izvēlieties atjaunināšanas avotu"
 #, fuzzy
 msgid "Select Service"
 msgstr "Izvēlieties filmu"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Izvēlieties atjaunināšanas avotu"
 
 #, fuzzy
 msgid "Select Software Update"
@@ -10556,6 +10663,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "Izvēlieties filmas ceļu"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -10660,10 +10773,10 @@ msgstr "Izvēlieties dublējumkopijas atrašanās vietu"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
-msgstr "Izvēlieties jūsu operatoru un nospiediet OK lai sāktu meklēt"
-
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -10848,6 +10961,9 @@ msgid "Set action when movie playback is finished."
 msgstr "Uzstāda darbību, kad filma ir palaista."
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -11068,6 +11184,10 @@ msgid "Show Weather Widget"
 msgstr ""
 
 #, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Rādīt šifrēšanas info infojoslā"
+
+#, fuzzy
 msgid "Show alternatives"
 msgstr "rādīt alternatīvas"
 
@@ -11124,6 +11244,14 @@ msgstr "Rādīt šifrēšanas info infojoslā"
 #, fuzzy
 msgid "Show current mode"
 msgstr "Rādīt notikuma detaļas"
+
+#, fuzzy
+msgid "Show default after description"
+msgstr "Rādīt paplašināto aprakstu"
+
+#, fuzzy
+msgid "Show default on new line"
+msgstr "Rādīt infojoslu"
 
 msgid "Show detailed event info"
 msgstr "Rādīt detalizētu notikumu info"
@@ -11308,11 +11436,23 @@ msgid "Show servicelist or movies"
 msgstr "Rādīt kanālu tipu ikonas"
 
 #, fuzzy
+msgid "Show setup default values"
+msgstr "Rādīt notikuma detaļas"
+
+#, fuzzy
 msgid "Show simple second infobar"
 msgstr "Rādīt otro infojoslu"
 
 msgid "Show single service EPG"
 msgstr "Rādīt atsevišķa kanāla EPG"
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Programmatūras pārvaldnieka informācija"
+
+#, fuzzy
+msgid "Show softcam setup in extensions menu"
+msgstr "Rādīt paplašinājumu izvēlnē"
 
 #, fuzzy
 msgid "Show softcam startup in extensions menu"
@@ -11607,6 +11747,14 @@ msgid "SocketMMI"
 msgstr ""
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Softcam tips"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Softcam tips"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Softcam tips"
 
@@ -11719,6 +11867,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -11854,8 +12005,16 @@ msgid "Start"
 msgstr "Sākt pārbaudi"
 
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Miega taimeris"
+
+#, fuzzy
 msgid "Start directory"
 msgstr "sākuma mape"
+
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Sākt pārbaudi"
 
 msgid "Start from the beginning"
 msgstr "Sākt no sākuma"
@@ -11896,6 +12055,10 @@ msgstr "Sākt laika aizturi"
 msgid "Start with list screen"
 msgstr "Sākt ar saraksta logu"
 
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Neaktivitātes miega taimeris"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -11933,6 +12096,10 @@ msgstr "Apturēt"
 
 msgid "Stop PiP"
 msgstr "Apturēt PiP"
+
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Miega taimeris"
 
 #, fuzzy
 msgid "Stop all current recordings"
@@ -12672,10 +12839,6 @@ msgid "There are currently no outstanding actions."
 msgstr "Pašlaik nav aktuālu darbību."
 
 #, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "Pašlaik atjauninājumi nav pieejami."
-
-#, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "Lūdzu izvēlieties repertuāru dzēšanai..."
 
@@ -12789,6 +12952,13 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+#, fuzzy
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr "Rādīt paplašinājumu izvēlnē"
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -13134,6 +13304,10 @@ msgstr "Uz subtitru iestatīšanu"
 
 msgid "Today"
 msgstr "Šodien"
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Konfigurēšanas režīms: %s"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -14075,10 +14249,6 @@ msgstr "Pamodināšanas signāls no TV"
 msgid "Wakeup time"
 msgstr "Pamodināt"
 
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Miega taimeris"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -14231,7 +14401,13 @@ msgstr "Ko Jūs vēlaties meklēt?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 #, fuzzy
@@ -14563,6 +14739,10 @@ msgstr "dzeltenā"
 
 msgid "Yellow DVB subtitles"
 msgstr "Dzelteni DVB subtitri"
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Izvēlieties dublējumkopijas atrašanās vietu"
 
 #, fuzzy
 msgid "Yemen"
@@ -15016,9 +15196,6 @@ msgstr "gui ko piešķirt kanāliem/operatoriem/caidiem common interfeisa moduļ
 msgid "about to start"
 msgstr "gatavojas sākt"
 
-msgid "activate network adapter configuration"
-msgstr "aktivizēt tīkla adaptera konfigurāciju"
-
 #, fuzzy
 msgid "active"
 msgstr "Alternatīvas"
@@ -15352,9 +15529,6 @@ msgstr ""
 
 msgid "exit DVD player or return to file browser"
 msgstr "iziet no DVD atskaņotāja un atgriezties failu pārlūkā"
-
-msgid "exit network adapter configuration"
-msgstr "iziet no tīkla adaptera konfigurācijas"
 
 msgid "exit networkadapter setup menu"
 msgstr "iziet no tīkla adaptera iestatīšanas izvēlnes"
