--- a/po/nl.po
+++ b/po/nl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -224,6 +224,9 @@ msgstr "%A %e %B %Y"
 
 msgid "%H:%M"
 msgstr "%H:%M"
+
+msgid "%R"
+msgstr ""
 
 #, fuzzy
 msgid "%Y-%m-%d %H:%M:%S"
@@ -450,6 +453,10 @@ msgid_plural "%s updated packages available"
 msgstr[0] "%s nieuw pakket beschikbaar"
 msgstr[1] "%s nieuwe pakketten beschikbaar"
 
+#, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
 #, fuzzy, python-format
 msgid "%s: %s"
 msgstr "%s/%s: %s"
@@ -662,9 +669,6 @@ msgstr ""
 
 #, fuzzy
 msgid "?"
-msgstr "??"
-
-msgid "??"
 msgstr "??"
 
 msgid "A"
@@ -1762,6 +1766,10 @@ msgstr "Blokruisvermindering"
 msgid "Blue"
 msgstr ""
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "Maak uw keuze"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2004,6 +2012,12 @@ msgstr ""
 
 msgid "Cancel"
 msgstr "Annuleren"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2447,6 +2461,10 @@ msgstr "Contrast"
 
 msgid "Common Interface"
 msgstr "Common Interface"
+
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "Maak uw keuze"
 
 msgid "Communication"
 msgstr "Mededeling"
@@ -3519,6 +3537,10 @@ msgstr "Opnamesoort"
 msgid "Default+Picon"
 msgstr "Standaard instellingen"
 
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Standaard"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3610,6 +3632,12 @@ msgstr "Verwijder timer"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "Verwijder een item uit de afspeellijst"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #, fuzzy
 msgid "Delete current line"
@@ -3831,6 +3859,10 @@ msgstr "Stop de huidige timer, maar alle volgende timers toestaan"
 msgid "Disable move mode"
 msgstr "Verplaatsmode deactiveren"
 
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Beschikbare formaten"
+
 msgid "Disable timer"
 msgstr "Timer uitschakelen"
 
@@ -3890,6 +3922,9 @@ msgstr ""
 
 msgid "Display setup"
 msgstr "Instellingen voor het display"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #, fuzzy
 msgid "Djibouti"
@@ -4106,6 +4141,10 @@ msgstr "deze opname"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "Beëindig de timeshift"
+
+#, fuzzy
+msgid "Don't show default"
+msgstr "Zet als standaard"
 
 msgid "Don't stop current event but disable coming events"
 msgstr "Huidige timer niet stoppen, maar toekomstige timers uitschakelen"
@@ -4505,6 +4544,10 @@ msgstr "Ingeschakeld"
 msgid "Enable volume control with arrow buttons"
 msgstr "Selecteer video-ingang met de omhoog / omlaag toetsen"
 
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Sleeptimer"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr "Zappen met de  CH +/-, B +/-, P +/- inschakelen"
 
@@ -4796,6 +4839,9 @@ msgstr "Overschrijdt een dual layer schijf"
 
 msgid "Exceeds dual layer medium!"
 msgstr "Overschrijdt een dual layer schijf"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 msgid "Execution finished!!"
 msgstr "Voortgang voltooid!"
@@ -5859,9 +5905,6 @@ msgstr "Verborgen netwerk"
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr "Verberg de zenderlijst gedurende radiomodus"
 
@@ -6163,6 +6206,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6539,7 +6585,8 @@ msgstr "Italiaans"
 msgid "Italy"
 msgstr "Italiaans"
 
-msgid "Items per page "
+#, fuzzy
+msgid "Items per page"
 msgstr "Items per pagina"
 
 msgid "Items per page for list screen"
@@ -6568,6 +6615,12 @@ msgstr "Spring naar het begin van de lijst"
 
 msgid "Jump to end of list"
 msgstr "Stap naar het eind van de lijst"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 msgid "Jump to next marked position"
 msgstr "Spring naar de volgende markering"
@@ -7114,6 +7167,10 @@ msgstr ""
 msgid "Menu"
 msgstr "Menu"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "Maak uw keuze"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7341,6 +7398,14 @@ msgid "Move Picture in Picture"
 msgstr "Activeer Picture In Picture"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Ga naar beneden"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Ga naar beneden"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Ga naar beneden"
 
@@ -7388,6 +7453,14 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "verplaats omlaag naar volgende ingave"
+
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "verplaats omlaag naar volgende ingave"
+
 msgid "Move to position X"
 msgstr "Ga naar positie X"
 
@@ -7406,6 +7479,14 @@ msgstr "terugspoelen naar vorig hoofdstuk"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "verplaats omhoog naar vorige ingave"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Ga naar boven"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Ga naar boven"
 
 #, fuzzy
 msgid "Move up list"
@@ -8347,9 +8428,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 msgid "Package list update"
 msgstr "Pakketlijst vernieuwen"
 
@@ -8867,6 +8945,10 @@ msgstr "Een ogenblik geduld aub terwijl uw netwerk getest wordt..."
 msgid "Please wait, Loading image."
 msgstr "Even geduld... De lijst wordt geladen..."
 
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Even geduld... (de softcam wordt gedownload)"
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -8876,6 +8958,14 @@ msgstr "Even geduld... (de softcam wordt gedownload)"
 
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Even geduld... (de softcam wordt gedownload)"
+
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Even geduld... (de softcam wordt gedownload)"
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Even geduld... (de softcam wordt gedownload)"
 
 msgid "Please wait..."
@@ -9471,9 +9561,6 @@ msgstr "Rec"
 msgid "Recall to previous service"
 msgstr "Terug naar laatste zender"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #, fuzzy
 msgid "Reception lists"
 msgstr "Ontvangstinstellingen"
@@ -9843,6 +9930,10 @@ msgstr "Netwerk herstarten"
 msgid "Restart both"
 msgstr "Herstart test"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "kanaal kiezen bij opstarten"
+
 msgid "Restart enigma"
 msgstr "Herstart enigma"
 
@@ -9854,6 +9945,10 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Herstart test"
 
 msgid "Restart test"
 msgstr "Herstart test"
@@ -10193,6 +10288,10 @@ msgid "Save EPG every (in hours)"
 msgstr ""
 
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "Bewaar afspeellijst bij het beëindigen"
+
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Druk op OK om de geselecteerde skin te activeren."
 
@@ -10505,6 +10604,10 @@ msgstr ""
 msgid "Select CAId"
 msgstr "Selecteer CAId"
 
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Kies een film"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -10519,6 +10622,10 @@ msgstr "Kies de bron om te upgraden"
 #, fuzzy
 msgid "Select Service"
 msgstr "Kies een film"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Kies de bron om te upgraden"
 
 #, fuzzy
 msgid "Select Software Update"
@@ -10732,6 +10839,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "Selecteer het opnamepad"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -10836,10 +10949,10 @@ msgstr "Maak uw keuze"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
-msgstr "Kies uw provider en druk OK om de scan te starten"
-
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -11027,6 +11140,9 @@ msgstr ""
 "U kunt kiezen uit de volgende opties. Ga door op laatste positie, start vanaf het begin of vraag het de gebruiker."
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -11252,6 +11368,10 @@ msgid "Show Weather Widget"
 msgstr ""
 
 #, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Laat gebruikte kaartlezer zien in informatiebalk"
+
+#, fuzzy
 msgid "Show alternatives"
 msgstr "Alternatieven weergeven"
 
@@ -11308,6 +11428,14 @@ msgstr "Laat gebruikte kaartlezer zien in informatiebalk"
 #, fuzzy
 msgid "Show current mode"
 msgstr "Huidige mode:"
+
+#, fuzzy
+msgid "Show default after description"
+msgstr "Weergave met uitgebreide informatie"
+
+#, fuzzy
+msgid "Show default on new line"
+msgstr "Toon de infolijn"
 
 msgid "Show detailed event info"
 msgstr "Gedetailleerde EPG info weergeven"
@@ -11490,11 +11618,23 @@ msgid "Show servicelist or movies"
 msgstr "Toon iconen van het type service "
 
 #, fuzzy
+msgid "Show setup default values"
+msgstr "EPG details weergeven"
+
+#, fuzzy
 msgid "Show simple second infobar"
 msgstr "Uitgebreid informatiescherm weergeven"
 
 msgid "Show single service EPG"
 msgstr "Toon de EPG van een enkel kanaal"
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Softwarebeheerinformatie"
+
+#, fuzzy
+msgid "Show softcam setup in extensions menu"
+msgstr "Toon softcam instelling in uitbreidings menu"
 
 #, fuzzy
 msgid "Show softcam startup in extensions menu"
@@ -11790,6 +11930,14 @@ msgid "SocketMMI"
 msgstr ""
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Softcamtype"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Softcamtype"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Softcamtype"
 
@@ -11902,6 +12050,9 @@ msgid "Sort list:"
 msgstr "Sorteren op:"
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -12037,8 +12188,16 @@ msgid "Start"
 msgstr "Start test"
 
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Sleeptimer"
+
+#, fuzzy
 msgid "Start directory"
 msgstr "Start map"
+
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Start test"
 
 msgid "Start from the beginning"
 msgstr "Start vanaf het begin"
@@ -12079,6 +12238,10 @@ msgstr "Start de timeshift"
 msgid "Start with list screen"
 msgstr "Start met een zichtbare lijst"
 
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Inactiviteits Sleeptimer"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -12115,6 +12278,10 @@ msgstr "Stop"
 
 msgid "Stop PiP"
 msgstr "Beëindig de PiP"
+
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Sleeptimer"
 
 #, fuzzy
 msgid "Stop all current recordings"
@@ -12854,10 +13021,6 @@ msgid "There are currently no outstanding actions."
 msgstr "Er zijn geen uitstaande acties"
 
 #, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "Er zijn momenteel geen updates beschikbaar"
-
-#, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "Selecteer de afspeellijst die u wilt verwijderen..."
 
@@ -12972,6 +13135,14 @@ msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
 msgstr ""
+
+#, fuzzy
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr "Met deze optie kunnen alle symbolen op het display getoond worden."
+
+#, fuzzy
+msgid "This option allows you to alphabetically sort setup menu entries."
+msgstr "Met deze optie kunnen alle symbolen op het display getoond worden."
 
 msgid "This option allows you to boost the blue tones in the picture."
 msgstr ""
@@ -13318,6 +13489,10 @@ msgstr "Naar ondertitelselectie"
 
 msgid "Today"
 msgstr "Vandaag"
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Configuratiemodus: %s"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -14260,10 +14435,6 @@ msgstr "Activeer het signaal van TV"
 msgid "Wakeup time"
 msgstr "Type 'Wakeup'"
 
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Type 'Wakeup'"
-
 msgid "Wakeup type"
 msgstr "Type 'Wakeup'"
 
@@ -14416,7 +14587,13 @@ msgstr "Wat wilt u zoeken?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 #, fuzzy
@@ -14772,6 +14949,10 @@ msgstr "geel"
 
 msgid "Yellow DVB subtitles"
 msgstr "Gele DVB ondertiteling"
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Maak uw keuze"
 
 #, fuzzy
 msgid "Yemen"
@@ -15225,9 +15406,6 @@ msgstr "een GUI om zenders / providers/ caids aan de CI modules toe te voegen"
 msgid "about to start"
 msgstr "start zodadelijk"
 
-msgid "activate network adapter configuration"
-msgstr "start de netwerkadapter configuratie"
-
 #, fuzzy
 msgid "active"
 msgstr "Alternatieven"
@@ -15560,9 +15738,6 @@ msgstr ""
 
 msgid "exit DVD player or return to file browser"
 msgstr "DVD speler afsluiten of terug naar bestandslijst"
-
-msgid "exit network adapter configuration"
-msgstr "verlaat de netwerkadapter configuratie"
 
 msgid "exit networkadapter setup menu"
 msgstr "verlaat het netwerkadapter instellingenmenu"
