--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2013-10-20 19:13-0300\n"
 "Last-Translator: Diogo <pingflood@gmail.com>\n"
 "Language-Team: Traduzido por Frank Viana <franksrviana@gmail.com>\n"
@@ -225,6 +225,9 @@ msgid "%A %e %B %Y"
 msgstr "%A, %e de %B de %Y"
 
 msgid "%H:%M"
+msgstr ""
+
+msgid "%R"
 msgstr ""
 
 #, fuzzy
@@ -453,6 +456,10 @@ msgstr[0] "%s atualização disponível"
 msgstr[1] "%s atualizações disponíveis"
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -657,9 +664,6 @@ msgid "=NO STREAM\n"
 msgstr ""
 
 msgid "?"
-msgstr ""
-
-msgid "??"
 msgstr ""
 
 msgid "A"
@@ -1744,6 +1748,10 @@ msgstr ""
 msgid "Blue"
 msgstr ""
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "Destino do backup"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -1981,6 +1989,12 @@ msgstr ""
 
 msgid "Cancel"
 msgstr "Cancelar"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2422,6 +2436,10 @@ msgstr "Contraste"
 
 msgid "Common Interface"
 msgstr "Interface Comum (CI)"
+
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "Selecionar EPG"
 
 msgid "Communication"
 msgstr "Comunicação"
@@ -3331,6 +3349,10 @@ msgstr "Tipo de gravação"
 msgid "Default+Picon"
 msgstr "Configuração padrão"
 
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Padrão"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3422,6 +3444,12 @@ msgstr "Remover arquivo"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "Remover item da lista de reprodução"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #, fuzzy
 msgid "Delete current line"
@@ -3643,6 +3671,10 @@ msgstr "Parar programa atual, mas não desativar novos eventos"
 msgid "Disable move mode"
 msgstr "Salvar modificações"
 
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Formato de variáveis disponíveis"
+
 msgid "Disable timer"
 msgstr "Desativar temporizador"
 
@@ -3702,6 +3734,9 @@ msgstr ""
 
 msgid "Display setup"
 msgstr "Painel frontal"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #, fuzzy
 msgid "Djibouti"
@@ -3917,6 +3952,10 @@ msgstr "esta gravação"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "Parar timeshift"
+
+#, fuzzy
+msgid "Don't show default"
+msgstr "Lista normal"
 
 msgid "Don't stop current event but disable coming events"
 msgstr "Não parar o programa atual mas desativar novos eventos"
@@ -4306,6 +4345,10 @@ msgstr "Ativar"
 msgid "Enable volume control with arrow buttons"
 msgstr "Selecione a entrada de vídeo com os botões de cima/baixo"
 
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Temporizador"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -4583,6 +4626,9 @@ msgstr "É maior que a mídia de dupla face!"
 
 msgid "Exceeds dual layer medium!"
 msgstr "É maior que a mídia de dupla face!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 msgid "Execution finished!!"
 msgstr "Pronto!"
@@ -5639,9 +5685,6 @@ msgstr "Rede oculta"
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr "Esconder lista de canais no modo rádio"
 
@@ -5939,6 +5982,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6315,7 +6361,8 @@ msgstr "Italiano"
 msgid "Italy"
 msgstr "Italiano"
 
-msgid "Items per page "
+#, fuzzy
+msgid "Items per page"
 msgstr "Itens por página"
 
 msgid "Items per page for list screen"
@@ -6344,6 +6391,12 @@ msgstr "Ir para o início da lista"
 
 msgid "Jump to end of list"
 msgstr "Ir para o fim da lista"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 msgid "Jump to next marked position"
 msgstr "Ir para a próxima marca"
@@ -6888,6 +6941,10 @@ msgstr ""
 msgid "Menu"
 msgstr "Menu"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "Destino do backup"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7115,6 +7172,14 @@ msgid "Move Picture in Picture"
 msgstr "Ativar PiP"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Ir para baixo na lista"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Ir para baixo na lista"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Ir para baixo na lista"
 
@@ -7162,6 +7227,14 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "Ir para a entrada seguinte"
+
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "Ir para a entrada seguinte"
+
 msgid "Move to position X"
 msgstr "Mover para posição X"
 
@@ -7180,6 +7253,14 @@ msgstr "Voltar ao capítulo anterior"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "Ir para a entrada anterior"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Ir para o topo da lista"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Ir para o topo da lista"
 
 #, fuzzy
 msgid "Move up list"
@@ -8118,9 +8199,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 msgid "Package list update"
 msgstr "Atualizando a lista de pacotes."
 
@@ -8638,6 +8716,10 @@ msgstr "Testando configurações de rede. Aguarde..."
 msgid "Please wait, Loading image."
 msgstr "Carregando lista. Aguarde..."
 
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Obtendo softcam. Aguarde..."
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -8647,6 +8729,14 @@ msgstr "Obtendo softcam. Aguarde..."
 
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Obtendo softcam. Aguarde..."
+
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Obtendo softcam. Aguarde..."
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Obtendo softcam. Aguarde..."
 
 msgid "Please wait..."
@@ -9237,9 +9327,6 @@ msgstr "Qua"
 msgid "Recall to previous service"
 msgstr "Voltar ao canal anterior"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #, fuzzy
 msgid "Reception lists"
 msgstr "Configurar recepção"
@@ -9610,6 +9697,10 @@ msgstr "Reiniciar rede"
 msgid "Restart both"
 msgstr "Reiniciar teste"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "Ligar sempre neste canal"
+
 msgid "Restart enigma"
 msgstr "Reiniciar interface"
 
@@ -9621,6 +9712,10 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Reiniciar teste"
 
 msgid "Restart test"
 msgstr "Reiniciar teste"
@@ -9955,6 +10050,10 @@ msgid "Save EPG every (in hours)"
 msgstr ""
 
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "Salvar lista de reprodução ao sair"
+
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Pressione OK para ativar o tema selecionado."
 
@@ -10268,6 +10367,10 @@ msgstr ""
 msgid "Select CAId"
 msgstr "Selecione o CAId"
 
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Selecione um vídeo"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -10282,6 +10385,10 @@ msgstr "Servidores de atualizações"
 #, fuzzy
 msgid "Select Service"
 msgstr "Selecione um vídeo"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Servidores de atualizações"
 
 #, fuzzy
 msgid "Select Software Update"
@@ -10495,6 +10602,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "Selecione o diretório de gravações"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -10598,10 +10711,10 @@ msgstr "Destino do backup"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
-msgstr "Selecione a operadora e pressione OK para buscar."
-
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -10786,6 +10899,9 @@ msgid "Set action when movie playback is finished."
 msgstr "Configurar o comportamento ao iniciar um vídeo."
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -11006,6 +11122,10 @@ msgid "Show Weather Widget"
 msgstr ""
 
 #, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Exibir encriptação na barra de informações"
+
+#, fuzzy
 msgid "Show alternatives"
 msgstr "Ver alternativas"
 
@@ -11062,6 +11182,14 @@ msgstr "Exibir encriptação na barra de informações"
 #, fuzzy
 msgid "Show current mode"
 msgstr "Exibir detalhes do evento"
+
+#, fuzzy
+msgid "Show default after description"
+msgstr "Exibir descrição estendida"
+
+#, fuzzy
+msgid "Show default on new line"
+msgstr "Exibir linha de informações"
 
 msgid "Show detailed event info"
 msgstr "Exibir informação detalhada do evento"
@@ -11247,11 +11375,23 @@ msgid "Show servicelist or movies"
 msgstr "Exibir ícones do tipo de serviço"
 
 #, fuzzy
+msgid "Show setup default values"
+msgstr "Exibir detalhes do evento"
+
+#, fuzzy
 msgid "Show simple second infobar"
 msgstr "Exibir barra de informações secundária"
 
 msgid "Show single service EPG"
 msgstr "Exibir EPG simples"
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Informação do gerenciador de software"
+
+#, fuzzy
+msgid "Show softcam setup in extensions menu"
+msgstr "Exibir no menu de extensões"
 
 #, fuzzy
 msgid "Show softcam startup in extensions menu"
@@ -11546,6 +11686,14 @@ msgid "SocketMMI"
 msgstr ""
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Tipo de softcam"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Tipo de softcam"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Tipo de softcam"
 
@@ -11658,6 +11806,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -11793,8 +11944,16 @@ msgid "Start"
 msgstr "Iniciar teste"
 
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Temporizador"
+
+#, fuzzy
 msgid "Start directory"
 msgstr "Diretório inicial"
+
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Iniciar teste"
 
 msgid "Start from the beginning"
 msgstr "Começar do início"
@@ -11835,6 +11994,10 @@ msgstr "Iniciar timeshift"
 msgid "Start with list screen"
 msgstr "Iniciar com a lista"
 
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Evento pro inatividade"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -11873,6 +12036,10 @@ msgstr "Parar"
 
 msgid "Stop PiP"
 msgstr "Parar PiP"
+
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Temporizador"
 
 #, fuzzy
 msgid "Stop all current recordings"
@@ -12610,10 +12777,6 @@ msgid "There are currently no outstanding actions."
 msgstr "Atualmente não existem ações pendentes."
 
 #, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "Não existem plugins disponíveis."
-
-#, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "Selecione uma lista para remover"
 
@@ -12727,6 +12890,13 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+#, fuzzy
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr "Exibir no menu de extensões"
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -13072,6 +13242,10 @@ msgstr "Selecionar legenda"
 
 msgid "Today"
 msgstr "Hoje"
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Modo de configuração: %s"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -14015,10 +14189,6 @@ msgstr "Sinal de ligar a partir da TV"
 msgid "Wakeup time"
 msgstr "Acordar"
 
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Temporizador"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -14171,7 +14341,13 @@ msgstr "O que deseja buscar?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 #, fuzzy
@@ -14503,6 +14679,10 @@ msgstr "Amarelo"
 
 msgid "Yellow DVB subtitles"
 msgstr "Legendas DVB em amarelo"
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Destino do backup"
 
 #, fuzzy
 msgid "Yemen"
@@ -14956,9 +15136,6 @@ msgstr "Uma interface visual para atribuir serviços/operadoras/CAIDs a um módu
 msgid "about to start"
 msgstr "iniciando em breve"
 
-msgid "activate network adapter configuration"
-msgstr "Ativar configuração do adaptador de rede"
-
 #, fuzzy
 msgid "active"
 msgstr "Adicionar alternativas"
@@ -15293,9 +15470,6 @@ msgstr ""
 
 msgid "exit DVD player or return to file browser"
 msgstr "Sair do reprodutor de DVD ou voltar à lista de arquivos"
-
-msgid "exit network adapter configuration"
-msgstr "Sair da configuração de rede"
 
 msgid "exit networkadapter setup menu"
 msgstr "Sair da configuração de rede"
