--- a/po/ro.po
+++ b/po/ro.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2010-03-09 21:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: HDTV ROMANIA(superonic,costel_mbc,neutrin,otheitis,cipy_1982,neutrin,runcanion)\n"
@@ -219,6 +219,9 @@ msgid "%A %e %B %Y"
 msgstr ""
 
 msgid "%H:%M"
+msgstr ""
+
+msgid "%R"
 msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
@@ -445,6 +448,10 @@ msgstr[0] ""
 msgstr[1] ""
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -652,9 +659,6 @@ msgid "=NO STREAM\n"
 msgstr ""
 
 msgid "?"
-msgstr ""
-
-msgid "??"
 msgstr ""
 
 msgid "A"
@@ -1765,6 +1769,10 @@ msgstr ""
 msgid "Blue"
 msgstr ""
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "Alege locatia copiei de siguranta"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2004,6 +2012,12 @@ msgstr ""
 
 msgid "Cancel"
 msgstr "Anuleaza"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2442,6 +2456,10 @@ msgstr "Contrast"
 
 msgid "Common Interface"
 msgstr "Common Interface"
+
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "Selectie EPG"
 
 msgid "Communication"
 msgstr "Comunicare"
@@ -3352,6 +3370,10 @@ msgstr "Incepe inregistrarea?"
 msgid "Default+Picon"
 msgstr "Setari implicite"
 
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Setari implicite"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3443,6 +3465,12 @@ msgstr "sterge file"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "sterge intrare playlist"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #, fuzzy
 msgid "Delete current line"
@@ -3664,6 +3692,10 @@ msgstr "Oprire eveniment curent dar nu si evenimentele urmatoare"
 msgid "Disable move mode"
 msgstr "dezactiveaza mod mutare"
 
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Disponibile formate viariaza"
+
 msgid "Disable timer"
 msgstr ""
 
@@ -3725,6 +3757,9 @@ msgstr ""
 #, fuzzy
 msgid "Display setup"
 msgstr "Configurare afisaj"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #, fuzzy
 msgid "Djibouti"
@@ -3940,6 +3975,10 @@ msgstr "aceasta inregistrare"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "stop timeshift"
+
+#, fuzzy
+msgid "Don't show default"
+msgstr "listeaza stilul default"
 
 msgid "Don't stop current event but disable coming events"
 msgstr "Nu opri evenimentul curent dar anuleaza evenimentele urmatoare"
@@ -4327,6 +4366,10 @@ msgstr "Activat"
 msgid "Enable volume control with arrow buttons"
 msgstr "Selectati intrarea vieo cu tastele sus/jos"
 
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Sleep timer"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -4603,6 +4646,9 @@ msgid "Exceeds Bludisc medium!"
 msgstr ""
 
 msgid "Exceeds dual layer medium!"
+msgstr ""
+
+msgid "Exclude first CA device"
 msgstr ""
 
 msgid "Execution finished!!"
@@ -5663,9 +5709,6 @@ msgstr ""
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr ""
 
@@ -5958,6 +6001,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6340,7 +6386,7 @@ msgstr "Italiana"
 msgid "Italy"
 msgstr "Italiana"
 
-msgid "Items per page "
+msgid "Items per page"
 msgstr ""
 
 msgid "Items per page for list screen"
@@ -6371,6 +6417,12 @@ msgstr ""
 #, fuzzy
 msgid "Jump to end of list"
 msgstr "dai la sfarsitul listei"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #, fuzzy
 msgid "Jump to next marked position"
@@ -6931,6 +6983,10 @@ msgstr ""
 msgid "Menu"
 msgstr "Meniu"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "Alege locatia copiei de siguranta"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7157,6 +7213,14 @@ msgid "Move Picture in Picture"
 msgstr "Activeaza PIP"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Misca spre vest"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Misca spre vest"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Misca spre vest"
 
@@ -7204,6 +7268,14 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "muta jos la urmatoarea intrare"
+
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "muta jos la urmatoarea intrare"
+
 msgid "Move to position X"
 msgstr ""
 
@@ -7222,6 +7294,14 @@ msgstr "deruleaza la capitolul anterior"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "muta sus la anterioara intrare"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Misca spre est"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Misca spre est"
 
 #, fuzzy
 msgid "Move up list"
@@ -8150,9 +8230,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 msgid "Package list update"
 msgstr "Actualizare lista pachet"
 
@@ -8673,6 +8750,10 @@ msgstr "Va rugam asteptati pana cand reteaua se va restarta..."
 msgid "Please wait, Loading image."
 msgstr "Va rugam asteptati... Se incarca lista..."
 
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Va rugam asteptati... Se incarca lista..."
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -8682,6 +8763,14 @@ msgstr "Va rugam asteptati... Se incarca lista..."
 
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Va rugam asteptati... Se incarca lista..."
+
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Va rugam asteptati... Se incarca lista..."
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Va rugam asteptati... Se incarca lista..."
 
 msgid "Please wait..."
@@ -9267,9 +9356,6 @@ msgstr "Wed"
 msgid "Recall to previous service"
 msgstr "Revenire la serviciul anterior"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #, fuzzy
 msgid "Reception lists"
 msgstr "Setari receptie"
@@ -9640,6 +9726,10 @@ msgstr "Restart retea"
 msgid "Restart both"
 msgstr "Test restart"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "Schimbare servicii"
+
 msgid "Restart enigma"
 msgstr ""
 
@@ -9651,6 +9741,10 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Test restart"
 
 msgid "Restart test"
 msgstr "Test restart"
@@ -9982,6 +10076,10 @@ msgid "Save EPG every (in hours)"
 msgstr ""
 
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "salveaza playlist la iesire"
+
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Eliminare titlu curent selectat"
 
@@ -10298,6 +10396,10 @@ msgstr ""
 msgid "Select CAId"
 msgstr "selecteaza CAId"
 
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Alegeti un film"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -10312,6 +10414,10 @@ msgstr "Alege sursa de actualizare"
 #, fuzzy
 msgid "Select Service"
 msgstr "Alegeti un film"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Alege sursa de actualizare"
 
 #, fuzzy
 msgid "Select Software Update"
@@ -10532,6 +10638,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "selecteaza calea filmului"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -10636,10 +10748,10 @@ msgstr "Alege locatia copiei de siguranta"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
+msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
 
-msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -10825,6 +10937,9 @@ msgid "Set action when movie playback is finished."
 msgstr "Cand un film este pornit"
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -11050,6 +11165,10 @@ msgid "Show Weather Widget"
 msgstr ""
 
 #, fuzzy
+msgid "Show additional information on infobar"
+msgstr "arata Infoline"
+
+#, fuzzy
 msgid "Show alternatives"
 msgstr "arata alternative"
 
@@ -11107,6 +11226,14 @@ msgstr ""
 #, fuzzy
 msgid "Show current mode"
 msgstr "arata detaliile evenimentului"
+
+#, fuzzy
+msgid "Show default after description"
+msgstr "arata descriere extinsa"
+
+#, fuzzy
+msgid "Show default on new line"
+msgstr "arata Infoline"
 
 msgid "Show detailed event info"
 msgstr ""
@@ -11295,10 +11422,21 @@ msgid "Show servicelist or movies"
 msgstr "Incarca durata filmelor in lista cu filme"
 
 #, fuzzy
+msgid "Show setup default values"
+msgstr "arata detaliile evenimentului"
+
+#, fuzzy
 msgid "Show simple second infobar"
 msgstr "arata info despre transponder"
 
 msgid "Show single service EPG"
+msgstr ""
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "arata Infoline"
+
+msgid "Show softcam setup in extensions menu"
 msgstr ""
 
 msgid "Show softcam startup in extensions menu"
@@ -11594,6 +11732,14 @@ msgid "SocketMMI"
 msgstr ""
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Software"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Software"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Software"
 
@@ -11708,6 +11854,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -11841,8 +11990,16 @@ msgid "Start"
 msgstr "Incepe test"
 
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Ora de incepere"
+
+#, fuzzy
 msgid "Start directory"
 msgstr "start director"
+
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Incepe test"
 
 msgid "Start from the beginning"
 msgstr "Incepe de la capat"
@@ -11885,6 +12042,10 @@ msgstr "start timeshift"
 msgid "Start with list screen"
 msgstr ""
 
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Ora de incepere"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -11923,6 +12084,10 @@ msgstr "Stop"
 #, fuzzy
 msgid "Stop PiP"
 msgstr "stop pip"
+
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Sleep timer"
 
 #, fuzzy
 msgid "Stop all current recordings"
@@ -12660,9 +12825,6 @@ msgstr ""
 msgid "There are currently no outstanding actions."
 msgstr ""
 
-msgid "There are no items currently available for this screen."
-msgstr ""
-
 #, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "Va rugam selectati o lista de redare pentru a fi stearsa..."
@@ -12776,6 +12938,12 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr ""
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -13123,6 +13291,10 @@ msgstr ""
 
 msgid "Today"
 msgstr "Astazi"
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Mod configurare"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -14069,10 +14241,6 @@ msgstr ""
 msgid "Wakeup time"
 msgstr "Sleep timer"
 
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Sleep timer"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -14216,7 +14384,13 @@ msgstr "Ce vrei sa scanezi"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -14537,6 +14711,10 @@ msgstr "galben"
 
 msgid "Yellow DVB subtitles"
 msgstr ""
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Alege locatia copiei de siguranta"
 
 msgid "Yemen"
 msgstr ""
@@ -14954,9 +15132,6 @@ msgstr "un gui sa repartizeze servicii/provideri/caid-uri la modulele common int
 msgid "about to start"
 msgstr "in curs de incepere"
 
-msgid "activate network adapter configuration"
-msgstr ""
-
 #, fuzzy
 msgid "active"
 msgstr "adauga alternative"
@@ -15289,9 +15464,6 @@ msgstr ""
 
 msgid "exit DVD player or return to file browser"
 msgstr "iesire DVD player sau inapoi la file browser"
-
-msgid "exit network adapter configuration"
-msgstr "iesire configurare retea"
 
 msgid "exit networkadapter setup menu"
 msgstr "iesire meniu setari adaptor retea"
