--- a/po/sr.po
+++ b/po/sr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -238,6 +238,9 @@ msgstr ""
 #
 msgid "%H:%M"
 msgstr "%H:%M"
+
+msgid "%R"
+msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
 msgstr ""
@@ -494,6 +497,10 @@ msgstr[1] "ažuriranja dostupna."
 msgstr[2] "ažuriranja dostupna."
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -732,10 +739,6 @@ msgstr ""
 #
 #, fuzzy
 msgid "?"
-msgstr "??"
-
-#
-msgid "??"
 msgstr "??"
 
 #
@@ -2022,6 +2025,11 @@ msgstr "Blokiraj smanjenje šuma"
 msgid "Blue"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Blue button function"
+msgstr "Izaberite snimljenu lokaciju"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2285,6 +2293,12 @@ msgstr ""
 #
 msgid "Cancel"
 msgstr "Odustani"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2779,6 +2793,11 @@ msgstr "Kontrast"
 #
 msgid "Common Interface"
 msgstr "Opšti interfejs"
+
+#
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "EPG selektor "
 
 #
 msgid "Communication"
@@ -3812,6 +3831,10 @@ msgstr "Započeti snimanje?"
 msgid "Default+Picon"
 msgstr "Standardne postavke"
 
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Standardno"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3909,6 +3932,12 @@ msgstr "Obriši datoteku"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "obriši unos plejliste"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #
 #, fuzzy
@@ -4167,6 +4196,11 @@ msgstr "Zaustavi trenutni događaj ali ne i ostale dolazeće"
 msgid "Disable move mode"
 msgstr "onemoguće mod premeštanja"
 
+#
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Mogući promenljivi format "
+
 msgid "Disable timer"
 msgstr ""
 
@@ -4239,6 +4273,9 @@ msgstr ""
 #, fuzzy
 msgid "Display setup"
 msgstr "Postavke displeja"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #
 #, fuzzy
@@ -4493,6 +4530,11 @@ msgstr "ovo snimanje"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "zaustavi vrem.pomak"
+
+#
+#, fuzzy
+msgid "Don't show default"
+msgstr "standardne postavke stila liste"
 
 #
 msgid "Don't stop current event but disable coming events"
@@ -4935,6 +4977,11 @@ msgstr "Omogućeno"
 msgid "Enable volume control with arrow buttons"
 msgstr "Izaberi video ulaz sa UP/DOWN tipkama"
 
+#
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Tajmer spavanja"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -5248,6 +5295,9 @@ msgstr "Prevazilazi dvoslojni medij!"
 #
 msgid "Exceeds dual layer medium!"
 msgstr "Prevazilazi dvoslojni medij!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 #
 msgid "Execution finished!!"
@@ -6460,9 +6510,6 @@ msgstr ""
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr ""
 
@@ -6787,6 +6834,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -7234,7 +7284,7 @@ msgstr "Italijanski"
 msgid "Italy"
 msgstr "Italijanski"
 
-msgid "Items per page "
+msgid "Items per page"
 msgstr ""
 
 msgid "Items per page for list screen"
@@ -7267,6 +7317,12 @@ msgstr ""
 #, fuzzy
 msgid "Jump to end of list"
 msgstr "skoči na kraj liste"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #
 #, fuzzy
@@ -7921,6 +7977,11 @@ msgstr ""
 msgid "Menu"
 msgstr "Meni"
 
+#
+#, fuzzy
+msgid "Menu button function"
+msgstr "Izaberite snimljenu lokaciju"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -8176,6 +8237,16 @@ msgstr "Aktiviraj Sliku u Slici"
 
 #
 #, fuzzy
+msgid "Move down a line"
+msgstr "Pokreći na zapad"
+
+#
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Pokreći na zapad"
+
+#
+#, fuzzy
 msgid "Move down list"
 msgstr "Pokreći na zapad"
 
@@ -8229,6 +8300,16 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "Pomeri dole na naredni unos"
+
+#
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "Pomeri dole na naredni unos"
+
 msgid "Move to position X"
 msgstr ""
 
@@ -8251,6 +8332,16 @@ msgstr "Premotaj na prethodno poglavlje"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "Pomeri gore na prethodni unos"
+
+#
+#, fuzzy
+msgid "Move up a line"
+msgstr "Pokreći na istok"
+
+#
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Pokreći na istok"
 
 #
 #, fuzzy
@@ -9310,9 +9401,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 #
 msgid "Package list update"
 msgstr "Nadogradnja liste paketa"
@@ -9944,6 +10032,11 @@ msgstr "Molim sačekajte dok testiramo vašu mrežu..."
 msgid "Please wait, Loading image."
 msgstr "Molim pričekajte... Učitavam listu..."
 
+#
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Molim pričekajte... Učitavam listu..."
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -9955,6 +10048,16 @@ msgstr "Molim pričekajte... Učitavam listu..."
 #
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Molim pričekajte... Učitavam listu..."
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Molim pričekajte... Učitavam listu..."
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Molim pričekajte... Učitavam listu..."
 
 #
@@ -10639,9 +10742,6 @@ msgstr "Sre"
 msgid "Recall to previous service"
 msgstr "Vratite se na prethodni kanal"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #
 #, fuzzy
 msgid "Reception lists"
@@ -11084,6 +11184,11 @@ msgstr "Restartujte mrežu"
 msgid "Restart both"
 msgstr "Ponovite test"
 
+#
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "Zameni kanale"
+
 msgid "Restart enigma"
 msgstr ""
 
@@ -11096,6 +11201,11 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Ponovite test"
 
 #
 msgid "Restart test"
@@ -11482,6 +11592,11 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "Sačuvajte listu za reprodukciju kod izlaska "
+
+#
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Pritisnite OK za aktiviranje izabrane maske."
 
@@ -11847,6 +11962,11 @@ msgstr ""
 msgid "Select CAId"
 msgstr "Izaberite CAId"
 
+#
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Odaberi film"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -11864,6 +11984,11 @@ msgstr "Izaberi izvor nadodradnje za uređivanje."
 #, fuzzy
 msgid "Select Service"
 msgstr "Odaberi film"
+
+#
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Izaberi izvor nadodradnje za uređivanje."
 
 #
 #, fuzzy
@@ -12123,6 +12248,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "Izaberite putanju filma"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -12239,10 +12370,10 @@ msgstr "Izaberite snimljenu lokaciju"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
+msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
 
-msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -12466,6 +12597,9 @@ msgid "Set action when movie playback is finished."
 msgstr "Način rada kad je film startovan"
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -12719,6 +12853,10 @@ msgstr "Prikaži status WLAN-a"
 msgid "Show Weather Widget"
 msgstr ""
 
+#, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Informacije upravljača softvera"
+
 #
 #, fuzzy
 msgid "Show alternatives"
@@ -12781,6 +12919,16 @@ msgstr ""
 #, fuzzy
 msgid "Show current mode"
 msgstr "prikaži proširene infor. "
+
+#
+#, fuzzy
+msgid "Show default after description"
+msgstr "prikaži proširene informacije"
+
+#
+#, fuzzy
+msgid "Show default on new line"
+msgstr "Pokaži Info liniju "
 
 msgid "Show detailed event info"
 msgstr ""
@@ -13003,10 +13151,22 @@ msgstr "Ubaciti dužinu filma u listi filmova"
 
 #
 #, fuzzy
+msgid "Show setup default values"
+msgstr "prikaži proširene infor. "
+
+#
+#, fuzzy
 msgid "Show simple second infobar"
 msgstr "prikaži info transpondera"
 
 msgid "Show single service EPG"
+msgstr ""
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Informacije upravljača softvera"
+
+msgid "Show softcam setup in extensions menu"
 msgstr ""
 
 msgid "Show softcam startup in extensions menu"
@@ -13360,6 +13520,16 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Softver"
+
+#
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Softver"
+
+#
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Softver"
 
@@ -13487,6 +13657,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -13635,8 +13808,18 @@ msgstr "Počnite test"
 
 #
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Početno vreme "
+
+#
+#, fuzzy
 msgid "Start directory"
 msgstr "Početni direktorijum"
+
+#
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Počnite test"
 
 #
 msgid "Start from the beginning"
@@ -13687,6 +13870,11 @@ msgstr "pokreni vrem.pomak"
 msgid "Start with list screen"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Početno vreme "
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -13732,6 +13920,11 @@ msgstr "Zaustavi  "
 #, fuzzy
 msgid "Stop PiP"
 msgstr "zaustavi PiP"
+
+#
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Tajmer spavanja"
 
 #
 #, fuzzy
@@ -14586,11 +14779,6 @@ msgstr "Trenutno nema izrazitih dešavanja."
 
 #
 #, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "Nema dostupnih ažuriranja."
-
-#
-#, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "Molim odaberite plejlistu za brisanje..."
 
@@ -14709,6 +14897,12 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr ""
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -15100,6 +15294,11 @@ msgstr ""
 #
 msgid "Today"
 msgstr "Danas"
+
+#
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Mod konfiguracije"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -16182,11 +16381,6 @@ msgstr ""
 msgid "Wakeup time"
 msgstr "Tajmer spavanja"
 
-#
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Tajmer spavanja"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -16343,7 +16537,13 @@ msgstr "Šta želite skenirati?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -16678,6 +16878,11 @@ msgstr "Žuto"
 
 msgid "Yellow DVB subtitles"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Izaberite snimljenu lokaciju"
 
 msgid "Yemen"
 msgstr ""
@@ -17149,10 +17354,6 @@ msgid "about to start"
 msgstr "spremni za početak"
 
 #
-msgid "activate network adapter configuration"
-msgstr "Aktivirajte konfiguraciju mrežnog adaptera"
-
-#
 #, fuzzy
 msgid "active"
 msgstr "dodaj alternative"
@@ -17532,10 +17733,6 @@ msgstr ""
 #
 msgid "exit DVD player or return to file browser"
 msgstr "Napustite DVD plejer ili se vratite na pretraživač datoteka"
-
-#
-msgid "exit network adapter configuration"
-msgstr "Napustite konfiguraciju mrežnog adaptera"
 
 #
 msgid "exit networkadapter setup menu"
