--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma 2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2021-01-11 15:15+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -208,6 +208,9 @@ msgid "%A %e %B %Y"
 msgstr ""
 
 msgid "%H:%M"
+msgstr ""
+
+msgid "%R"
 msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
@@ -434,6 +437,10 @@ msgstr[0] ""
 msgstr[1] ""
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -631,9 +638,6 @@ msgid "=NO STREAM\n"
 msgstr ""
 
 msgid "?"
-msgstr ""
-
-msgid "??"
 msgstr ""
 
 msgid "A"
@@ -1610,6 +1614,9 @@ msgstr ""
 msgid "Blue"
 msgstr ""
 
+msgid "Blue button function"
+msgstr ""
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -1834,6 +1841,12 @@ msgid "Canada"
 msgstr ""
 
 msgid "Cancel"
+msgstr ""
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
 msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
@@ -2238,6 +2251,9 @@ msgid "Commit info"
 msgstr ""
 
 msgid "Common Interface"
+msgstr ""
+
+msgid "Common Setup Actions"
 msgstr ""
 
 msgid "Communication"
@@ -3077,6 +3093,10 @@ msgstr ""
 msgid "Default+Picon"
 msgstr ""
 
+#, python-format
+msgid "Default: '%s'."
+msgstr ""
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3163,6 +3183,12 @@ msgid "Delete Image"
 msgstr ""
 
 msgid "Delete all the text"
+msgstr ""
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
 msgstr ""
 
 msgid "Delete current line"
@@ -3366,6 +3392,9 @@ msgstr ""
 msgid "Disable move mode"
 msgstr ""
 
+msgid "Disable operator profiles"
+msgstr ""
+
 msgid "Disable timer"
 msgstr ""
 
@@ -3419,6 +3448,9 @@ msgid "Display movie length in movielist (except single line style)."
 msgstr ""
 
 msgid "Display setup"
+msgstr ""
+
+msgid "Display the virtual keyboard for data entry"
 msgstr ""
 
 msgid "Djibouti"
@@ -3603,6 +3635,9 @@ msgid "Don't add this recording"
 msgstr ""
 
 msgid "Don't save and stop timeshift"
+msgstr ""
+
+msgid "Don't show default"
 msgstr ""
 
 msgid "Don't stop current event but disable coming events"
@@ -3954,6 +3989,9 @@ msgstr ""
 msgid "Enable volume control with arrow buttons"
 msgstr ""
 
+msgid "Enable wakeup timer"
+msgstr ""
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -4207,6 +4245,9 @@ msgid "Exceeds Bludisc medium!"
 msgstr ""
 
 msgid "Exceeds dual layer medium!"
+msgstr ""
+
+msgid "Exclude first CA device"
 msgstr ""
 
 msgid "Execution finished!!"
@@ -5167,9 +5208,6 @@ msgstr ""
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr ""
 
@@ -5445,6 +5483,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -5789,7 +5830,7 @@ msgstr ""
 msgid "Italy"
 msgstr ""
 
-msgid "Items per page "
+msgid "Items per page"
 msgstr ""
 
 msgid "Items per page for list screen"
@@ -5817,6 +5858,12 @@ msgid "Jump to beginning of list"
 msgstr ""
 
 msgid "Jump to end of list"
+msgstr ""
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
 msgstr ""
 
 msgid "Jump to next marked position"
@@ -6329,6 +6376,9 @@ msgstr ""
 msgid "Menu"
 msgstr ""
 
+msgid "Menu button function"
+msgstr ""
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -6538,6 +6588,12 @@ msgstr ""
 msgid "Move Picture in Picture"
 msgstr ""
 
+msgid "Move down a line"
+msgstr ""
+
+msgid "Move down a screen"
+msgstr ""
+
 msgid "Move down list"
 msgstr ""
 
@@ -6580,6 +6636,12 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+msgid "Move to first line / screen"
+msgstr ""
+
+msgid "Move to last line / screen"
+msgstr ""
+
 msgid "Move to position X"
 msgstr ""
 
@@ -6593,6 +6655,12 @@ msgid "Move to the previous page"
 msgstr ""
 
 msgid "Move to the previous skin"
+msgstr ""
+
+msgid "Move up a line"
+msgstr ""
+
+msgid "Move up a screen"
 msgstr ""
 
 msgid "Move up list"
@@ -7429,9 +7497,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 msgid "Package list update"
 msgstr ""
 
@@ -7887,6 +7952,9 @@ msgstr "正在扫描...请稍候..."
 msgid "Please wait, Loading image."
 msgstr ""
 
+msgid "Please wait, restarting cardserver."
+msgstr ""
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -7895,6 +7963,13 @@ msgstr ""
 
 msgid "Please wait, restarting secondary softcam."
 msgstr ""
+
+msgid "Please wait, restarting softcam and cardserver."
+msgstr ""
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
+msgstr "正在扫描...请稍候..."
 
 msgid "Please wait..."
 msgstr ""
@@ -8436,9 +8511,6 @@ msgstr ""
 msgid "Recall to previous service"
 msgstr ""
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 msgid "Reception lists"
 msgstr ""
 
@@ -8765,6 +8837,9 @@ msgstr ""
 msgid "Restart both"
 msgstr ""
 
+msgid "Restart cardserver"
+msgstr ""
+
 msgid "Restart enigma"
 msgstr ""
 
@@ -8775,6 +8850,9 @@ msgid "Restart primary softcam"
 msgstr ""
 
 msgid "Restart secondary softcam"
+msgstr ""
+
+msgid "Restart softcam"
 msgstr ""
 
 msgid "Restart test"
@@ -9074,6 +9152,9 @@ msgstr ""
 msgid "Save EPG every (in hours)"
 msgstr ""
 
+msgid "Save all changed settings and exit"
+msgstr ""
+
 msgid "Save and activate the currently selected skin"
 msgstr ""
 
@@ -9361,6 +9442,9 @@ msgstr ""
 msgid "Select CAId"
 msgstr ""
 
+msgid "Select Card Server"
+msgstr ""
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -9371,6 +9455,9 @@ msgid "Select OPKG source....."
 msgstr ""
 
 msgid "Select Service"
+msgstr ""
+
+msgid "Select Softcam"
 msgstr ""
 
 msgid "Select Software Update"
@@ -9560,6 +9647,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr ""
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -9652,10 +9745,10 @@ msgstr ""
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
+msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
 
-msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -9813,6 +9906,9 @@ msgid "Set action when movie playback is finished."
 msgstr ""
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -10016,6 +10112,9 @@ msgstr ""
 msgid "Show Weather Widget"
 msgstr ""
 
+msgid "Show additional information on infobar"
+msgstr ""
+
 msgid "Show alternatives"
 msgstr ""
 
@@ -10069,6 +10168,12 @@ msgid "Show crypto info in infobar"
 msgstr ""
 
 msgid "Show current mode"
+msgstr ""
+
+msgid "Show default after description"
+msgstr ""
+
+msgid "Show default on new line"
 msgstr ""
 
 msgid "Show detailed event info"
@@ -10230,10 +10335,19 @@ msgstr ""
 msgid "Show servicelist or movies"
 msgstr ""
 
+msgid "Show setup default values"
+msgstr ""
+
 msgid "Show simple second infobar"
 msgstr ""
 
 msgid "Show single service EPG"
+msgstr ""
+
+msgid "Show softcam information"
+msgstr ""
+
+msgid "Show softcam setup in extensions menu"
 msgstr ""
 
 msgid "Show softcam startup in extensions menu"
@@ -10496,6 +10610,12 @@ msgstr ""
 msgid "SocketMMI"
 msgstr ""
 
+msgid "Softcam Setup"
+msgstr ""
+
+msgid "Softcam setup"
+msgstr ""
+
 msgid "Softcam startup"
 msgstr ""
 
@@ -10600,6 +10720,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -10723,7 +10846,13 @@ msgstr ""
 msgid "Start"
 msgstr ""
 
+msgid "Start Sleeptimer"
+msgstr ""
+
 msgid "Start directory"
+msgstr ""
+
+msgid "Start fastscan"
 msgstr ""
 
 msgid "Start from the beginning"
@@ -10762,6 +10891,9 @@ msgstr ""
 msgid "Start with list screen"
 msgstr ""
 
+msgid "Start/Stop Sleeptimer"
+msgstr ""
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -10796,6 +10928,9 @@ msgid "Stop"
 msgstr ""
 
 msgid "Stop PiP"
+msgstr ""
+
+msgid "Stop Sleeptimer"
 msgstr ""
 
 msgid "Stop all current recordings"
@@ -11459,9 +11594,6 @@ msgstr "有一个最近更新 %d 可用."
 msgid "There are currently no outstanding actions."
 msgstr ""
 
-msgid "There are no items currently available for this screen."
-msgstr ""
-
 msgid "There are no saved playlists to delete!"
 msgstr ""
 
@@ -11572,6 +11704,12 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr ""
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -11884,6 +12022,9 @@ msgid "To subtitle selection"
 msgstr ""
 
 msgid "Today"
+msgstr ""
+
+msgid "Toggle Configuration Mode or AutoDisqc"
 msgstr ""
 
 msgid "Toggle HDMI In"
@@ -12753,9 +12894,6 @@ msgstr ""
 msgid "Wakeup time"
 msgstr ""
 
-msgid "Wakeup timer"
-msgstr ""
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -12882,7 +13020,13 @@ msgstr ""
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -13196,6 +13340,9 @@ msgid "Yellow"
 msgstr ""
 
 msgid "Yellow DVB subtitles"
+msgstr ""
+
+msgid "Yellow button function"
 msgstr ""
 
 msgid "Yemen"
@@ -13609,9 +13756,6 @@ msgstr ""
 msgid "about to start"
 msgstr ""
 
-msgid "activate network adapter configuration"
-msgstr ""
-
 msgid "active"
 msgstr ""
 
@@ -13922,9 +14066,6 @@ msgid "execute cuts (requires MovieCut plugin)"
 msgstr ""
 
 msgid "exit DVD player or return to file browser"
-msgstr ""
-
-msgid "exit network adapter configuration"
 msgstr ""
 
 msgid "exit networkadapter setup menu"
