--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -234,6 +234,9 @@ msgstr ""
 #
 msgid "%H:%M"
 msgstr "%T:%M"
+
+msgid "%R"
+msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
 msgstr ""
@@ -474,6 +477,10 @@ msgstr[0] " opdateringer tilgængelige_Ikke for Ferrari."
 msgstr[1] " opdateringer tilgængelige_Ikke for Ferrari."
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -704,10 +711,6 @@ msgstr ""
 #
 #, fuzzy
 msgid "?"
-msgstr "??"
-
-#
-msgid "??"
 msgstr "??"
 
 #
@@ -1990,6 +1993,11 @@ msgstr "Video støjreduktion"
 msgid "Blue"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Blue button function"
+msgstr "Vælg backup placering"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2253,6 +2261,12 @@ msgstr ""
 #
 msgid "Cancel"
 msgstr "Fortryd"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2747,6 +2761,11 @@ msgstr "Kontrast"
 #
 msgid "Common Interface"
 msgstr "CA Modul"
+
+#
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "EPG Valg"
 
 #
 msgid "Communication"
@@ -3781,6 +3800,11 @@ msgstr "Optagelsestype"
 msgid "Default+Picon"
 msgstr "Standard opsætning"
 
+#
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Standard"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3876,6 +3900,12 @@ msgstr "slet fil"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "slette spilleliste indhold"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #
 #, fuzzy
@@ -4134,6 +4164,11 @@ msgstr "Stoppe nuværende program men ikke kommende programmer"
 msgid "Disable move mode"
 msgstr "slå flytte type fra"
 
+#
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Tilgængelige format variabler"
+
 msgid "Disable timer"
 msgstr ""
 
@@ -4205,6 +4240,9 @@ msgstr ""
 #, fuzzy
 msgid "Display setup"
 msgstr "Display Indstillinger"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #
 #, fuzzy
@@ -4463,6 +4501,11 @@ msgstr "denne optagelse"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "stop tidsforskydning"
+
+#
+#, fuzzy
+msgid "Don't show default"
+msgstr "normal listestil"
 
 #
 msgid "Don't stop current event but disable coming events"
@@ -4906,6 +4949,11 @@ msgstr "Aktiveret"
 msgid "Enable volume control with arrow buttons"
 msgstr "Vælg video input med op/ned knapperne"
 
+#
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Sleep Timer"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -5217,6 +5265,9 @@ msgstr "overskrider dobbelt lags media!"
 #, fuzzy
 msgid "Exceeds dual layer medium!"
 msgstr "overskrider dobbelt lags media!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 #
 msgid "Execution finished!!"
@@ -6419,9 +6470,6 @@ msgstr "Skjult netværk"
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr ""
 
@@ -6746,6 +6794,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -7186,7 +7237,7 @@ msgid "Italy"
 msgstr "Italiensk"
 
 #, fuzzy
-msgid "Items per page "
+msgid "Items per page"
 msgstr "Emner pr side"
 
 #, fuzzy
@@ -7220,6 +7271,12 @@ msgstr ""
 #, fuzzy
 msgid "Jump to end of list"
 msgstr "spring til liste stop"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #
 #, fuzzy
@@ -7872,6 +7929,11 @@ msgstr ""
 msgid "Menu"
 msgstr "Menu"
 
+#
+#, fuzzy
+msgid "Menu button function"
+msgstr "Vælg backup placering"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -8126,6 +8188,14 @@ msgid "Move Picture in Picture"
 msgstr "Aktiver Billed i Billed"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Gå ned af listen"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Gå ned af listen"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Gå ned af listen"
 
@@ -8179,6 +8249,16 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "flyrt ned til næste indtastning"
+
+#
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "flyrt ned til næste indtastning"
+
 msgid "Move to position X"
 msgstr "Flyt til position X"
 
@@ -8201,6 +8281,14 @@ msgstr "kør tilbage til forrige kapitel"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "flyt op til foregående indtastning"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Gå op af listen"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Gå op af listen"
 
 #, fuzzy
 msgid "Move up list"
@@ -9261,9 +9349,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 #
 msgid "Package list update"
 msgstr "Pakke liste opdatering"
@@ -9896,6 +9981,11 @@ msgstr "Vent venligst mens vi tester dit netværk..."
 msgid "Please wait, Loading image."
 msgstr "Vent venligst... Henter liste..."
 
+#
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Vent venligst... Henter liste..."
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -9907,6 +9997,16 @@ msgstr "Vent venligst... Henter liste..."
 #
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Vent venligst... Henter liste..."
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Vent venligst... Henter liste..."
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Vent venligst... Henter liste..."
 
 #
@@ -10600,9 +10700,6 @@ msgstr "Optag"
 msgid "Recall to previous service"
 msgstr "Tilbage til forrige kanal"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #
 #, fuzzy
 msgid "Reception lists"
@@ -11051,6 +11148,10 @@ msgstr "Genstart netværk"
 msgid "Restart both"
 msgstr "Genstart Test"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "Sæt som startkanal"
+
 msgid "Restart enigma"
 msgstr "Genstart Enigma2"
 
@@ -11063,6 +11164,11 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Genstart Test"
 
 #
 msgid "Restart test"
@@ -11448,6 +11554,11 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "gem afspilningsliste ved afbrydelse"
+
+#
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Tryk OK for at aktivere det valgte grafiske tema."
 
@@ -11805,6 +11916,11 @@ msgstr ""
 msgid "Select CAId"
 msgstr "vælg CAId"
 
+#
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Vælg en film"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -11822,6 +11938,11 @@ msgstr "Vælg opgraderingskilde til redigering."
 #, fuzzy
 msgid "Select Service"
 msgstr "Vælg en film"
+
+#
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Vælg opgraderingskilde til redigering."
 
 #
 #, fuzzy
@@ -12080,6 +12201,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "vælg stien til film"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -12197,10 +12324,10 @@ msgstr "Vælg backup placering"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
-msgstr "Vælg din udebyder, og tryk OK for at starte søgningen"
-
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -12418,6 +12545,9 @@ msgid "Set action when movie playback is finished."
 msgstr "Opførsel når en film startes"
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -12669,6 +12799,10 @@ msgstr "Vis WLAN Status"
 msgid "Show Weather Widget"
 msgstr ""
 
+#, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Vis krypteringsinfo i infobar"
+
 #
 #, fuzzy
 msgid "Show alternatives"
@@ -12729,6 +12863,16 @@ msgstr "Vis krypteringsinfo i infobar"
 #, fuzzy
 msgid "Show current mode"
 msgstr "vis program detaljer"
+
+#
+#, fuzzy
+msgid "Show default after description"
+msgstr "vis udvidet beskrivelse"
+
+#
+#, fuzzy
+msgid "Show default on new line"
+msgstr "vis infoinje"
 
 msgid "Show detailed event info"
 msgstr "Vi detaljeret programinfo"
@@ -12945,12 +13089,26 @@ msgstr ""
 msgid "Show servicelist or movies"
 msgstr "Vis status ikoner i filmliset"
 
+#
+#, fuzzy
+msgid "Show setup default values"
+msgstr "vis program detaljer"
+
 #, fuzzy
 msgid "Show simple second infobar"
 msgstr "Vis ekstra infobar"
 
 msgid "Show single service EPG"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Show softcam information"
+msgstr "vis infoinje"
+
+#, fuzzy
+msgid "Show softcam setup in extensions menu"
+msgstr "Vis kanalistevalg menu"
 
 msgid "Show softcam startup in extensions menu"
 msgstr ""
@@ -13304,6 +13462,16 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Software"
+
+#
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Software"
+
+#
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Software"
 
@@ -13431,6 +13599,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -13579,8 +13750,18 @@ msgstr "Start test"
 
 #
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "StartTid"
+
+#
+#, fuzzy
 msgid "Start directory"
 msgstr "start mappe"
+
+#
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Start test"
 
 #
 msgid "Start from the beginning"
@@ -13631,6 +13812,11 @@ msgstr "start tidsforskydning"
 msgid "Start with list screen"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "StartTid"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -13676,6 +13862,11 @@ msgstr "Stop"
 #, fuzzy
 msgid "Stop PiP"
 msgstr "stoppe billede i billede"
+
+#
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Sleep Timer"
 
 #
 #, fuzzy
@@ -14519,11 +14710,6 @@ msgstr "Der er aktuelt ingen udestående handlinger."
 
 #
 #, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "Ingen tilgængelige opdateringer."
-
-#
-#, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "Vælg venligst en spilleliste til sletning..."
 
@@ -14642,6 +14828,12 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr ""
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -15032,6 +15224,11 @@ msgstr "Til undertekst valg"
 #
 msgid "Today"
 msgstr "Idag"
+
+#
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Konfigurations Type"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -16124,9 +16321,6 @@ msgstr "Vågn op signal fra TV"
 msgid "Wakeup time"
 msgstr "Vågn op"
 
-msgid "Wakeup timer"
-msgstr ""
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -16283,7 +16477,13 @@ msgstr "Hvad vil du søge?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -16621,6 +16821,11 @@ msgstr "gul"
 
 msgid "Yellow DVB subtitles"
 msgstr "Gule DVD undertekster"
+
+#
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Vælg backup placering"
 
 #, fuzzy
 msgid "Yemen"
@@ -17096,10 +17301,6 @@ msgid "about to start"
 msgstr "er ved at starte"
 
 #
-msgid "activate network adapter configuration"
-msgstr "aktiver opsætning for netværksadapter"
-
-#
 #, fuzzy
 msgid "active"
 msgstr "tilføj alternativer"
@@ -17479,10 +17680,6 @@ msgstr ""
 #
 msgid "exit DVD player or return to file browser"
 msgstr "luk  DVD afspiller eller tilbage til filoversigt"
-
-#
-msgid "exit network adapter configuration"
-msgstr "luk netværksadapter opsætning"
 
 #
 msgid "exit networkadapter setup menu"
