--- a/po/gl.po
+++ b/po/gl.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2020-12-27 12:25+0100\n"
 "Last-Translator: Luis A. Martínez <luis.a.martinez@gmail.com>\n"
 "Language-Team: LAMS\n"
@@ -233,6 +233,9 @@ msgstr "%A %e %B %Y"
 #
 msgid "%H:%M"
 msgstr "%H:%M"
+
+msgid "%R"
+msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
 msgstr ""
@@ -474,6 +477,10 @@ msgid_plural "%s updated packages available"
 msgstr[0] "%s actualización dispoñible"
 msgstr[1] "%s actualizacións dispoñibles"
 
+#, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
 #, fuzzy, python-format
 msgid "%s: %s"
 msgstr "%s/%s: %s"
@@ -713,10 +720,6 @@ msgstr "=SEN FLUXO\n"
 #
 #, fuzzy
 msgid "?"
-msgstr "??"
-
-#
-msgid "??"
 msgstr "??"
 
 #
@@ -1905,6 +1908,10 @@ msgstr "Redución de ruído en bloque"
 msgid "Blue"
 msgstr "Azul"
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "Seleccionar funcion"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr "Bolivia (Estado Plurinacional de)"
 
@@ -2170,6 +2177,14 @@ msgstr "Canadá"
 #
 msgid "Cancel"
 msgstr "Cancelar"
+
+#, fuzzy
+msgid "Cancel any changed settings and exit"
+msgstr "Cancelar cualquera cambio de texto e saír"
+
+#, fuzzy
+msgid "Cancel any changed settings and exit all menus"
+msgstr "Cancela cualquier cambio na skin activa e sae de todos os menús"
 
 msgid "Cancel any changes to the currently active skin"
 msgstr "Cancelar cualquiera cambio na skin activa"
@@ -2633,6 +2648,10 @@ msgstr "Enviar información"
 #
 msgid "Common Interface"
 msgstr "Interface Común"
+
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "Accións de selección de skin"
 
 #
 msgid "Communication"
@@ -3603,6 +3622,11 @@ msgstr "Tipo de temporizador predeterminado"
 msgid "Default+Picon"
 msgstr "Predeterminado+Picon"
 
+#
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Por defecto"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3695,6 +3719,14 @@ msgstr "Borrar imaxe"
 #
 msgid "Delete all the text"
 msgstr "Borrar todo o texto"
+
+#, fuzzy
+msgid "Delete character to left of cursor or select AM times"
+msgstr "Borrar o carácter á esquerda do cursor de texto"
+
+#, fuzzy
+msgid "Delete character under cursor or select PM times"
+msgstr "Eliminar o carácter debaixo do cursor de texto"
 
 #
 #, fuzzy
@@ -3940,6 +3972,11 @@ msgstr "Desactivar o evento actual pero non os seguintes"
 msgid "Disable move mode"
 msgstr "Desactivar o modo movemento"
 
+#
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Variables de formato dispoñibles"
+
 msgid "Disable timer"
 msgstr "Desactivar temporizador"
 
@@ -4004,6 +4041,9 @@ msgstr "Amosar a duración da película na lista (agás no estilo de liña únic
 #
 msgid "Display setup"
 msgstr "Configuración de pantalla"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 msgid "Djibouti"
 msgstr "Djibouti"
@@ -4248,6 +4288,10 @@ msgstr "esta gravación"
 
 msgid "Don't save and stop timeshift"
 msgstr "Non gardar e deter o timeshift"
+
+#, fuzzy
+msgid "Don't show default"
+msgstr "Establecer valor predeterminado"
 
 #
 msgid "Don't stop current event but disable coming events"
@@ -4661,6 +4705,11 @@ msgstr ""
 msgid "Enable volume control with arrow buttons"
 msgstr "Activar o control de volume cos botóns de frecha"
 
+#
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Temporizador de repouso"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr "Activar o cambio con CH+/-, B+/-, P+/-"
 
@@ -4956,6 +5005,9 @@ msgstr "Supera o disco de doble capa!"
 
 msgid "Exceeds dual layer medium!"
 msgstr "Supera o disco de doble capa!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 #
 msgid "Execution finished!!"
@@ -6065,9 +6117,6 @@ msgstr "Rede oculta"
 msgid "Hide"
 msgstr "Ocultar"
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr "Ocultar a lista de canles en modo radio"
 
@@ -6376,6 +6425,9 @@ msgstr "Importar desde o URL do receptor remoto"
 
 msgid "Import remote receiver URL"
 msgstr "Importar URL do receptor remoto"
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
+msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
 msgstr ""
@@ -6796,7 +6848,8 @@ msgstr "Italiano"
 msgid "Italy"
 msgstr "Italia"
 
-msgid "Items per page "
+#, fuzzy
+msgid "Items per page"
 msgstr "Elementos por páxina "
 
 msgid "Items per page for list screen"
@@ -6827,6 +6880,12 @@ msgstr "Ir ao principio da lista"
 #
 msgid "Jump to end of list"
 msgstr "Ir ao final da lista"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #
 msgid "Jump to next marked position"
@@ -7438,6 +7497,10 @@ msgstr ""
 msgid "Menu"
 msgstr "Menú"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "Seleccionar funcion"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr "Orde de menú (%s)"
@@ -7674,6 +7737,14 @@ msgid "Move Picture in Picture"
 msgstr "Mover PiP"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Baixar na lista"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Baixar na lista"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Baixar na lista"
 
@@ -7721,6 +7792,16 @@ msgstr "Mover o cursor de texto ao primeiro carácter"
 msgid "Move the text cursor to the last character"
 msgstr "Mover o cursor de texto ao último carácter"
 
+#
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "Mover á skin seguinte"
+
+#
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "Mover á skin seguinte"
+
 msgid "Move to position X"
 msgstr "Mover á posición X"
 
@@ -7739,6 +7820,14 @@ msgstr "Mover á páxina anterior"
 #
 msgid "Move to the previous skin"
 msgstr "Mover á skin anterior"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Subir na lista"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Subir na lista"
 
 #, fuzzy
 msgid "Move up list"
@@ -8735,10 +8824,6 @@ msgstr "PPanel"
 msgid "PREVIOUS"
 msgstr ""
 
-#, fuzzy
-msgid "PVR"
-msgstr "OVR"
-
 #
 msgid "Package list update"
 msgstr "Actualización de lista de paquetes"
@@ -9320,6 +9405,10 @@ msgid "Please wait, Loading image."
 msgstr "Por favor, espera… Cargando lista…"
 
 #, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Por favor, espera, reiniciando softcam."
+
+#, fuzzy
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr "Por favor, espera, reiniciando softcam."
 
@@ -9329,6 +9418,14 @@ msgstr "Por favor, espera, reiniciando softcam."
 
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Por favor, espera, reiniciando softcam."
+
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Por favor, espera, reiniciando softcam."
+
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Por favor, espera, reiniciando softcam."
 
 #
@@ -9957,9 +10054,6 @@ msgstr "Rec"
 msgid "Recall to previous service"
 msgstr "Volver ao servizo anterior"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #
 #, fuzzy
 msgid "Reception lists"
@@ -10358,6 +10452,10 @@ msgstr "Reiniciar a rede"
 msgid "Restart both"
 msgstr "Reiniciar ambos"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "Establecer o servizo de inicio"
+
 msgid "Restart enigma"
 msgstr "Reiniciar enigma"
 
@@ -10371,6 +10469,10 @@ msgstr "Reiniciar o softcam"
 
 #, fuzzy
 msgid "Restart secondary softcam"
+msgstr "Reiniciar o softcam"
+
+#, fuzzy
+msgid "Restart softcam"
 msgstr "Reiniciar o softcam"
 
 #
@@ -10721,6 +10823,10 @@ msgstr "Gardar a configuración e os datos EPG"
 msgid "Save EPG every (in hours)"
 msgstr ""
 
+#, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "Gardar/Inserir texto e saír"
+
 #
 msgid "Save and activate the currently selected skin"
 msgstr "Gardar e activar a skin seleccionada"
@@ -11049,6 +11155,11 @@ msgstr ""
 msgid "Select CAId"
 msgstr "Seleccionar CAId"
 
+#
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Seleccionar película"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr "Selecciona Fast DiSEqC se o teu sistema aéreo o admite. Se non estás seguro, selecciona ‘non’."
 
@@ -11065,6 +11176,10 @@ msgstr "Seleccionar fonte de actualización"
 #, fuzzy
 msgid "Select Service"
 msgstr "Seleccionar película"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Seleccionar Softcam"
 
 #
 #, fuzzy
@@ -11294,6 +11409,12 @@ msgstr "Seleccionar o número de modelo do dispositivo SCR. Se o número de mode
 msgid "Select the movie path"
 msgstr "Seleccionar a ruta á película"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr "Seleccionar o protocolo utilizado polo dispositivo SCR. As opcións son ‘SCR Unicable’ (Unicable) o ‘SCR JESS’ (JESS, tamén coñecido como Unicable II)."
 
@@ -11401,11 +11522,11 @@ msgstr "Seleccionar resolución horizontal:"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr "Seleccionar o provedor e a rexión. Se non aparecen na lista terás que seleccionar un dos outros ‘tipos de escaneo de servizo’."
 
-msgid "Select your provider, and press OK to start the scan"
-msgstr "Seleccionar o provedor e premer OK para iniciar o escaneo"
-
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Seleccionar a rexión. Se non está dispoñible cambiar “País” a “todos” e seleccionar unha das alternativas predeterminadas."
+
+msgid "Select, toggle, process or edit the current entry"
+msgstr ""
 
 msgid "Selected mount point is already used by another drive."
 msgstr ""
@@ -11607,6 +11728,9 @@ msgstr "Establecer a acción cando remate a reprodución de películas."
 
 msgid "Set all hotkey to default?"
 msgstr "Establecer todas as teclas de acceso directo aos valores predeterminados?"
+
+msgid "Set all the settings back as they were"
+msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
 msgstr "Establecer sintonizadores alternativos de reserva para DVB-T/C ou ATSC"
@@ -11832,6 +11956,10 @@ msgstr "Amosar estado de WLAN"
 msgid "Show Weather Widget"
 msgstr "Amosar alternativas"
 
+#, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Amosar información de criptografía na barra de información"
+
 #
 msgid "Show alternatives"
 msgstr "Amosar alternativas"
@@ -11889,6 +12017,16 @@ msgstr "Amosar información de criptografía na barra de información"
 #, fuzzy
 msgid "Show current mode"
 msgstr "Deter o fluxo actual"
+
+#
+#, fuzzy
+msgid "Show default after description"
+msgstr "Amosar descrición ampliada"
+
+#
+#, fuzzy
+msgid "Show default on new line"
+msgstr "Amosar liña de información"
 
 msgid "Show detailed event info"
 msgstr "Amosar información detallada do evento"
@@ -12066,12 +12204,25 @@ msgstr "Amosar iconas do tipo de servizo"
 msgid "Show servicelist or movies"
 msgstr "Amosar lista de servizos ou películas"
 
+#
+#, fuzzy
+msgid "Show setup default values"
+msgstr "Amosar detalles do evento"
+
 #, fuzzy
 msgid "Show simple second infobar"
 msgstr "Amosar segunda barra de información"
 
 msgid "Show single service EPG"
 msgstr "Amosar EPG de servizo único"
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Información do xestor de software"
+
+#, fuzzy
+msgid "Show softcam setup in extensions menu"
+msgstr "Amosar configuración de softcam no menú de extensións"
 
 #, fuzzy
 msgid "Show softcam startup in extensions menu"
@@ -12384,6 +12535,14 @@ msgid "SocketMMI"
 msgstr "SocketMMI"
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Configuración de softcam"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Configuración de softcam"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Configuración de softcam"
 
@@ -12509,6 +12668,10 @@ msgid "Sort list:"
 msgstr "Ordenar lista:"
 
 msgid "Sort order for menu entries"
+msgstr "Orden de clasificación das entradas de menú"
+
+#, fuzzy
+msgid "Sort order for setup entries"
 msgstr "Orden de clasificación das entradas de menú"
 
 msgid "Sort plugins list to default?"
@@ -12645,9 +12808,18 @@ msgstr "Repouso "
 msgid "Start"
 msgstr "Comezar a proba"
 
+#, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Temporizador de repouso"
+
 #
 msgid "Start directory"
 msgstr "Directorio de inicio"
+
+#
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Comezar a proba"
 
 #
 msgid "Start from the beginning"
@@ -12690,6 +12862,10 @@ msgstr "Comezar o timeshift"
 
 msgid "Start with list screen"
 msgstr "Comezar coa pantalla de lista"
+
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Tempo de inactividade do temporizador de repouso"
 
 msgid "Start/stop slide show"
 msgstr ""
@@ -12734,6 +12910,10 @@ msgstr "Deter"
 #
 msgid "Stop PiP"
 msgstr "Deter PiP"
+
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Temporizador de repouso"
 
 msgid "Stop all current recordings"
 msgstr "Deter todas as gravacións actuais"
@@ -13533,11 +13713,6 @@ msgid "There are currently no outstanding actions."
 msgstr "Neste momento non hai ninguna acción pendente."
 
 #
-#, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "Non hai actualizacións dispoñibles."
-
-#
 msgid "There are no saved playlists to delete!"
 msgstr "Non hai listas de reprodución gardadas para eliminar!"
 
@@ -13672,6 +13847,14 @@ msgstr "Esta opción permite activar o filtro de suavizado para controlar o proc
 
 msgid "This option allows you enable the vertical scaler dejagging."
 msgstr "Esta opción permite activar o desdentado do escalado vertical."
+
+#, fuzzy
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr "Esta opción permite reforzar os tonos azuis da imaxe."
+
+#, fuzzy
+msgid "This option allows you to alphabetically sort setup menu entries."
+msgstr "Esta opción permite amosar todos os símbolos na pantalla."
 
 msgid "This option allows you to boost the blue tones in the picture."
 msgstr "Esta opción permite reforzar os tonos azuis da imaxe."
@@ -14053,6 +14236,11 @@ msgstr "Á selección de subtítulos"
 #
 msgid "Today"
 msgstr "Hoxe"
+
+#
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Modo Configuración: %s"
 
 msgid "Toggle HDMI In"
 msgstr "Alternar entrada HDMI"
@@ -15057,10 +15245,6 @@ msgstr "Sinal de activación desde o TV"
 msgid "Wakeup time"
 msgstr "Hora de activación"
 
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Hora de activación"
-
 msgid "Wakeup type"
 msgstr "Tipo de activación"
 
@@ -15228,8 +15412,14 @@ msgstr "Queres esto?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
 msgstr "Cando está activado, enigma2 carga os buqués desvinculados. Isto significa que os buqués que están dispoñibles, pero que no están incluídos nos ficheiros bouquets.tv o bouquets.radio, seguirán cargándose. Isto permíteche, por exemplo, manter os teus propios buqués de usuario mentres se actualizan os axustes instalados"
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
+msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
 msgstr "Cando está activado, a ventá PiP pódese pechar co botón 'saír'."
@@ -15564,6 +15754,10 @@ msgstr "Amarelo"
 
 msgid "Yellow DVB subtitles"
 msgstr "Subtítulos DVB amarelos"
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Seleccionar funcion"
 
 msgid "Yemen"
 msgstr "Iemen"
@@ -16061,10 +16255,6 @@ msgstr "unha gui para asignar canles/provedores/caids aos módulos de common int
 msgid "about to start"
 msgstr "vas comezar"
 
-#
-msgid "activate network adapter configuration"
-msgstr "activar a configuración do adaptador de rede"
-
 msgid "active"
 msgstr "activo"
 
@@ -16427,10 +16617,6 @@ msgstr "executar cortes (necesita o complemento MovieCut)"
 #
 msgid "exit DVD player or return to file browser"
 msgstr "saír do reprodutor DVD o volver a sistema de ficheiros"
-
-#
-msgid "exit network adapter configuration"
-msgstr "saír da configuración do adaptador de rede"
 
 #
 msgid "exit networkadapter setup menu"
