--- a/po/hr.po
+++ b/po/hr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2020-03-03 08:50+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -230,6 +230,9 @@ msgstr ""
 #
 msgid "%H:%M"
 msgstr "%S:%M"
+
+msgid "%R"
+msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
 msgstr ""
@@ -469,6 +472,10 @@ msgstr[0] ""
 msgstr[1] ""
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -706,10 +713,6 @@ msgstr ""
 #
 #, fuzzy
 msgid "?"
-msgstr "??"
-
-#
-msgid "??"
 msgstr "??"
 
 #
@@ -1948,6 +1951,11 @@ msgstr ""
 msgid "Blue"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Blue button function"
+msgstr "Lokacija sigurnosne kopije"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2201,6 +2209,12 @@ msgstr ""
 #
 msgid "Cancel"
 msgstr "Odustani"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2687,6 +2701,11 @@ msgstr "Kontrast"
 #
 msgid "Common Interface"
 msgstr "Zajedničko sučelje"
+
+#
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "EPG selektor "
 
 #
 msgid "Communication"
@@ -3672,6 +3691,11 @@ msgstr "Započeti Snimanje?"
 msgid "Default+Picon"
 msgstr "Trenutne postavke"
 
+#
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Tvorni?ko"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3769,6 +3793,12 @@ msgstr "Brisanje neuspješno!"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "obriši unos playliste"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #
 #, fuzzy
@@ -4024,6 +4054,11 @@ msgstr "Zaustavi trenutni događaj ali ne i ostale dolazeće"
 msgid "Disable move mode"
 msgstr "onemoguće mod premještanja"
 
+#
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "onemoguće mod premještanja"
+
 msgid "Disable timer"
 msgstr ""
 
@@ -4092,6 +4127,9 @@ msgstr ""
 #, fuzzy
 msgid "Display setup"
 msgstr "Postavke prednjeg zaslona"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #
 #, fuzzy
@@ -4334,6 +4372,11 @@ msgstr "ovo snimanje"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "zaustavi vrem.pomak"
+
+#
+#, fuzzy
+msgid "Don't show default"
+msgstr "standardne postavke stila liste"
 
 #
 msgid "Don't stop current event but disable coming events"
@@ -4765,6 +4808,11 @@ msgstr "Omogućeno"
 msgid "Enable volume control with arrow buttons"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Tajmer spavanja"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -5073,6 +5121,9 @@ msgstr ""
 
 #
 msgid "Exceeds dual layer medium!"
+msgstr ""
+
+msgid "Exclude first CA device"
 msgstr ""
 
 #
@@ -6252,9 +6303,6 @@ msgstr ""
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr ""
 
@@ -6566,6 +6614,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6990,7 +7041,7 @@ msgstr "Talijanski"
 msgid "Italy"
 msgstr "Talijanski"
 
-msgid "Items per page "
+msgid "Items per page"
 msgstr ""
 
 msgid "Items per page for list screen"
@@ -7021,6 +7072,12 @@ msgstr ""
 #, fuzzy
 msgid "Jump to end of list"
 msgstr "skoči na kraj liste"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #
 #, fuzzy
@@ -7647,6 +7704,11 @@ msgstr ""
 msgid "Menu"
 msgstr "Izbornik "
 
+#
+#, fuzzy
+msgid "Menu button function"
+msgstr "Lokacija sigurnosne kopije"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7897,6 +7959,16 @@ msgstr "Aktiviraj Sliku u Slici"
 
 #
 #, fuzzy
+msgid "Move down a line"
+msgstr "Pokreći na zapad"
+
+#
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Pokreći na zapad"
+
+#
+#, fuzzy
 msgid "Move down list"
 msgstr "Pokreći na zapad"
 
@@ -7944,6 +8016,16 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "Zaštiti usluge"
+
+#
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "editiraj alternative"
+
 msgid "Move to position X"
 msgstr ""
 
@@ -7962,6 +8044,16 @@ msgstr "prebaci u predhodnu poduslugu "
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "prebaci u predhodnu poduslugu "
+
+#
+#, fuzzy
+msgid "Move up a line"
+msgstr "Pokreći na istok"
+
+#
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Pokreći na istok"
 
 #
 #, fuzzy
@@ -9002,9 +9094,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 #
 msgid "Package list update"
 msgstr "Nadogradnja liste paketa"
@@ -9605,6 +9694,11 @@ msgstr "Molimo pričekajte dok je skeniranje u tijeku..."
 msgid "Please wait, Loading image."
 msgstr "Molim pričekajte... Učitavam listu..."
 
+#
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Molim pričekajte... Učitavam listu..."
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -9616,6 +9710,16 @@ msgstr "Molim pričekajte... Učitavam listu..."
 #
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Molim pričekajte... Učitavam listu..."
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Molim pričekajte... Učitavam listu..."
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Molim pričekajte... Učitavam listu..."
 
 #
@@ -10285,9 +10389,6 @@ msgstr "Sri"
 msgid "Recall to previous service"
 msgstr "prebaci u predhodnu poduslugu "
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #
 #, fuzzy
 msgid "Reception lists"
@@ -10726,6 +10827,11 @@ msgstr "Odaberi Mrežni adapter"
 msgid "Restart both"
 msgstr "Restart"
 
+#
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "Zamjeni prozore"
+
 msgid "Restart enigma"
 msgstr ""
 
@@ -10738,6 +10844,11 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Restart"
 
 #
 msgid "Restart test"
@@ -11110,6 +11221,11 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "pohrani playlistu"
+
+#
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Ukloni trenutno odabrani titl"
 
@@ -11463,6 +11579,11 @@ msgstr ""
 msgid "Select CAId"
 msgstr "Odaberi Tvrdi Disk"
 
+#
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Odaberi film"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -11478,6 +11599,11 @@ msgstr "Odaberi film"
 #
 #, fuzzy
 msgid "Select Service"
+msgstr "Odaberi film"
+
+#
+#, fuzzy
+msgid "Select Softcam"
 msgstr "Odaberi film"
 
 #
@@ -11738,6 +11864,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "Odaberi film"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -11844,10 +11976,10 @@ msgstr "Lokacija sigurnosne kopije"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
+msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
 
-msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -12058,6 +12190,9 @@ msgid "Set action when movie playback is finished."
 msgstr ""
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -12301,6 +12436,11 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Informacije"
+
+#
+#, fuzzy
 msgid "Show alternatives"
 msgstr "prikaži alternative"
 
@@ -12357,6 +12497,14 @@ msgstr ""
 #, fuzzy
 msgid "Show current mode"
 msgstr "prikaži proširene infor. "
+
+#
+#, fuzzy
+msgid "Show default after description"
+msgstr "prikaži proširene informacije"
+
+msgid "Show default on new line"
+msgstr ""
 
 msgid "Show detailed event info"
 msgstr ""
@@ -12569,10 +12717,23 @@ msgstr "Prikaži kretanje motora"
 
 #
 #, fuzzy
+msgid "Show setup default values"
+msgstr "prikaži proširene infor. "
+
+#
+#, fuzzy
 msgid "Show simple second infobar"
 msgstr "prikaži info transpondera"
 
 msgid "Show single service EPG"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Informacije"
+
+msgid "Show softcam setup in extensions menu"
 msgstr ""
 
 msgid "Show softcam startup in extensions menu"
@@ -12906,6 +13067,16 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Instaliram Softver..."
+
+#
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Instaliram Softver..."
+
+#
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Instaliram Softver..."
 
@@ -13028,6 +13199,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -13176,8 +13350,17 @@ msgstr "Početno vrijeme "
 
 #
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Početno vrijeme "
+
+#
+#, fuzzy
 msgid "Start directory"
 msgstr "/var direktorij"
+
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Brzo pretraživanje"
 
 #
 msgid "Start from the beginning"
@@ -13228,6 +13411,11 @@ msgstr "pokreni vrem.pomak"
 msgid "Start with list screen"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Početno vrijeme "
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -13273,6 +13461,11 @@ msgstr "Zaustavi  "
 #, fuzzy
 msgid "Stop PiP"
 msgstr "zaustavi PiP"
+
+#
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Tajmer spavanja"
 
 #
 #, fuzzy
@@ -14074,9 +14267,6 @@ msgstr "Dostupno je najmanje %d ažuriranja."
 msgid "There are currently no outstanding actions."
 msgstr ""
 
-msgid "There are no items currently available for this screen."
-msgstr ""
-
 #
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -14193,6 +14383,12 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr ""
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -14551,6 +14747,11 @@ msgstr ""
 #
 msgid "Today"
 msgstr "Danas"
+
+#
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Mod Konfiguracije"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -15601,11 +15802,6 @@ msgstr ""
 msgid "Wakeup time"
 msgstr "Tajmer spavanja"
 
-#
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Tajmer spavanja"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -15748,7 +15944,13 @@ msgstr "Što želite skenirati?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -16074,6 +16276,11 @@ msgstr ""
 
 msgid "Yellow DVB subtitles"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Lokacija sigurnosne kopije"
 
 msgid "Yemen"
 msgstr ""
@@ -16525,10 +16732,6 @@ msgid "about to start"
 msgstr "spremni za početak"
 
 #
-msgid "activate network adapter configuration"
-msgstr ""
-
-#
 #, fuzzy
 msgid "active"
 msgstr "dodaj alternative"
@@ -16904,10 +17107,6 @@ msgstr ""
 
 #
 msgid "exit DVD player or return to file browser"
-msgstr ""
-
-#
-msgid "exit network adapter configuration"
 msgstr ""
 
 #
