--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2019-12-06 15:54+0100\n"
 "Last-Translator: GeirJ <dummy@dummy.com>\n"
 "Language-Team: GeirJ\n"
@@ -236,6 +236,9 @@ msgstr ""
 msgid "%H:%M"
 msgstr "%T:%M"
 
+msgid "%R"
+msgstr ""
+
 #, fuzzy
 msgid "%Y-%m-%d %H:%M:%S"
 msgstr "%d.%m.%Y %H:%M"
@@ -464,6 +467,10 @@ msgid_plural "%s updated packages available"
 msgstr[0] "%s ny oppdatering er tilgjengelig"
 msgstr[1] "%s nye oppdateringer er tilgjengelige"
 
+#, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
 #, fuzzy, python-format
 msgid "%s: %s"
 msgstr "Prosessor:"
@@ -688,10 +695,6 @@ msgid "=NO STREAM\n"
 msgstr ""
 
 msgid "?"
-msgstr ""
-
-#
-msgid "??"
 msgstr ""
 
 #
@@ -1906,6 +1909,11 @@ msgstr "Slå av støy reduksjon"
 msgid "Blue"
 msgstr "Blå"
 
+#
+#, fuzzy
+msgid "Blue button function"
+msgstr "Velg handling"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2161,6 +2169,12 @@ msgstr ""
 #
 msgid "Cancel"
 msgstr "Avbryt"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2648,6 +2662,11 @@ msgstr "Kontrast"
 #
 msgid "Common Interface"
 msgstr "Common Interface"
+
+#
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "Velg handling"
 
 #
 msgid "Communication"
@@ -3630,6 +3649,11 @@ msgstr "Opptakstype"
 msgid "Default+Picon"
 msgstr "Standardinnstilling"
 
+#
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Standard"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3724,6 +3748,12 @@ msgstr "Slett timer"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "Slett oppføring i opptaksliste"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #
 #, fuzzy
@@ -3971,6 +4001,11 @@ msgid "Disable move mode"
 msgstr "slå av flytte modus"
 
 #
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Tilgjengelige formater"
+
+#
 msgid "Disable timer"
 msgstr "Deaktiver tidtaker"
 
@@ -4036,6 +4071,9 @@ msgstr ""
 
 msgid "Display setup"
 msgstr "Display innstilling"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #
 #, fuzzy
@@ -4286,6 +4324,11 @@ msgstr "dette opptaket"
 #
 msgid "Don't save and stop timeshift"
 msgstr "Ikke lagre og stoppe tidsskift"
+
+#
+#, fuzzy
+msgid "Don't show default"
+msgstr "Sett standard"
 
 msgid "Don't stop current event but disable coming events"
 msgstr "Ikke stopp nåværende program men slå av neste program"
@@ -4713,6 +4756,10 @@ msgstr "Aktivert"
 msgid "Enable volume control with arrow buttons"
 msgstr "Aktiver lyd kontroll med piltastene"
 
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Slå av med hjelp av tidtaker"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr "Aktiver zapping med CH+/-, P+/-"
 
@@ -5032,6 +5079,9 @@ msgstr "Overgår to lags medium!"
 #
 msgid "Exceeds dual layer medium!"
 msgstr "Overgår to lags medium!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 #
 msgid "Execution finished!!"
@@ -6195,9 +6245,6 @@ msgstr "Skjult nettverk"
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr "Skjul kanalliste i radiomodus"
 
@@ -6520,6 +6567,9 @@ msgstr "Ekstern-mottakers URL"
 #, fuzzy
 msgid "Import remote receiver URL"
 msgstr "Ekstern-mottakers URL"
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
+msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
 msgstr ""
@@ -6941,7 +6991,8 @@ msgstr "Italiensk"
 msgid "Italy"
 msgstr "Italiensk"
 
-msgid "Items per page "
+#, fuzzy
+msgid "Items per page"
 msgstr "Kanaler pr. side"
 
 msgid "Items per page for list screen"
@@ -6972,6 +7023,12 @@ msgstr "Gå til begynnelse av listen"
 #
 msgid "Jump to end of list"
 msgstr "Gå til slutten av listen"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #
 msgid "Jump to next marked position"
@@ -7591,6 +7648,11 @@ msgstr ""
 msgid "Menu"
 msgstr "Meny"
 
+#
+#, fuzzy
+msgid "Menu button function"
+msgstr "Velg handling"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7836,6 +7898,14 @@ msgid "Move Picture in Picture"
 msgstr "Aktiver bilde i bilde"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Gå nedover listen"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Gå nedover listen"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Gå nedover listen"
 
@@ -7887,6 +7957,16 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "gå til til neste oppføring"
+
+#
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "gå til til neste oppføring"
+
 msgid "Move to position X"
 msgstr "Flytt til posisjon X"
 
@@ -7908,6 +7988,14 @@ msgstr "spol tilbake til forrige kapittel"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "gå til til forrige oppføring"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Gå oppover listen"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Gå oppover listen"
 
 #, fuzzy
 msgid "Move up list"
@@ -8935,9 +9023,6 @@ msgstr "PPanel"
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 #
 msgid "Package list update"
 msgstr "Oppdaterer programvare"
@@ -9519,6 +9604,11 @@ msgstr "Vennligst vent mens vi tester nettverket..."
 msgid "Please wait, Loading image."
 msgstr "Vennligst vent... henter liste..."
 
+#
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Vennligst vent (laster ned softcam)"
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -9530,6 +9620,16 @@ msgstr "Vennligst vent (laster ned softcam)"
 #
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Vennligst vent (laster ned softcam)"
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Vennligst vent (laster ned softcam)"
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Vennligst vent (laster ned softcam)"
 
 #
@@ -10171,9 +10271,6 @@ msgstr "Rød"
 msgid "Recall to previous service"
 msgstr "Husk tilbake til forrige kanal"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #
 #, fuzzy
 msgid "Reception lists"
@@ -10579,6 +10676,10 @@ msgstr "Start nettverk på nytt"
 msgid "Restart both"
 msgstr "Start på nytt- test"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "Sett denne som oppstartskanal"
+
 msgid "Restart enigma"
 msgstr "Start enigma2 på nytt"
 
@@ -10590,6 +10691,10 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Start på nytt- test"
 
 msgid "Restart test"
 msgstr "Start på nytt- test"
@@ -10961,6 +11066,10 @@ msgid "Save EPG every (in hours)"
 msgstr ""
 
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "Lagre og avslutt"
+
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Trykk OK for å ta i bruk det valgte skin."
 
@@ -11285,6 +11394,10 @@ msgstr ""
 msgid "Select CAId"
 msgstr "Velg CAId"
 
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Velg opptak"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -11300,6 +11413,10 @@ msgstr "Velg oppdateringssted"
 #, fuzzy
 msgid "Select Service"
 msgstr "Velg opptak"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Velg oppdateringssted"
 
 #, fuzzy
 msgid "Select Software Update"
@@ -11542,6 +11659,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "Velg målmappe for opptak"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -11652,10 +11775,10 @@ msgstr "Velg handling"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
-msgstr "Velg distributør og trykk OK for å søke"
-
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -11859,6 +11982,9 @@ msgstr "Still inn valg når avspilling startes."
 
 msgid "Set all hotkey to default?"
 msgstr "Sette alle snarveistaster til standard?"
+
+msgid "Set all the settings back as they were"
+msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
 msgstr ""
@@ -12089,6 +12215,10 @@ msgstr "Vis WLAN status"
 msgid "Show Weather Widget"
 msgstr ""
 
+#, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Vis krypteringsinfo på informasjonslinjen"
+
 #
 #, fuzzy
 msgid "Show alternatives"
@@ -12149,6 +12279,16 @@ msgstr "Vis krypteringsinfo på informasjonslinjen"
 #, fuzzy
 msgid "Show current mode"
 msgstr "Gjeldende modus: %s \n"
+
+#
+#, fuzzy
+msgid "Show default after description"
+msgstr "Vis utvidet beskrivelse"
+
+#
+#, fuzzy
+msgid "Show default on new line"
+msgstr "Vis informasjonslinjen"
 
 msgid "Show detailed event info"
 msgstr "Vis detaljert programinformasjon"
@@ -12344,12 +12484,26 @@ msgstr "Vis indikator for tunertype"
 msgid "Show servicelist or movies"
 msgstr "Vis kanalliste eller opptak"
 
+#
+#, fuzzy
+msgid "Show setup default values"
+msgstr "Vis programdetaljer"
+
 #, fuzzy
 msgid "Show simple second infobar"
 msgstr "Vis ekstra infobar"
 
 msgid "Show single service EPG"
 msgstr "Vis enkel EPG"
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Programvareadministrasjon"
+
+#
+#, fuzzy
+msgid "Show softcam setup in extensions menu"
+msgstr "Vis i utvidet meny"
 
 #
 #, fuzzy
@@ -12679,6 +12833,14 @@ msgid "SocketMMI"
 msgstr ""
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Softcam type"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Softcam type"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Softcam type"
 
@@ -12800,6 +12962,10 @@ msgstr "Sorter liste:"
 
 #, fuzzy
 msgid "Sort order for menu entries"
+msgstr "Motor kommando forsøker igjen"
+
+#, fuzzy
+msgid "Sort order for setup entries"
 msgstr "Motor kommando forsøker igjen"
 
 msgid "Sort plugins list to default?"
@@ -12943,8 +13109,16 @@ msgid "Start"
 msgstr "Start tid"
 
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Tidtaker"
+
+#, fuzzy
 msgid "Start directory"
 msgstr "start katalog"
+
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Aktiver automatisk hurtigsøk"
 
 #
 msgid "Start from the beginning"
@@ -12989,6 +13163,10 @@ msgstr "Start tidsskift"
 msgid "Start with list screen"
 msgstr "Start med listevisning"
 
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Inaktivitets tidtaker"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -13031,6 +13209,10 @@ msgstr "Stopp"
 #
 msgid "Stop PiP"
 msgstr "Stopp PiP"
+
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Tidtaker"
 
 msgid "Stop all current recordings"
 msgstr "Stopp alle pågående opptak"
@@ -13819,10 +14001,6 @@ msgstr "Det er minst %d oppdateringer tilgjengelig."
 msgid "There are currently no outstanding actions."
 msgstr "Det er for tiden ingen utestående handlinger."
 
-#, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "Det er ingen oppdateringer tilgjengelig."
-
 #
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -13947,6 +14125,14 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+#
+#, fuzzy
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr "Vis i utvidet meny"
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -14331,6 +14517,11 @@ msgstr "Undertekst valg"
 #
 msgid "Today"
 msgstr "Idag"
+
+#
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Oppsettstype: %s"
 
 msgid "Toggle HDMI In"
 msgstr "Skru av/på HDMI inn"
@@ -15356,10 +15547,6 @@ msgstr "Slå på signal fra TV"
 msgid "Wakeup time"
 msgstr "Oppvåknings type"
 
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Oppvåknings type"
-
 msgid "Wakeup type"
 msgstr "Oppvåknings type"
 
@@ -15522,9 +15709,15 @@ msgstr "Hva vil du skanne?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 #, fuzzy
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
 msgstr "Når aktivert vil enigma2 laste kanallister som ikke er tilknyttet mottakeren. Dette kan være kanallister som er tilgjengelig, men ikke tilknyttet radio eller tv kanallistene for mottakeren. Dette tillater at du f.eks. kan holde på egne favoritt kanallister under oppgradering av instillinger"
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
+msgstr ""
 
 #, fuzzy
 msgid "When enabled the Picture in Picture window can be closed with 'exit' button."
@@ -15863,6 +16056,11 @@ msgstr "Gul"
 
 msgid "Yellow DVB subtitles"
 msgstr "Gul DVB undertekst"
+
+#
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Velg handling"
 
 #, fuzzy
 msgid "Yemen"
@@ -16334,10 +16532,6 @@ msgid "about to start"
 msgstr "starter opp"
 
 #
-msgid "activate network adapter configuration"
-msgstr "aktiver nettverksinnstilling"
-
-#
 #, fuzzy
 msgid "active"
 msgstr "Alternativ"
@@ -16712,10 +16906,6 @@ msgstr ""
 #
 msgid "exit DVD player or return to file browser"
 msgstr "avslutt DVD spiller eller gå tilbake til fil søker"
-
-#
-msgid "exit network adapter configuration"
-msgstr "avslutt nettverksinnstilling"
 
 #
 msgid "exit networkadapter setup menu"
