--- a/po/nn.po
+++ b/po/nn.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2013-10-23 19:15+0100\n"
 "Last-Translator: andy1 <dmmm8000pvr@gmail.com>\n"
 "Language-Team: none\n"
@@ -224,6 +224,9 @@ msgid "%A %e %B %Y"
 msgstr ""
 
 msgid "%H:%M"
+msgstr ""
+
+msgid "%R"
 msgstr ""
 
 msgid "%Y-%m-%d %H:%M:%S"
@@ -454,6 +457,10 @@ msgstr[0] "%s oppdatert programvare er tilgjengelig"
 msgstr[1] "%s oppdaterte programvarepakker er tilgjengelig"
 
 #, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
+
+#, python-format
 msgid "%s: %s"
 msgstr ""
 
@@ -675,10 +682,6 @@ msgid "=NO STREAM\n"
 msgstr ""
 
 msgid "?"
-msgstr ""
-
-#
-msgid "??"
 msgstr ""
 
 #
@@ -1870,6 +1873,10 @@ msgstr "Blokkere støy reduksjon"
 msgid "Blue"
 msgstr ""
 
+#, fuzzy
+msgid "Blue button function"
+msgstr "Velg sikkerhetskopi"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2119,6 +2126,12 @@ msgstr ""
 #
 msgid "Cancel"
 msgstr "Avbryt"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2595,6 +2608,11 @@ msgstr "Fortsett"
 #
 msgid "Common Interface"
 msgstr "Common Interface"
+
+#
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "EPG valg"
 
 #
 msgid "Communication"
@@ -3555,6 +3573,11 @@ msgstr "Opptakstype"
 msgid "Default+Picon"
 msgstr "Standardinnstilling"
 
+#
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Standard"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3649,6 +3672,12 @@ msgstr "Slette fil"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "Slette oppføring i spilliste"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #
 #, fuzzy
@@ -3884,6 +3913,11 @@ msgstr ""
 msgid "Disable move mode"
 msgstr "slå av flytte modus"
 
+#
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Tilgjengelige format"
+
 msgid "Disable timer"
 msgstr ""
 
@@ -3948,6 +3982,9 @@ msgstr ""
 
 msgid "Display setup"
 msgstr "Frontpanel"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #
 #, fuzzy
@@ -4197,6 +4234,11 @@ msgstr "dette opptaket"
 
 msgid "Don't save and stop timeshift"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Don't show default"
+msgstr "standard liste"
 
 msgid "Don't stop current event but disable coming events"
 msgstr "Ikke stopp nåværende program men slå av neste program"
@@ -4618,6 +4660,10 @@ msgstr "Aktivert"
 msgid "Enable volume control with arrow buttons"
 msgstr ""
 
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Slå av med hjelp av tidtaker"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -4915,6 +4961,9 @@ msgstr "Overgår to lags medium!"
 #
 msgid "Exceeds dual layer medium!"
 msgstr "Overgår to lags medium!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 #
 msgid "Execution finished!!"
@@ -6032,9 +6081,6 @@ msgstr "Skjult nettverk"
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr "Skjul kanalliste i radiomodus"
 
@@ -6346,6 +6392,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -6766,7 +6815,8 @@ msgstr "Italiensk"
 msgid "Italy"
 msgstr "Italiensk"
 
-msgid "Items per page "
+#, fuzzy
+msgid "Items per page"
 msgstr "Kanaler pr. side"
 
 msgid "Items per page for list screen"
@@ -6797,6 +6847,12 @@ msgstr "Gå til begynnelse av listen"
 #
 msgid "Jump to end of list"
 msgstr "Gå til slutten av listen"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #
 msgid "Jump to next marked position"
@@ -7405,6 +7461,10 @@ msgstr ""
 msgid "Menu"
 msgstr "Meny"
 
+#, fuzzy
+msgid "Menu button function"
+msgstr "Velg sikkerhetskopi"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7650,6 +7710,14 @@ msgid "Move Picture in Picture"
 msgstr "Flytt Bilde i Bilde"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Gå nedover listen"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Gå nedover listen"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Gå nedover listen"
 
@@ -7701,6 +7769,16 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "gå til til neste oppføring"
+
+#
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "gå til til neste oppføring"
+
 msgid "Move to position X"
 msgstr "Flyttet til posisjon X"
 
@@ -7722,6 +7800,14 @@ msgstr "spol tilbake til forrige kapittel"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "gå til til forrige oppføring"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Gå oppover listen"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Gå oppover listen"
 
 #, fuzzy
 msgid "Move up list"
@@ -8723,9 +8809,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 #
 msgid "Package list update"
 msgstr "Oppdaterer programvare"
@@ -9291,6 +9374,11 @@ msgstr "Vennligst vent... henter liste..."
 
 #
 #, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Vennligst vent (laster ned softcam)"
+
+#
+#, fuzzy
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr "Vennligst vent (laster ned softcam)"
 
@@ -9302,6 +9390,16 @@ msgstr "Vennligst vent (laster ned softcam)"
 #
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Vennligst vent (laster ned softcam)"
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Vennligst vent (laster ned softcam)"
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Vennligst vent (laster ned softcam)"
 
 #
@@ -9911,9 +10009,6 @@ msgstr "Opptaks innstilling"
 msgid "Recall to previous service"
 msgstr ""
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #
 #, fuzzy
 msgid "Reception lists"
@@ -10311,6 +10406,11 @@ msgstr "Starte nettverk på nytt"
 msgid "Restart both"
 msgstr "Starte på nytt- test"
 
+#
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "start klipp her"
+
 msgid "Restart enigma"
 msgstr "Starte enigma2 på nytt"
 
@@ -10323,6 +10423,10 @@ msgstr "Starte på nytt- test"
 
 #, fuzzy
 msgid "Restart secondary softcam"
+msgstr "Starte på nytt- test"
+
+#, fuzzy
+msgid "Restart softcam"
 msgstr "Starte på nytt- test"
 
 msgid "Restart test"
@@ -10679,6 +10783,9 @@ msgstr ""
 msgid "Save EPG every (in hours)"
 msgstr ""
 
+msgid "Save all changed settings and exit"
+msgstr ""
+
 #, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Trykk OK for å ta i bruk det valgte skin."
@@ -10997,6 +11104,10 @@ msgstr ""
 msgid "Select CAId"
 msgstr "Velg CAId"
 
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Velg opptak"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -11012,6 +11123,10 @@ msgstr "Velg oppdateringssted"
 #, fuzzy
 msgid "Select Service"
 msgstr "Velg opptak"
+
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Velg en film"
 
 #, fuzzy
 msgid "Select Software Update"
@@ -11243,6 +11358,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "Velg målmappe for opptak"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -11354,10 +11475,10 @@ msgstr ""
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
-msgstr "Velg leverandør og trykk OK for å starte søk"
-
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -11553,6 +11674,9 @@ msgid "Set action when movie playback is finished."
 msgstr "Still inn oppførsel når avspilling startes."
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -11780,6 +11904,10 @@ msgstr "Vis WLAN status"
 msgid "Show Weather Widget"
 msgstr ""
 
+#, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Vis krypteringsinfo på informasjonslinjen"
+
 #
 #, fuzzy
 msgid "Show alternatives"
@@ -11838,6 +11966,16 @@ msgstr "Vis krypteringsinfo på informasjonslinjen"
 #, fuzzy
 msgid "Show current mode"
 msgstr "Stoppe oppføring"
+
+#
+#, fuzzy
+msgid "Show default after description"
+msgstr "Vis utvidet beskrivelse"
+
+#
+#, fuzzy
+msgid "Show default on new line"
+msgstr "Vis informasjonslinje"
 
 msgid "Show detailed event info"
 msgstr "Vis detaljert programinformasjon"
@@ -12020,12 +12158,26 @@ msgstr "Vis kanal picons"
 msgid "Show servicelist or movies"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Show setup default values"
+msgstr "Vis programdetaljer"
+
 #, fuzzy
 msgid "Show simple second infobar"
 msgstr "Vis ekstra informasjonslinje"
 
 msgid "Show single service EPG"
 msgstr "Vis enkel kanal EPG"
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Programvareadministrasjon"
+
+#
+#, fuzzy
+msgid "Show softcam setup in extensions menu"
+msgstr "Vis i utvidet meny"
 
 #
 #, fuzzy
@@ -12346,6 +12498,14 @@ msgid "SocketMMI"
 msgstr ""
 
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Programvare oppsett"
+
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Programvare oppsett"
+
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Programvare oppsett"
 
@@ -12466,6 +12626,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -12609,8 +12772,16 @@ msgid "Start"
 msgstr "Starttid"
 
 #, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Tidtaker"
+
+#, fuzzy
 msgid "Start directory"
 msgstr "start katalog"
+
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Hurtigsøk"
 
 #
 msgid "Start from the beginning"
@@ -12653,6 +12824,10 @@ msgstr "Starte tidsskift"
 
 msgid "Start with list screen"
 msgstr "Start med listevisning"
+
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Inaktivitets tidtaker"
 
 msgid "Start/stop slide show"
 msgstr ""
@@ -12698,6 +12873,10 @@ msgstr "Stoppe"
 #
 msgid "Stop PiP"
 msgstr "Stoppe PiP (bilde i bilde)"
+
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Tidtaker"
 
 msgid "Stop all current recordings"
 msgstr ""
@@ -13471,10 +13650,6 @@ msgstr "Det er minst %d oppdateringer tilgjengelig."
 msgid "There are currently no outstanding actions."
 msgstr "Det er for tiden ingen utestående handlinger."
 
-#, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "Det er ingen oppdateringer tilgjengelig."
-
 #
 #, fuzzy
 msgid "There are no saved playlists to delete!"
@@ -13594,6 +13769,14 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+#
+#, fuzzy
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr "Vis i utvidet meny"
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -13978,6 +14161,11 @@ msgstr "Til valg av undertekster"
 #
 msgid "Today"
 msgstr "Idag"
+
+#
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Oppsettstype: %s"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -14981,10 +15169,6 @@ msgstr "Våkne signal fra TV"
 msgid "Wakeup time"
 msgstr ""
 
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Slå av med hjelp av tidtaker"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -15145,7 +15329,13 @@ msgstr "Ønsker du dette?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 #, fuzzy
@@ -15478,6 +15668,10 @@ msgstr ""
 
 msgid "Yellow DVB subtitles"
 msgstr "Gul DVB undertekst"
+
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Velg sikkerhetskopi"
 
 #, fuzzy
 msgid "Yemen"
@@ -15954,10 +16148,6 @@ msgid "about to start"
 msgstr "starter opp"
 
 #
-msgid "activate network adapter configuration"
-msgstr "aktiver nettverksinnstilling"
-
-#
 #, fuzzy
 msgid "active"
 msgstr "Alternativ"
@@ -16320,10 +16510,6 @@ msgstr ""
 #
 msgid "exit DVD player or return to file browser"
 msgstr "avslutt DVD spiller eller gå til til fil søker"
-
-#
-msgid "exit network adapter configuration"
-msgstr "avslutt nettverksinnstilling"
 
 #
 msgid "exit networkadapter setup menu"
