--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 10:35+0200\n"
+"POT-Creation-Date: 2024-06-04 18:59+0200\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -235,6 +235,9 @@ msgstr "%A %e %B %Y"
 #
 msgid "%H:%M"
 msgstr "%H:%M"
+
+msgid "%R"
+msgstr ""
 
 #, fuzzy
 msgid "%Y-%m-%d %H:%M:%S"
@@ -463,6 +466,10 @@ msgid "%s updated package available"
 msgid_plural "%s updated packages available"
 msgstr[0] "%s uppdatering tillgänglig."
 msgstr[1] "%s uppdateringar tillgängliga."
+
+#, python-format
+msgid "%s%s(Default: %s)"
+msgstr ""
 
 #, fuzzy, python-format
 msgid "%s: %s"
@@ -703,10 +710,6 @@ msgstr ""
 #
 #, fuzzy
 msgid "?"
-msgstr "??"
-
-#
-msgid "??"
 msgstr "??"
 
 #
@@ -1961,6 +1964,11 @@ msgstr "Blockera brusreducering"
 msgid "Blue"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Blue button function"
+msgstr "Välj backupdestination"
+
 msgid "Bolivia (Plurinational State of)"
 msgstr ""
 
@@ -2218,6 +2226,12 @@ msgstr ""
 #
 msgid "Cancel"
 msgstr "Avbryt"
+
+msgid "Cancel any changed settings and exit"
+msgstr ""
+
+msgid "Cancel any changed settings and exit all menus"
+msgstr ""
 
 msgid "Cancel any changes to the currently active skin"
 msgstr ""
@@ -2714,6 +2728,11 @@ msgstr "Kontrast"
 #
 msgid "Common Interface"
 msgstr "Common Interface"
+
+#
+#, fuzzy
+msgid "Common Setup Actions"
+msgstr "EPG val"
 
 #
 msgid "Communication"
@@ -3715,6 +3734,11 @@ msgstr "Inpelningstyp"
 msgid "Default+Picon"
 msgstr "Grundinställningar"
 
+#
+#, fuzzy, python-format
+msgid "Default: '%s'."
+msgstr "Grund"
+
 msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
 msgstr ""
 
@@ -3810,6 +3834,12 @@ msgstr "Ta bort fil"
 #, fuzzy
 msgid "Delete all the text"
 msgstr "Ta bort post i spellista"
+
+msgid "Delete character to left of cursor or select AM times"
+msgstr ""
+
+msgid "Delete character under cursor or select PM times"
+msgstr ""
 
 #
 #, fuzzy
@@ -4063,6 +4093,11 @@ msgstr "Avsluta nuvarande program men inte kommande"
 msgid "Disable move mode"
 msgstr "avaktivera flyttläge"
 
+#
+#, fuzzy
+msgid "Disable operator profiles"
+msgstr "Tillgängliga format variabler"
+
 msgid "Disable timer"
 msgstr ""
 
@@ -4130,6 +4165,9 @@ msgstr ""
 #
 msgid "Display setup"
 msgstr "Displayinställningar"
+
+msgid "Display the virtual keyboard for data entry"
+msgstr ""
 
 #
 #, fuzzy
@@ -4380,6 +4418,11 @@ msgstr "denna inspelning"
 #, fuzzy
 msgid "Don't save and stop timeshift"
 msgstr "Avsluta timeshift"
+
+#
+#, fuzzy
+msgid "Don't show default"
+msgstr "liststil grundläge"
 
 #
 msgid "Don't stop current event but disable coming events"
@@ -4819,6 +4862,11 @@ msgstr "Aktiverad"
 msgid "Enable volume control with arrow buttons"
 msgstr "Välj videoingång med upp/ner knapparna"
 
+#
+#, fuzzy
+msgid "Enable wakeup timer"
+msgstr "Insomningstimer"
+
 msgid "Enable zapping with CH+/-, B+/-, P+/-"
 msgstr ""
 
@@ -5123,6 +5171,9 @@ msgstr "Överskrider dual layer media!"
 
 msgid "Exceeds dual layer medium!"
 msgstr "Överskrider dual layer media!"
+
+msgid "Exclude first CA device"
+msgstr ""
 
 msgid "Execution finished!!"
 msgstr "Exekvering färdig!!"
@@ -6306,9 +6357,6 @@ msgstr "Dolt nätverk"
 msgid "Hide"
 msgstr ""
 
-msgid "Hide and confirm invalid key message"
-msgstr ""
-
 msgid "Hide channel list in radio mode"
 msgstr "Dölj kanallistan i radioläge"
 
@@ -6626,6 +6674,9 @@ msgid "Import from remote receiver URL"
 msgstr ""
 
 msgid "Import remote receiver URL"
+msgstr ""
+
+msgid "In Setup screens choose whether to show the default value of the selected item in the description field."
 msgstr ""
 
 msgid "In most cases this should be set to No. Only enable if you have a very specific need."
@@ -7052,7 +7103,8 @@ msgstr "Italienska"
 msgid "Italy"
 msgstr "Italienska"
 
-msgid "Items per page "
+#, fuzzy
+msgid "Items per page"
 msgstr "Kanaler per sida vid Normalt läge (PiG)"
 
 msgid "Items per page for list screen"
@@ -7083,6 +7135,12 @@ msgstr "Gå till början av listan"
 #
 msgid "Jump to end of list"
 msgstr "Gå till slutet av listan"
+
+msgid "Jump to first item in list or the start of text"
+msgstr ""
+
+msgid "Jump to last item in list or the end of text"
+msgstr ""
 
 #
 msgid "Jump to next marked position"
@@ -7710,6 +7768,11 @@ msgstr ""
 msgid "Menu"
 msgstr "Meny"
 
+#
+#, fuzzy
+msgid "Menu button function"
+msgstr "Välj backupdestination"
+
 #, python-format
 msgid "Menusort (%s)"
 msgstr ""
@@ -7959,6 +8022,14 @@ msgid "Move Picture in Picture"
 msgstr "Aktivera Bild i Bild"
 
 #, fuzzy
+msgid "Move down a line"
+msgstr "Gå ner i listan"
+
+#, fuzzy
+msgid "Move down a screen"
+msgstr "Gå ner i listan"
+
+#, fuzzy
 msgid "Move down list"
 msgstr "Gå ner i listan"
 
@@ -8012,6 +8083,16 @@ msgstr ""
 msgid "Move the text cursor to the last character"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Move to first line / screen"
+msgstr "flytta ner till nästa post"
+
+#
+#, fuzzy
+msgid "Move to last line / screen"
+msgstr "flytta ner till nästa post"
+
 msgid "Move to position X"
 msgstr "Flytta till position X"
 
@@ -8034,6 +8115,14 @@ msgstr "spola bakåt till föregående kapitel"
 #, fuzzy
 msgid "Move to the previous skin"
 msgstr "flytta upp till föregående post"
+
+#, fuzzy
+msgid "Move up a line"
+msgstr "Gå upp i listan"
+
+#, fuzzy
+msgid "Move up a screen"
+msgstr "Gå upp i listan"
 
 #, fuzzy
 msgid "Move up list"
@@ -9072,9 +9161,6 @@ msgstr ""
 msgid "PREVIOUS"
 msgstr ""
 
-msgid "PVR"
-msgstr ""
-
 #
 msgid "Package list update"
 msgstr "Söker efter uppdateringar"
@@ -9683,6 +9769,11 @@ msgstr "Vänligen vänta medan vi testar ditt nätverk..."
 msgid "Please wait, Loading image."
 msgstr "Vänligen vänta... Laddar lista..."
 
+#
+#, fuzzy
+msgid "Please wait, restarting cardserver."
+msgstr "Vänligen vänta (Laddar ner softcam)"
+
 msgid "Please wait, restarting primary and secondary softcam."
 msgstr ""
 
@@ -9694,6 +9785,16 @@ msgstr "Vänligen vänta (Laddar ner softcam)"
 #
 #, fuzzy
 msgid "Please wait, restarting secondary softcam."
+msgstr "Vänligen vänta (Laddar ner softcam)"
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam and cardserver."
+msgstr "Vänligen vänta (Laddar ner softcam)"
+
+#
+#, fuzzy
+msgid "Please wait, restarting softcam."
 msgstr "Vänligen vänta (Laddar ner softcam)"
 
 #
@@ -10374,9 +10475,6 @@ msgstr "Rec"
 msgid "Recall to previous service"
 msgstr "Återvänd till föregående tjänst"
 
-msgid "Receiver or driver does not support FCC"
-msgstr ""
-
 #
 #, fuzzy
 msgid "Reception lists"
@@ -10813,6 +10911,10 @@ msgstr "Omstart nätverk"
 msgid "Restart both"
 msgstr "Omstart test"
 
+#, fuzzy
+msgid "Restart cardserver"
+msgstr "använd som startkanal"
+
 msgid "Restart enigma"
 msgstr "Starta om Enigma"
 
@@ -10825,6 +10927,11 @@ msgstr ""
 
 msgid "Restart secondary softcam"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Restart softcam"
+msgstr "Omstart test"
 
 #
 msgid "Restart test"
@@ -11213,6 +11320,11 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Save all changed settings and exit"
+msgstr "spara spellista vid avslut"
+
+#
+#, fuzzy
 msgid "Save and activate the currently selected skin"
 msgstr "Tryck OK för aktivera valt utseende."
 
@@ -11560,6 +11672,11 @@ msgstr ""
 msgid "Select CAId"
 msgstr "Välj CAId"
 
+#
+#, fuzzy
+msgid "Select Card Server"
+msgstr "Välj en film"
+
 msgid "Select Fast DiSEqC if your aerial system supports this. If you are unsure select 'no'."
 msgstr ""
 
@@ -11577,6 +11694,11 @@ msgstr "Ange uppgraderingskälla."
 #, fuzzy
 msgid "Select Service"
 msgstr "Välj en film"
+
+#
+#, fuzzy
+msgid "Select Softcam"
+msgstr "Ange uppgraderingskälla."
 
 #
 #, fuzzy
@@ -11828,6 +11950,12 @@ msgstr ""
 msgid "Select the movie path"
 msgstr "Välj film sökväg"
 
+msgid "Select the next item in list or move cursor right"
+msgstr ""
+
+msgid "Select the previous item in list or move cursor left"
+msgstr ""
+
 msgid "Select the protocol used by your SCR device. Choices are 'SCR Unicable' (Unicable), or 'SCR JESS' (JESS, also known as Unicable II)."
 msgstr ""
 
@@ -11945,10 +12073,10 @@ msgstr "Välj backupdestination"
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
 msgstr ""
 
-msgid "Select your provider, and press OK to start the scan"
-msgstr "Välj din leverantör och tryck OK för att starta sökningen"
-
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select, toggle, process or edit the current entry"
 msgstr ""
 
 msgid "Selected mount point is already used by another drive."
@@ -12158,6 +12286,9 @@ msgid "Set action when movie playback is finished."
 msgstr "Konfigurera beteendet när en film startas."
 
 msgid "Set all hotkey to default?"
+msgstr ""
+
+msgid "Set all the settings back as they were"
 msgstr ""
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
@@ -12398,6 +12529,10 @@ msgstr "Visa WLAN Status"
 msgid "Show Weather Widget"
 msgstr ""
 
+#, fuzzy
+msgid "Show additional information on infobar"
+msgstr "Visa krypteringsinfo i infobalken"
+
 #
 #, fuzzy
 msgid "Show alternatives"
@@ -12457,6 +12592,16 @@ msgstr "Visa krypteringsinfo i infobalken"
 #, fuzzy
 msgid "Show current mode"
 msgstr "Visa programdetaljer"
+
+#
+#, fuzzy
+msgid "Show default after description"
+msgstr "Visa utökad beskrivning"
+
+#
+#, fuzzy
+msgid "Show default on new line"
+msgstr "Visa Infolinje"
 
 msgid "Show detailed event info"
 msgstr "Visa detaljerad programinfo"
@@ -12662,12 +12807,25 @@ msgstr "Visa typ av serviceikon"
 msgid "Show servicelist or movies"
 msgstr "Visa typ av serviceikon"
 
+#
+#, fuzzy
+msgid "Show setup default values"
+msgstr "Visa programdetaljer"
+
 #, fuzzy
 msgid "Show simple second infobar"
 msgstr "Visa andra infobalken"
 
 msgid "Show single service EPG"
 msgstr "Visa singel kanal-EPG"
+
+#, fuzzy
+msgid "Show softcam information"
+msgstr "Mjukvaruhanterare information"
+
+#, fuzzy
+msgid "Show softcam setup in extensions menu"
+msgstr "Visa i utökningsmeny"
 
 #, fuzzy
 msgid "Show softcam startup in extensions menu"
@@ -13005,6 +13163,16 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Softcam Setup"
+msgstr "Mjukvara"
+
+#
+#, fuzzy
+msgid "Softcam setup"
+msgstr "Mjukvara"
+
+#
+#, fuzzy
 msgid "Softcam startup"
 msgstr "Mjukvara"
 
@@ -13130,6 +13298,9 @@ msgid "Sort list:"
 msgstr ""
 
 msgid "Sort order for menu entries"
+msgstr ""
+
+msgid "Sort order for setup entries"
 msgstr ""
 
 msgid "Sort plugins list to default?"
@@ -13277,10 +13448,19 @@ msgstr "Viloläge om"
 msgid "Start"
 msgstr "Starta test"
 
+#, fuzzy
+msgid "Start Sleeptimer"
+msgstr "Insomningstimer"
+
 #
 #, fuzzy
 msgid "Start directory"
 msgstr "startbibliotek"
+
+#
+#, fuzzy
+msgid "Start fastscan"
+msgstr "Starta test"
 
 #
 msgid "Start from the beginning"
@@ -13328,6 +13508,10 @@ msgstr "Starta timeshift"
 msgid "Start with list screen"
 msgstr "Börja med listskärmen"
 
+#, fuzzy
+msgid "Start/Stop Sleeptimer"
+msgstr "Inaktiv Insomningstimer"
+
 msgid "Start/stop slide show"
 msgstr ""
 
@@ -13372,6 +13556,10 @@ msgstr "Avsluta"
 #
 msgid "Stop PiP"
 msgstr "Avsluta BiB"
+
+#, fuzzy
+msgid "Stop Sleeptimer"
+msgstr "Insomningstimer"
 
 #
 #, fuzzy
@@ -14191,11 +14379,6 @@ msgstr "För tillfället är det inga åtgärder att utföra."
 
 #
 #, fuzzy
-msgid "There are no items currently available for this screen."
-msgstr "Inga uppdateringar tillgängliga."
-
-#
-#, fuzzy
 msgid "There are no saved playlists to delete!"
 msgstr "Vänligen välj en spellista för borttagning..."
 
@@ -14314,6 +14497,13 @@ msgid "This option allows you enable smoothing filter to control the dithering p
 msgstr ""
 
 msgid "This option allows you enable the vertical scaler dejagging."
+msgstr ""
+
+#, fuzzy
+msgid "This option allows you to add the softcam setup in the extensions menu."
+msgstr "Visa i utökningsmeny"
+
+msgid "This option allows you to alphabetically sort setup menu entries."
 msgstr ""
 
 msgid "This option allows you to boost the blue tones in the picture."
@@ -14695,6 +14885,10 @@ msgstr "Till undertextval"
 #
 msgid "Today"
 msgstr "Idag"
+
+#, fuzzy
+msgid "Toggle Configuration Mode or AutoDisqc"
+msgstr "Konfigurationsläge: %s"
 
 msgid "Toggle HDMI In"
 msgstr ""
@@ -15759,11 +15953,6 @@ msgstr "Väcknings signal från TV:n"
 msgid "Wakeup time"
 msgstr "Väck"
 
-#
-#, fuzzy
-msgid "Wakeup timer"
-msgstr "Insomningstimer"
-
 msgid "Wakeup type"
 msgstr ""
 
@@ -15929,7 +16118,13 @@ msgstr "Vad vill du söka efter?"
 msgid "What should happen when you start it for the first time?"
 msgstr ""
 
+msgid "When enabled a simplified version from the second infobar is shown. This can also be toggled instantly by holding the OK buttin when the second infobar is visible. The infobar will shortly disappear and then shown in the other mode."
+msgstr ""
+
 msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
+msgstr ""
+
+msgid "When enabled extra information is shown on the infobar. This can also be toggled instantly by holding the OK button when the inforbar is not visible."
 msgstr ""
 
 #, fuzzy
@@ -16272,6 +16467,11 @@ msgstr "gul"
 
 msgid "Yellow DVB subtitles"
 msgstr "Gula DVB-undertexter"
+
+#
+#, fuzzy
+msgid "Yellow button function"
+msgstr "Välj backupdestination"
 
 #, fuzzy
 msgid "Yemen"
@@ -16762,10 +16962,6 @@ msgid "about to start"
 msgstr "håller på att starta"
 
 #
-msgid "activate network adapter configuration"
-msgstr "aktivera nätverkskorts konfiguration"
-
-#
 #, fuzzy
 msgid "active"
 msgstr "Lägg till alternativ"
@@ -17143,10 +17339,6 @@ msgstr ""
 #
 msgid "exit DVD player or return to file browser"
 msgstr "avsluta DVD spelare eller återvänd till fil utforskare"
-
-#
-msgid "exit network adapter configuration"
-msgstr "avsluta nätverkskorts konfiguration"
 
 #
 msgid "exit networkadapter setup menu"
